--- a/xyyd/bdr.htm
+++ b/xyyd/bdr.htm
@@ -1,24 +1,25 @@
 <html>
 
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=gb2312">
-<title>й╧м╫╧Б╡йё╨фДй╣нрртг╟йгр╩╦Ж╨э╠©╣дхк</title>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<title>Д╫©Е╬▓Е┘┴Е╫╘О╪ Е┘╤Е╝·Ф┬▒Д╩╔Е┴█Ф≤╞Д╦─Д╦╙Е╬┬Г╛╗Г └Д╨╨</title>
 </head>
 
 <body>
 
-<p>й╧м╫╧Б╡йё╨фДй╣нрртг╟йгр╩╦Ж╨э╠©╣дхк<br>
+<p>Д╫©Е╬▓Е┘┴Е╫╘О╪ Е┘╤Е╝·Ф┬▒Д╩╔Е┴█Ф≤╞Д╦─Д╦╙Е╬┬Г╛╗Г └Д╨╨<br>
 <br>
 <br>
 <br>
 <br>
-╣╚вт╢снртз2010дЙпеяЖак╦ПрЮцЯиЯрт╨Сё╛нр╥╒ожнр╣джгилр╩облАиЩ╨э╤Ю║ё<br>
+Д╫├Х┤╙Д╩▌Ф┬▒Е°╗2010Е╧╢Д©║Д╩╟Д╨├Х▒⌡Д╨╕Ф╟▒Г╔·Д╩╔Е░▌О╪▄Ф┬▒Е▐▒Г▌╟Ф┬▒Г └Ф≥╨Е∙├Д╦─Д╦▀Ф▐░Е█┤Е╬┬Е╓ Ц─┌<br>
 <br>
 <br>
-╥╒ожвт╪╨╠╩©╙фТаклЛ╦Ё║ё<br>
+Е▐▒Г▌╟Х┤╙Е╥╠Х╒╚Е╪─Е░╞Д╨├Е╓╘Х╣▀Ц─┌<br>
 <br>
 <br>
-║║</p>
+Ц──</p><iframe MARGINWIDTH=0 MARGINHEIGHT=0 HSPACE=0 VSPACE=0 FRAMEBORDER=0 SCROLLING=no src="../scsl/footer.html" height=Б─°autoБ─² width="100%"></iframe>
+
 
 </body>
 
