--- a/xyyd/dxy.htm
+++ b/xyyd/dxy.htm
@@ -1,13 +1,14 @@
 <html>
 
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=gb2312">
-<title>µØÏÉÒ»Á÷:Ò®öÕÓë¸ðÒàÃñËùÎªÇø±ð²»Éõ´ó</title>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<title>åœ°ä»™ä¸€æµ:è€¶ç¨£ä¸Žè‘›äº¦æ°‘æ‰€ä¸ºåŒºåˆ«ä¸ç”šå¤§</title>
 </head>
 
 <body>
 
-<p>µØÏÉÒ»Á÷:Ò®öÕÓë¸ðÒàÃñËùÎªÇø±ð²»Éõ´ó</p>
+<p>åœ°ä»™ä¸€æµ:è€¶ç¨£ä¸Žè‘›äº¦æ°‘æ‰€ä¸ºåŒºåˆ«ä¸ç”šå¤§</p><iframe MARGINWIDTH=0 MARGINHEIGHT=0 HSPACE=0 VSPACE=0 FRAMEBORDER=0 SCROLLING=no src="../scsl/footer.html" height=â€œautoâ€ width="100%"></iframe>
+
 
 </body>
 
