--- a/xyyd/esy.htm
+++ b/xyyd/esy.htm
@@ -1,8 +1,8 @@
 <html>
 
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=gb2312">
-<title>°®ÉÏÒ»¿ÅÐÇÐÇ :¸ðÒàÃñÓÐ×Ê¸ñ³ÆÉñ</title>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<title>çˆ±ä¸Šä¸€é¢—æ˜Ÿæ˜Ÿ :è‘›äº¦æ°‘æœ‰èµ„æ ¼ç§°ç¥ž</title>
 </head>
 
 <body>
@@ -26,20 +26,20 @@
 													<font style="FONT-SIZE: 9pt" face="Arial, Helvetica, sans-serif">
 													<div align="left">
 														<font face="Verdana">
-														°®ÉÏÒ»¿ÅÐÇÐÇ :¸ðÒàÃñÓÐ×Ê¸ñ³ÆÉñ</font></div>
+														çˆ±ä¸Šä¸€é¢—æ˜Ÿæ˜Ÿ :è‘›äº¦æ°‘æœ‰èµ„æ ¼ç§°ç¥ž</font></div>
 													<div align="left">
 														<font face="Verdana">
 														<br>
-														°®ÉÏÒ»¿ÅÐÇÐÇ 
-														:¸ðÒàÃñÓÐ×Ê¸ñ³ÆÉñ£¬µ«Ëû²»ÊÇÁé»êºÍÌìÌÃµÄ´´ÔìÕß</font></div>
+														çˆ±ä¸Šä¸€é¢—æ˜Ÿæ˜Ÿ 
+														:è‘›äº¦æ°‘æœ‰èµ„æ ¼ç§°ç¥žï¼Œä½†ä»–ä¸æ˜¯çµé­‚å’Œå¤©å ‚çš„åˆ›é€ è€…</font></div>
 													<font face="Verdana"><br>
 													</font><br>
 													</font><br>
-¡¡</td>
+ã€€</td>
 												</tr>
 											</table>
 											<br>
-¡¡</td>
+ã€€</td>
 										</tr>
 									</table>
 								</div>
@@ -51,7 +51,8 @@
 			</div>
 		</div>
 	</div>
-</div>
+</div><iframe MARGINWIDTH=0 MARGINHEIGHT=0 HSPACE=0 VSPACE=0 FRAMEBORDER=0 SCROLLING=no src="../scsl/footer.html" height=â€œautoâ€ width="100%"></iframe>
+
 
 </body>
 
