--- a/xyyd/gjg.htm
+++ b/xyyd/gjg.htm
@@ -1,8 +1,8 @@
 <html>
 
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=gb2312">
-<title>¹ú¼Ê¹²²úÖ÷ÒåÔË¶¯Áù´óÁìÐä:Âí¶÷ÁÐË¹Ã«¸ð
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<title>å›½é™…å…±äº§ä¸»ä¹‰è¿åŠ¨å…­å¤§é¢†è¢–:é©¬æ©åˆ—æ–¯æ¯›è‘›
 
 </title>
 </head>
@@ -10,10 +10,11 @@
 <body>
 
 <p><font style="FONT-SIZE: 12px" face="Verdana" color="#555555">
-¹ú¼Ê¹²²úÖ÷ÒåÔË¶¯Áù´óÁìÐä:Âí¶÷ÁÐË¹Ã«¸ð</font><br>
+å›½é™…å…±äº§ä¸»ä¹‰è¿åŠ¨å…­å¤§é¢†è¢–:é©¬æ©åˆ—æ–¯æ¯›è‘›</font><br>
 </p>
-<p>¸ðÒàÃñ<br>
-¡¡</font></p>
+<p>è‘›äº¦æ°‘<br>
+ã€€</font></p>
+<iframe MARGINWIDTH=0 MARGINHEIGHT=0 HSPACE=0 VSPACE=0 FRAMEBORDER=0 SCROLLING=no src="../scsl/footer.html" height=â€œautoâ€ width="100%"></iframe>
 
 </body>
 
