--- a/xyyd/jtb.htm
+++ b/xyyd/jtb.htm
@@ -1,8 +1,8 @@
 <html>
 
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=gb2312">
-<title>½ÐËû°Ñ×Ô¼º¸ãµÃÄÇÃ´ÖøÃû</title>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<title>å«ä»–æŠŠè‡ªå·±æžå¾—é‚£ä¹ˆè‘—å</title>
 </head>
 
 <body>
@@ -26,14 +26,14 @@
 													<font style="FONT-SIZE: 9pt" face="Arial, Helvetica, sans-serif">
 													<div align="left">
 														<font face="Verdana">
-														½ÐËû°Ñ×Ô¼º¸ãµÃÄÇÃ´ÖøÃû</font></div>
+														å«ä»–æŠŠè‡ªå·±æžå¾—é‚£ä¹ˆè‘—å</font></div>
 													<div align="left">
 														<font face="Verdana">
 														<br>
-														¸ðÒàÃñÊÇ×ÔÕÐËÀÂ·µÄ»õÉ«£¬Õæ×ÏÎ¢³öÖ±½ÓÇåËã£¬Ë­½ÐËû°Ñ×Ô¼º¸ãµÃÄÇÃ´ÖøÃû¡£</font></div>
+														è‘›äº¦æ°‘æ˜¯è‡ªæ‹›æ­»è·¯çš„è´§è‰²ï¼ŒçœŸç´«å¾®å‡ºç›´æŽ¥æ¸…ç®—ï¼Œè°å«ä»–æŠŠè‡ªå·±æžå¾—é‚£ä¹ˆè‘—åã€‚</font></div>
 													<font face="Verdana"><br>
 													</font><br>
-¡¡</font></td>
+ã€€</font></td>
 												</tr>
 											</table>
 											</td>
@@ -49,6 +49,7 @@
 		</div>
 	</div>
 </div>
+<iframe MARGINWIDTH=0 MARGINHEIGHT=0 HSPACE=0 VSPACE=0 FRAMEBORDER=0 SCROLLING=no src="../scsl/footer.html" height=â€œautoâ€ width="100%"></iframe>
 
 </body>
 
