--- a/xyyd/ms.htm
+++ b/xyyd/ms.htm
@@ -1,8 +1,8 @@
 <html>
 
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=gb2312">
-<title>¸ðÒàÃñ£¬Äã¿Ï¶¨ÁËÒÁ½ÌÓëÄÂÊ¥£¬µ«ÄÂÊ¥±¾×îºóÏÈÖª</title>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<title>è‘›äº¦æ°‘ï¼Œä½ è‚¯å®šäº†ä¼Šæ•™ä¸Žç©†åœ£ï¼Œä½†ç©†åœ£æœ¬æœ€åŽå…ˆçŸ¥</title>
 </head>
 
 <body>
@@ -22,13 +22,13 @@
 											<td id="postmessage_184" class="t_f">
 											<p style="TEXT-ALIGN: left; LINE-HEIGHT: 18px">
 											<font face="Verdana" style="font-size: 12px; color: rgb(85,85,85)">
-											¸ðÒàÃñ£¬Äã¿Ï¶¨ÁËÒÁ½ÌÓëÄÂÊ¥£¬µ«ÄÂÊ¥±¾×îºóÏÈÖª</font></p>
-											<p style="TEXT-ALIGN: left; LINE-HEIGHT: 18px">¡¡</p>
+											è‘›äº¦æ°‘ï¼Œä½ è‚¯å®šäº†ä¼Šæ•™ä¸Žç©†åœ£ï¼Œä½†ç©†åœ£æœ¬æœ€åŽå…ˆçŸ¥</font></p>
+											<p style="TEXT-ALIGN: left; LINE-HEIGHT: 18px">ã€€</p>
 											<p style="TEXT-ALIGN: left; LINE-HEIGHT: 18px">
 											<font face="Verdana" style="font-size: 12px; color: rgb(85,85,85)">
-											ÄãÔÚÔìÐÂ¾­µÄÊ±ºò³öÁËÒ»¸öÈÃÈË²»¿ÉÐÅ·þµÄã£ÂÛ£¬Äã¿Ï¶¨ÁËÒÁ½ÌÓëÄÂÊ¥£¬µ«ÄÂÊ¥±¾×îºóÏÈÖª£¬È»ÔòÄãÓÖ³ÆÔÙÊÀÒ®öÕ¼´Î½Ê¥ÈËÏÈÖª£¬ÊµÎªã££¬²»¿ÉÐÐ¡£</font></p>
+											ä½ åœ¨é€ æ–°ç»çš„æ—¶å€™å‡ºäº†ä¸€ä¸ªè®©äººä¸å¯ä¿¡æœçš„æ‚–è®ºï¼Œä½ è‚¯å®šäº†ä¼Šæ•™ä¸Žç©†åœ£ï¼Œä½†ç©†åœ£æœ¬æœ€åŽå…ˆçŸ¥ï¼Œç„¶åˆ™ä½ åˆç§°å†ä¸–è€¶ç¨£å³è°“åœ£äººå…ˆçŸ¥ï¼Œå®žä¸ºæ‚–ï¼Œä¸å¯è¡Œã€‚</font></p>
 											<br>
-¡¡</td>
+ã€€</td>
 										</tr>
 									</table>
 								</div>
@@ -41,6 +41,7 @@
 		</div>
 	</div>
 </div>
+<iframe MARGINWIDTH=0 MARGINHEIGHT=0 HSPACE=0 VSPACE=0 FRAMEBORDER=0 SCROLLING=no src="../scsl/footer.html" height=â€œautoâ€ width="100%"></iframe>
 
 </body>
 
