--- a/xyyd/nyd.htm
+++ b/xyyd/nyd.htm
@@ -1,8 +1,8 @@
 <html>
 
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=gb2312">
-<title>ÄÇÑùµÄ»°£¬¸ðÒàÃñ£¬°²ÉÌºé£¬µËÉÁµç£¬¼¾Èý±¦£¬ÎÄÏÊÃ÷...µÈÈË</title>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<title>é‚£æ ·çš„è¯ï¼Œè‘›äº¦æ°‘ï¼Œå®‰å•†æ´ªï¼Œé‚“é—ªç”µï¼Œå­£ä¸‰å®ï¼Œæ–‡é²œæ˜Ž...ç­‰äºº</title>
 </head>
 
 <body>
@@ -26,32 +26,32 @@
 													<font style="FONT-SIZE: 9pt" face="Arial, Helvetica, sans-serif">
 													<div align="left">
 														<font face="Verdana">
-														ÄÇÑùµÄ»°£¬¸ðÒàÃñ£¬°²ÉÌºé£¬µËÉÁµç£¬¼¾Èý±¦£¬ÎÄÏÊÃ÷...µÈÈË</font></div>
+														é‚£æ ·çš„è¯ï¼Œè‘›äº¦æ°‘ï¼Œå®‰å•†æ´ªï¼Œé‚“é—ªç”µï¼Œå­£ä¸‰å®ï¼Œæ–‡é²œæ˜Ž...ç­‰äºº</font></div>
 													<div align="left">
-¡¡</div>
-													<div align="left">
-														<font face="Verdana">
-														±»ÓÕ»óµÄ¾«Áé: »Ø¸´ ÉÏ¹ÙÐÂÉúII 
-														:ÊÇ°¡£¡µ±È»£¬ÕâÊÇÓÌÌ«ÈËµÄ¹Ûµã£¬µ«ÊÇÊ¥¾­ÖÐµÄ´´1£º26ÖÐ°´ÎÒÃÇµÄÐÎÏóÔìÈË£¬ÕâÐ©²»ÊÇÈýÒ»ÂÛµÄÕæÀíÂð£¿ÓÈÆäÊÇ´Ó´´ÊÀ¼ÍÆð¾ÍÓÐÁËÄÇÑùµÄÀíÂÛ£¡ÄúÊìÏ¤¾ÉÔ¼£¬À­±ÈÃÇ°Ñ´´1£º26¡ª¡ª28½ÚÊÇÔõÃ´½âÊÍµÄ£¡ÀÏÊ¦ÎªÎÒÃÇÊÚ¿ÎµÄÊ±ºò¾ÍÊÇËµÕâÑùµÄÎÊÌâ£¡ËùÒÔÓÐµã¾À½á£¡</font></div>
-													<div align="left">
-¡¡</div>
+ã€€</div>
 													<div align="left">
 														<font face="Verdana">
-														ÉÏ¹ÙÐÂÉúII: »Ø¸´ ±»ÓÕ»óµÄ¾«Áé 
-														:ÄÇÑùµÄ»°£¬¸ðÒàÃñ£¬°²ÉÌºé£¬µËÉÁµç£¬¼¾Èý±¦£¬ÎÄÏÊÃ÷...µÈÈË£¬¶¼¿ÉÒÔÐû³Æ×Ô¼ºÊÇµÚËÄÎ»£¬µÚÎåÎ»£¬µÚÁùÎ»...ÒÔ´ËÀàÍÆ¡£ËæÊ±¿ÉÒÔÐÂÀ´Ò»¸öÉñ£¬Ëµ×Ô¼ºÊÇXÎ»Ò»ÌåÖÐµÄÒ»Î»¡£·´ÈýÎ»Ò»ÌåµÄ½âÊÍÊÇ¸ºÊýÊÇÌìÊ¹¡£</font></div>
+														è¢«è¯±æƒ‘çš„ç²¾çµ: å›žå¤ ä¸Šå®˜æ–°ç”ŸII 
+														:æ˜¯å•Šï¼å½“ç„¶ï¼Œè¿™æ˜¯çŠ¹å¤ªäººçš„è§‚ç‚¹ï¼Œä½†æ˜¯åœ£ç»ä¸­çš„åˆ›1ï¼š26ä¸­æŒ‰æˆ‘ä»¬çš„å½¢è±¡é€ äººï¼Œè¿™äº›ä¸æ˜¯ä¸‰ä¸€è®ºçš„çœŸç†å—ï¼Ÿå°¤å…¶æ˜¯ä»Žåˆ›ä¸–çºªèµ·å°±æœ‰äº†é‚£æ ·çš„ç†è®ºï¼æ‚¨ç†Ÿæ‚‰æ—§çº¦ï¼Œæ‹‰æ¯”ä»¬æŠŠåˆ›1ï¼š26â€”â€”28èŠ‚æ˜¯æ€Žä¹ˆè§£é‡Šçš„ï¼è€å¸ˆä¸ºæˆ‘ä»¬æŽˆè¯¾çš„æ—¶å€™å°±æ˜¯è¯´è¿™æ ·çš„é—®é¢˜ï¼æ‰€ä»¥æœ‰ç‚¹çº ç»“ï¼</font></div>
+													<div align="left">
+ã€€</div>
+													<div align="left">
+														<font face="Verdana">
+														ä¸Šå®˜æ–°ç”ŸII: å›žå¤ è¢«è¯±æƒ‘çš„ç²¾çµ 
+														:é‚£æ ·çš„è¯ï¼Œè‘›äº¦æ°‘ï¼Œå®‰å•†æ´ªï¼Œé‚“é—ªç”µï¼Œå­£ä¸‰å®ï¼Œæ–‡é²œæ˜Ž...ç­‰äººï¼Œéƒ½å¯ä»¥å®£ç§°è‡ªå·±æ˜¯ç¬¬å››ä½ï¼Œç¬¬äº”ä½ï¼Œç¬¬å…­ä½...ä»¥æ­¤ç±»æŽ¨ã€‚éšæ—¶å¯ä»¥æ–°æ¥ä¸€ä¸ªç¥žï¼Œè¯´è‡ªå·±æ˜¯Xä½ä¸€ä½“ä¸­çš„ä¸€ä½ã€‚åä¸‰ä½ä¸€ä½“çš„è§£é‡Šæ˜¯è´Ÿæ•°æ˜¯å¤©ä½¿ã€‚</font></div>
 													<div align="left">
 														<font face="Verdana">
 														<br>
-														ÉÏ¹ÙÐÂÉúII: »Ø¸´ ±»ÓÕ»óµÄ¾«Áé 
-														:»ù¶½Í½¿´À´£¬ÐÅ°²ÉÌºé£¬¼¾Èý±¦ÊÇÉñµÄ¾ÍÊÇÒì¶Ë¡£ÓÌÌ«ÈË¿´À´£¬ÐÅÒ®öÕ¾ÍÊÇÉñµÄÒ²ÊÇÍ¬Àí¡£</font></div>
+														ä¸Šå®˜æ–°ç”ŸII: å›žå¤ è¢«è¯±æƒ‘çš„ç²¾çµ 
+														:åŸºç£å¾’çœ‹æ¥ï¼Œä¿¡å®‰å•†æ´ªï¼Œå­£ä¸‰å®æ˜¯ç¥žçš„å°±æ˜¯å¼‚ç«¯ã€‚çŠ¹å¤ªäººçœ‹æ¥ï¼Œä¿¡è€¶ç¨£å°±æ˜¯ç¥žçš„ä¹Ÿæ˜¯åŒç†ã€‚</font></div>
 													<font face="Verdana"><br>
 													</font><br>
 													</font><br>
-¡¡</td>
+ã€€</td>
 												</tr>
 											</table>
 											<br>
-¡¡</td>
+ã€€</td>
 										</tr>
 									</table>
 								</div>
@@ -64,6 +64,7 @@
 		</div>
 	</div>
 </div>
+<iframe MARGINWIDTH=0 MARGINHEIGHT=0 HSPACE=0 VSPACE=0 FRAMEBORDER=0 SCROLLING=no src="../scsl/footer.html" height=â€œautoâ€ width="100%"></iframe>
 
 </body>
 
