--- a/xyyd/qrl.htm
+++ b/xyyd/qrl.htm
@@ -1,8 +1,8 @@
 <html>
 
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=gb2312">
-<title>È«ÈËÀàÕýÔÚÆÈÇÐµÈ´ýÎ°´ó¾«ÉñÁìÐäµÄ½µÁÙ</title>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<title>å…¨äººç±»æ­£åœ¨è¿«åˆ‡ç­‰å¾…ä¼Ÿå¤§ç²¾ç¥žé¢†è¢–çš„é™ä¸´</title>
 </head>
 
 <body>
@@ -26,27 +26,27 @@
 													<font style="FONT-SIZE: 9pt" face="Arial, Helvetica, sans-serif">
 													<div align="left">
 														<font face="Verdana">
-														È«ÈËÀàÕýÔÚÆÈÇÐµÈ´ýÎ°´ó¾«ÉñÁìÐäµÄ½µÁÙ</font></div>
+														å…¨äººç±»æ­£åœ¨è¿«åˆ‡ç­‰å¾…ä¼Ÿå¤§ç²¾ç¥žé¢†è¢–çš„é™ä¸´</font></div>
 													<div align="left">
-¡¡</div>
-													<div align="left">
-														<font face="Verdana">
-														ÕâÊÇÒ»¸öÈËÀàÊ·ÉÏ×îÉñÊ¥×îÎ°´óµÄ¿ÕÇ°´ó±ä¸ïÊ±´ú£¬ÕâÊÇÒ»¸öÃ¿¸öÈË¶¼¿ÉÒÔÉúµÄÎ°´ó£¬»îµÃ¹âÈÙµÄ¼ª¸£Ê±´ú¡£</font></div>
+ã€€</div>
 													<div align="left">
 														<font face="Verdana">
-														ÎªÁË³¹µ×ÍÆ·­Õ÷·þÖÎÀíÈËÀà6000¶àÄêºÚ°µÍ´¿à²»ÐÒÐ°¶ñµÄ¾ÉÌåÏµ£¬½¨Á¢Ã»ÓÐÍ´¿à²»ÐÒ»ÑÑÔÐ°¶ñµÄÓÀºãÌì¹ú£¬½µÁÙÔÚÕâ¸öÊ±´úµÄÖÚÌìÊ¹ÔÚÈ«Çò¸÷µØÒÑ¾­ÕýÔÚÂ½ÐøÆô¶¯¿ªÊ¼ÁËÉÏÌì¸³ÓèµÄ¸÷×ÔÌìµÀÉñÊ¥ÒåÃü£¬ÈËÀàÉç»á½¨Á¢ÖÕ¼«áÛ·åÍêÃÀÄ¿±ê-ÈË¼äÌì¹úÒÑÍòÊÂ¾ã±¸£¬Ö»Ç·ÒýÁìºÅÕÙÈ«ÈËÀàÍê³ÉÉÏÌì¸³ÓèµÄÉñÊ¥Ê¥Ãü-½¨Á¢ÓÀºãÈË¼äÌì¹úµÄÎ°´óµÄ¾«ÉñÁìÐä£¨¾´ÉñÁéÐÞ£©£¡£¡£¡</font></div>
+														è¿™æ˜¯ä¸€ä¸ªäººç±»å²ä¸Šæœ€ç¥žåœ£æœ€ä¼Ÿå¤§çš„ç©ºå‰å¤§å˜é©æ—¶ä»£ï¼Œè¿™æ˜¯ä¸€ä¸ªæ¯ä¸ªäººéƒ½å¯ä»¥ç”Ÿçš„ä¼Ÿå¤§ï¼Œæ´»å¾—å…‰è£çš„å‰ç¦æ—¶ä»£ã€‚</font></div>
 													<div align="left">
 														<font face="Verdana">
-														ÉêÃ÷ÔÚÕÙ»½£¬Áé½çÔÚÕÙ»½£¬Î°´óÊ±´úÔÚÕÙ»½£¬Äã¿´µ½Ìýµ½Ê¥Îòµ½Î°´óÊ±´úµÄÉñÊ¥ÕÙ»½Âð£¿£¿£¿ÉúÎªÉñÖ®×ÓµÄÈËÀàÀíÓ¦Ë³Ó¦ºôÓ¦ÉÏÌìµÄÉñÊ¥ÕÙ»½£¬°ÑÉúÃüÈ¼ÉÕÔÚÈËÀà·¢Õ¹Ê·ÉÏ×î×îÉñÊ¥£¬×î×îÎ°´óµÄ½¨Á¢ÈËÀàÖÕ¼«áÛ·åÍêÃÀÄ¿±ê-ÈË¼äÌì¹úµÄÍòÊÀ¿ªÌ«Æ½¿õÊÀÎ°ÒµÖ®ÖÐ£¡£¡£¡<br>
-¡¡</font></div>
+														ä¸ºäº†å½»åº•æŽ¨ç¿»å¾æœæ²»ç†äººç±»6000å¤šå¹´é»‘æš—ç—›è‹¦ä¸å¹¸é‚ªæ¶çš„æ—§ä½“ç³»ï¼Œå»ºç«‹æ²¡æœ‰ç—›è‹¦ä¸å¹¸è°Žè¨€é‚ªæ¶çš„æ°¸æ’å¤©å›½ï¼Œé™ä¸´åœ¨è¿™ä¸ªæ—¶ä»£çš„ä¼—å¤©ä½¿åœ¨å…¨çƒå„åœ°å·²ç»æ­£åœ¨é™†ç»­å¯åŠ¨å¼€å§‹äº†ä¸Šå¤©èµ‹äºˆçš„å„è‡ªå¤©é“ç¥žåœ£ä¹‰å‘½ï¼Œäººç±»ç¤¾ä¼šå»ºç«‹ç»ˆæžå·…å³°å®Œç¾Žç›®æ ‡-äººé—´å¤©å›½å·²ä¸‡äº‹ä¿±å¤‡ï¼Œåªæ¬ å¼•é¢†å·å¬å…¨äººç±»å®Œæˆä¸Šå¤©èµ‹äºˆçš„ç¥žåœ£åœ£å‘½-å»ºç«‹æ°¸æ’äººé—´å¤©å›½çš„ä¼Ÿå¤§çš„ç²¾ç¥žé¢†è¢–ï¼ˆæ•¬ç¥žçµä¿®ï¼‰ï¼ï¼ï¼</font></div>
+													<div align="left">
+														<font face="Verdana">
+														ç”³æ˜Žåœ¨å¬å”¤ï¼Œçµç•Œåœ¨å¬å”¤ï¼Œä¼Ÿå¤§æ—¶ä»£åœ¨å¬å”¤ï¼Œä½ çœ‹åˆ°å¬åˆ°åœ£æ‚Ÿåˆ°ä¼Ÿå¤§æ—¶ä»£çš„ç¥žåœ£å¬å”¤å—ï¼Ÿï¼Ÿï¼Ÿç”Ÿä¸ºç¥žä¹‹å­çš„äººç±»ç†åº”é¡ºåº”å‘¼åº”ä¸Šå¤©çš„ç¥žåœ£å¬å”¤ï¼ŒæŠŠç”Ÿå‘½ç‡ƒçƒ§åœ¨äººç±»å‘å±•å²ä¸Šæœ€æœ€ç¥žåœ£ï¼Œæœ€æœ€ä¼Ÿå¤§çš„å»ºç«‹äººç±»ç»ˆæžå·…å³°å®Œç¾Žç›®æ ‡-äººé—´å¤©å›½çš„ä¸‡ä¸–å¼€å¤ªå¹³æ—·ä¸–ä¼Ÿä¸šä¹‹ä¸­ï¼ï¼ï¼<br>
+ã€€</font></div>
 													<font face="Verdana"><br>
 													</font><br>
-													</font>¸ðÒàÃñ¡£<br>
-¡¡</td>
+													</font>è‘›äº¦æ°‘ã€‚<br>
+ã€€</td>
 												</tr>
 											</table>
 											<br>
-¡¡</td>
+ã€€</td>
 										</tr>
 									</table>
 								</div>
@@ -58,7 +58,8 @@
 			</div>
 		</div>
 	</div>
-</div>
+</div><iframe MARGINWIDTH=0 MARGINHEIGHT=0 HSPACE=0 VSPACE=0 FRAMEBORDER=0 SCROLLING=no src="../scsl/footer.html" height=â€œautoâ€ width="100%"></iframe>
+
 
 </body>
 
