--- a/xyyd/2012j.htm
+++ b/xyyd/2012j.htm
@@ -1,8 +1,8 @@
 <html>
 
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=gb2312">
-<title>2012.12.21¾ÈÊÀÌìµØÉñÄ§´óÕ½</title>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<title>2012.12.21æ•‘ä¸–å¤©åœ°ç¥žé­”å¤§æˆ˜</title>
 </head>
 
 <body>
@@ -25,15 +25,15 @@
 													<td>
 													<font style="FONT-SIZE: 9pt" face="Arial, Helvetica, sans-serif">
 													<div align="left">
-														2012.12.21¾ÈÊÀÌìµØÉñÄ§´óÕ½</div>
+														2012.12.21æ•‘ä¸–å¤©åœ°ç¥žé­”å¤§æˆ˜</div>
 													<div align="left">
 														<br>
-														12ÔÂ21ÈÕÁè³¿×ÓÊ±£¬ÌìÄ§¾®±»Ò»¹ÉÖ±¹áÒøºÓµÄè­è²¼«¹âËù´ò¿ª£¬´óÁ¿Ä§ÎïÓ¿³ö¡£Õýµ±Ä§ÎïÓûÎª»öÈË¼äÖ®Ê±£¬¼¸Î»ÔçÆðµÄÈË×å¸ßÊÖÒÑ¾­ÉÁÁÁµÇ³¡£¬ËûÃÇ·Ö±ðÊÇ£º<br>
-														¼àÓü¡°¸ðÒàÃñ¡±<br>
-														´ó¼ÒÒ»¶¨ÄÉÃÆ£¬ÎªÊ²Ã´¸ðÒàÃñ²»ÔÚ¼àÓü£¬¶øÔÚÉñÄ§Ö®¾®¡£ÄÇÊÇÒòÎª¸ðÒàÃñ×îÖÕÁË½âµ½ÁË×Ô¼ºµÄÌìÃü£¬ÔÚ¼àÓüÖÐ»ñµÃÁËÐÂÉú£¬ÖªµÀÁËÉúÃüµÄ¼ÛÖµ£¬´Ó¶øÔªÉñ³öÇÏ²ÎÓëÁË´Ë´Î´óÕ½¡£</div>
+														12æœˆ21æ—¥å‡Œæ™¨å­æ—¶ï¼Œå¤©é­”äº•è¢«ä¸€è‚¡ç›´è´¯é“¶æ²³çš„ç’€ç’¨æžå…‰æ‰€æ‰“å¼€ï¼Œå¤§é‡é­”ç‰©æ¶Œå‡ºã€‚æ­£å½“é­”ç‰©æ¬²ä¸ºç¥¸äººé—´ä¹‹æ—¶ï¼Œå‡ ä½æ—©èµ·çš„äººæ—é«˜æ‰‹å·²ç»é—ªäº®ç™»åœºï¼Œä»–ä»¬åˆ†åˆ«æ˜¯ï¼š<br>
+														ç›‘ç‹±â€œè‘›äº¦æ°‘â€<br>
+														å¤§å®¶ä¸€å®šçº³é—·ï¼Œä¸ºä»€ä¹ˆè‘›äº¦æ°‘ä¸åœ¨ç›‘ç‹±ï¼Œè€Œåœ¨ç¥žé­”ä¹‹äº•ã€‚é‚£æ˜¯å› ä¸ºè‘›äº¦æ°‘æœ€ç»ˆäº†è§£åˆ°äº†è‡ªå·±çš„å¤©å‘½ï¼Œåœ¨ç›‘ç‹±ä¸­èŽ·å¾—äº†æ–°ç”Ÿï¼ŒçŸ¥é“äº†ç”Ÿå‘½çš„ä»·å€¼ï¼Œä»Žè€Œå…ƒç¥žå‡ºçªå‚ä¸Žäº†æ­¤æ¬¡å¤§æˆ˜ã€‚</div>
 													<br>
 													</font><br>
-¡¡</td>
+ã€€</td>
 												</tr>
 											</table>
 											</td>
@@ -48,7 +48,8 @@
 			</div>
 		</div>
 	</div>
-</div>
+</div><iframe MARGINWIDTH=0 MARGINHEIGHT=0 HSPACE=0 VSPACE=0 FRAMEBORDER=0 SCROLLING=no src="../scsl/footer.html" height=â€œautoâ€ width="100%"></iframe>
+
 
 </body>
 
