--- a/xyyd/2013l.htm
+++ b/xyyd/2013l.htm
@@ -1,14 +1,14 @@
 <html>
 
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=gb2312">
-<title>2013ÄêÉñÖ®×Ó¡°¸ðÒàÃñ¡±×îÐÂ¾ÞÖø£ºæÇÃÀ¡¶Ê¥¾­¡·µÄ¡¶Éñ¾­¡·£¡£¡£¡</title>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<title>2013å¹´ç¥žä¹‹å­â€œè‘›äº¦æ°‘â€æœ€æ–°å·¨è‘—ï¼šåª²ç¾Žã€Šåœ£ç»ã€‹çš„ã€Šç¥žç»ã€‹ï¼ï¼ï¼</title>
 </head>
 
 <body>
 
 <p><font face="Verdana" style="font-size: 12px; color: rgb(85,85,85)">
-2013ÄêÉñÖ®×Ó¡°¸ðÒàÃñ¡±×îÐÂ¾ÞÖø£ºæÇÃÀ¡¶Ê¥¾­¡·µÄ¡¶Éñ¾­¡·£¡£¡£¡</font><br>
+2013å¹´ç¥žä¹‹å­â€œè‘›äº¦æ°‘â€æœ€æ–°å·¨è‘—ï¼šåª²ç¾Žã€Šåœ£ç»ã€‹çš„ã€Šç¥žç»ã€‹ï¼ï¼ï¼</font><br>
 <font face="Verdana" style="font-size: 12px; color: rgb(85,85,85)"><br>
 </font><br>
 <font face="Verdana" style="font-size: 12px; color: rgb(85,85,85)"><br>
@@ -16,21 +16,22 @@
 <font face="Verdana" style="font-size: 12px; color: rgb(85,85,85)"><br>
 </font><br>
 <font face="Verdana" style="font-size: 12px; color: rgb(85,85,85)">
-³£ÑÔµÀ£º¡°Êé¶Á°Ù±é£¬ÆäÒå×ÔÏÖ¡£¡±</font><br>
+å¸¸è¨€é“ï¼šâ€œä¹¦è¯»ç™¾éï¼Œå…¶ä¹‰è‡ªçŽ°ã€‚â€</font><br>
 <font face="Verdana" style="font-size: 12px; color: rgb(85,85,85)">
-¶ø¡¶Éñ¾­¡·£¬ÔòÊÇÎòÍ¸ÐþÃî£¬¼´¿É°×ÈÕ·ÉÉý£¡</font><br>
-<font face="Verdana" style="font-size: 12px; color: rgb(85,85,85)">¡¶Éñ¾­¡·ÈýÖØ¾³½ç£º</font><br>
-<font face="Verdana" style="font-size: 12px; color: rgb(85,85,85)">Ä¿ÉúºÁÃ¢</font><br>
-<font face="Verdana" style="font-size: 12px; color: rgb(85,85,85)">ÉíÓÐÒìÏã</font><br>
-<font face="Verdana" style="font-size: 12px; color: rgb(85,85,85)">°×ÈÕ·ÉÉý£¡</font><br>
+è€Œã€Šç¥žç»ã€‹ï¼Œåˆ™æ˜¯æ‚Ÿé€çŽ„å¦™ï¼Œå³å¯ç™½æ—¥é£žå‡ï¼</font><br>
+<font face="Verdana" style="font-size: 12px; color: rgb(85,85,85)">ã€Šç¥žç»ã€‹ä¸‰é‡å¢ƒç•Œï¼š</font><br>
+<font face="Verdana" style="font-size: 12px; color: rgb(85,85,85)">ç›®ç”Ÿæ¯«èŠ’</font><br>
+<font face="Verdana" style="font-size: 12px; color: rgb(85,85,85)">èº«æœ‰å¼‚é¦™</font><br>
+<font face="Verdana" style="font-size: 12px; color: rgb(85,85,85)">ç™½æ—¥é£žå‡ï¼</font><br>
 <font face="Verdana" style="font-size: 12px; color: rgb(85,85,85)">
-ÏÂÃæ£¬ÎÒ¾Í½«Õâ²¿¿õÊÀ±¦µä£¬×ª·¢¹ýÀ´£¬ÈÃ´ó¼ÒÒ»¶ÃÎª¿ì¡£</font><br>
+ä¸‹é¢ï¼Œæˆ‘å°±å°†è¿™éƒ¨æ—·ä¸–å®å…¸ï¼Œè½¬å‘è¿‡æ¥ï¼Œè®©å¤§å®¶ä¸€ç¹ä¸ºå¿«ã€‚</font><br>
 <font face="Verdana" style="font-size: 12px; color: rgb(85,85,85)"><br>
 </font><br>
 <font face="Verdana" style="font-size: 12px; color: rgb(85,85,85)">
-µ±ÄãÃÇÕæÕý¿´ÍêÕâ²¿¡¶Éñ¾­¡·Ê±£¬ÇëÔÚÐÄÖÐÄ¬Ä¬ÔÞÃÀ£¬¸ðÒàÃñÉñËûµÄÎ°´ó¡¢ÎÞË½¡¢²©°®Óë¹âÃ÷¡£</font><br>
+å½“ä½ ä»¬çœŸæ­£çœ‹å®Œè¿™éƒ¨ã€Šç¥žç»ã€‹æ—¶ï¼Œè¯·åœ¨å¿ƒä¸­é»˜é»˜èµžç¾Žï¼Œè‘›äº¦æ°‘ç¥žä»–çš„ä¼Ÿå¤§ã€æ— ç§ã€åšçˆ±ä¸Žå…‰æ˜Žã€‚</font><br>
 <br>
-¡¡</p>
+ã€€</p><iframe MARGINWIDTH=0 MARGINHEIGHT=0 HSPACE=0 VSPACE=0 FRAMEBORDER=0 SCROLLING=no src="../scsl/footer.html" height=â€œautoâ€ width="100%"></iframe>
+
 
 </body>
 
