--- a/xyyd/2019.htm
+++ b/xyyd/2019.htm
@@ -1,19 +1,20 @@
 <html>
 
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=gb2312">
-<title>ÕæÕýµÄÄ©ÈÕÔÚ2019Äê 2012ÄêÊÇ¸öÆ­¾Ö</title>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<title>çœŸæ­£çš„æœ«æ—¥åœ¨2019å¹´ 2012å¹´æ˜¯ä¸ªéª—å±€</title>
 </head>
 
 <body>
 
-<p>ÕæÕýµÄÄ©ÈÕÔÚ2019Äê 2012ÄêÊÇ¸öÆ­¾Ö<br>
+<p>çœŸæ­£çš„æœ«æ—¥åœ¨2019å¹´ 2012å¹´æ˜¯ä¸ªéª—å±€<br>
 <br>
 <br>
 <br>
 <br>
-2019Äê¸ðÒàÃñ´Ó¼àÓüÀï³öÀ´×öµØÉÏµÄ¾ýÍõ£¬´«µÀÊé4:14ÓÐ¸öÍõ´Ó¼àÓüÀï³öÀ´£¬ËûµÄ¹úÃñ¶àÈçÐÇ³½£¬ÒÔÉÏÊÇ°Ù¶È°Ù¿Æ£¬²»ÒªÀ´²éÎÒË®±í¡£<br>
-¡¡</p>
+2019å¹´è‘›äº¦æ°‘ä»Žç›‘ç‹±é‡Œå‡ºæ¥åšåœ°ä¸Šçš„å›çŽ‹ï¼Œä¼ é“ä¹¦4:14æœ‰ä¸ªçŽ‹ä»Žç›‘ç‹±é‡Œå‡ºæ¥ï¼Œä»–çš„å›½æ°‘å¤šå¦‚æ˜Ÿè¾°ï¼Œä»¥ä¸Šæ˜¯ç™¾åº¦ç™¾ç§‘ï¼Œä¸è¦æ¥æŸ¥æˆ‘æ°´è¡¨ã€‚<br>
+ã€€</p>
+<iframe MARGINWIDTH=0 MARGINHEIGHT=0 HSPACE=0 VSPACE=0 FRAMEBORDER=0 SCROLLING=no src="../scsl/footer.html" height=â€œautoâ€ width="100%"></iframe>
 
 </body>
 
