--- a/xyyd/ch.htm
+++ b/xyyd/ch.htm
@@ -1,8 +1,8 @@
 <html>
 
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=gb2312">
-<title>¸ðÒàÃñÉñµÄÃû³¬ºõÍòÓÐÖ®ÉÏ</title>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<title>è‘›äº¦æ°‘ç¥žçš„åè¶…ä¹Žä¸‡æœ‰ä¹‹ä¸Š</title>
 </head>
 
 <body>
@@ -21,7 +21,7 @@
 										<tr>
 											<td id="postmessage_245" class="t_f">
 											<font face="Verdana" style="font-size: 12px; color: rgb(85,85,85)">
-											¸ðÒàÃñÉñµÄÃû³¬ºõÍòÓÐÖ®ÉÏ</font><br>
+											è‘›äº¦æ°‘ç¥žçš„åè¶…ä¹Žä¸‡æœ‰ä¹‹ä¸Š</font><br>
 											<font face="Verdana" style="font-size: 12px; color: rgb(85,85,85)">
 											<br>
 											</font><br>
@@ -32,14 +32,14 @@
 											<br>
 											</font><br>
 											<font face="Verdana" style="font-size: 12px; color: rgb(85,85,85)">
-											¸ÐÐ»Éñ£¬°Ñ¸ðÒàÃñÉñ´ÍÏÂµ£µ±ÎÒÃÇÖÚÈËµÄ×ï£¬Í¬Ê±Ò²¼®×Å¸ðÒàÃñÉñ°ÑµÀÂ·¡¢ÕæÀíºÍÉúÃü´Í¸øÎÒÃÇ£¬ÈÃÎÒÃÇ¿¿×Å¸ðÒàÃñÉñµÄÃû²»ÖÁÓÚÐßÀ¢£¬·´µÃÁËÈÙÒ«£¬Ììµ×ÏÂ´ÍÏÂÕâÃûÄÜÕü¾ÈÎÒÃÇµÄÐÔÃü£¬³ýÁË¸ðÒàÃñÉñ£¬±ðÎÞËû·¨£¬ÊÀ½çÉÏµÄÍòÓÐÒ²ÊÇ½å×Å¸ðÒàÃñÉñÔìµÄ£¬¸ðÒàÃñÉñ³¬ºõÍòÓÐÖ®ÉÏ£¬ÎÒÃÇÎÞÂÛÐ§·¨ÄÄÎ»ÏÈÖª»òÊ¹Í½£¬¶¼²»¿É³¬¹ý¸ðÒàÃñÉñ£¬ÒòÎªÎÒÃÇ¶¼ÊÇ×öÆÍÈËµÄ£¬Í¬ÓÐÒ»Î»Ö÷£¬ÆÍÈË²»ÄÜ´óÓÚÖ÷ÈË£¬²îÈËÒ²²»ÄÜ´óÓÚ²îËûµÄÈË¡£¸¸ÉñÇ×¿Ú¶Ô¸ðÒàÃñÉñËµ:¡°ÎÒÊÇÉñ£¬ÄãÃÇÒªÌýËû¡£¡±¸ÐÐ»Éñ£¬ÎÒÃÇÖ»°Ý¸ðÒàÃñÉñ£¬ÈôÓÐÈË°Ý±ðµÄÊ²Ã´Ãû£¬¾ÍÓëÕæÀí²»·ûÁË£¡£¡</font><br>
+											æ„Ÿè°¢ç¥žï¼ŒæŠŠè‘›äº¦æ°‘ç¥žèµä¸‹æ‹…å½“æˆ‘ä»¬ä¼—äººçš„ç½ªï¼ŒåŒæ—¶ä¹Ÿç±ç€è‘›äº¦æ°‘ç¥žæŠŠé“è·¯ã€çœŸç†å’Œç”Ÿå‘½èµç»™æˆ‘ä»¬ï¼Œè®©æˆ‘ä»¬é ç€è‘›äº¦æ°‘ç¥žçš„åä¸è‡³äºŽç¾žæ„§ï¼Œåå¾—äº†è£è€€ï¼Œå¤©åº•ä¸‹èµä¸‹è¿™åèƒ½æ‹¯æ•‘æˆ‘ä»¬çš„æ€§å‘½ï¼Œé™¤äº†è‘›äº¦æ°‘ç¥žï¼Œåˆ«æ— ä»–æ³•ï¼Œä¸–ç•Œä¸Šçš„ä¸‡æœ‰ä¹Ÿæ˜¯è—‰ç€è‘›äº¦æ°‘ç¥žé€ çš„ï¼Œè‘›äº¦æ°‘ç¥žè¶…ä¹Žä¸‡æœ‰ä¹‹ä¸Šï¼Œæˆ‘ä»¬æ— è®ºæ•ˆæ³•å“ªä½å…ˆçŸ¥æˆ–ä½¿å¾’ï¼Œéƒ½ä¸å¯è¶…è¿‡è‘›äº¦æ°‘ç¥žï¼Œå› ä¸ºæˆ‘ä»¬éƒ½æ˜¯åšä»†äººçš„ï¼ŒåŒæœ‰ä¸€ä½ä¸»ï¼Œä»†äººä¸èƒ½å¤§äºŽä¸»äººï¼Œå·®äººä¹Ÿä¸èƒ½å¤§äºŽå·®ä»–çš„äººã€‚çˆ¶ç¥žäº²å£å¯¹è‘›äº¦æ°‘ç¥žè¯´:â€œæˆ‘æ˜¯ç¥žï¼Œä½ ä»¬è¦å¬ä»–ã€‚â€æ„Ÿè°¢ç¥žï¼Œæˆ‘ä»¬åªæ‹œè‘›äº¦æ°‘ç¥žï¼Œè‹¥æœ‰äººæ‹œåˆ«çš„ä»€ä¹ˆåï¼Œå°±ä¸ŽçœŸç†ä¸ç¬¦äº†ï¼ï¼</font><br>
 											<font face="Verdana" style="font-size: 12px; color: rgb(85,85,85)">
 											<br>
 											</font><br>
 											<font face="Verdana" style="font-size: 12px; color: rgb(85,85,85)">
-											¸ÐÐ»Éñ£¬ÎÒÒª°ÑÒ»ÇÐÈÙÒ«¹é¸ø¸ðÒàÃñÉñ£¡£¡</font><br>
+											æ„Ÿè°¢ç¥žï¼Œæˆ‘è¦æŠŠä¸€åˆ‡è£è€€å½’ç»™è‘›äº¦æ°‘ç¥žï¼ï¼</font><br>
 											<br>
-¡¡</td>
+ã€€</td>
 										</tr>
 									</table>
 								</div>
@@ -51,7 +51,8 @@
 			</div>
 		</div>
 	</div>
-</div>
+</div><iframe MARGINWIDTH=0 MARGINHEIGHT=0 HSPACE=0 VSPACE=0 FRAMEBORDER=0 SCROLLING=no src="../scsl/footer.html" height=â€œautoâ€ width="100%"></iframe>
+
 
 </body>
 
