--- a/xyyd/cls.htm
+++ b/xyyd/cls.htm
@@ -1,8 +1,8 @@
 <html>
 
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=gb2312">
-<title>´´Á¢Éñ½Ì,Îª¸ü½Ó½üÉñ.½Ó½üÕæÀí¡£</title>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<title>åˆ›ç«‹ç¥žæ•™,ä¸ºæ›´æŽ¥è¿‘ç¥ž.æŽ¥è¿‘çœŸç†ã€‚</title>
 </head>
 
 <body>
@@ -26,23 +26,23 @@
 													<font style="FONT-SIZE: 9pt" face="Arial, Helvetica, sans-serif">
 													<div align="left">
 														<font face="Verdana">
-														´´Á¢Éñ½Ì,Îª¸ü½Ó½üÉñ.½Ó½üÕæÀí¡£</font></div>
+														åˆ›ç«‹ç¥žæ•™,ä¸ºæ›´æŽ¥è¿‘ç¥ž.æŽ¥è¿‘çœŸç†ã€‚</font></div>
 													<font face="Verdana">
 													<div align="left">
 														<font face="Arial, Helvetica, sans-serif">
 														<br>
-														°ÙºÏ°¡,Ã»ÓÐ°¡</font></div>
+														ç™¾åˆå•Š,æ²¡æœ‰å•Š</font></div>
 													<div align="left">
 														<font face="Arial, Helvetica, sans-serif">
-														ÄãÊÇ¸ðÒàÃñÍø¹ÜÀíÔ±,¸¶³öÌ«¶à,ÕâÊÇ¸ðÒàÃñÓÀÔ¶Ç·ÄãµÄ.½«À´±Ø±¨´ð.</font></div>
+														ä½ æ˜¯è‘›äº¦æ°‘ç½‘ç®¡ç†å‘˜,ä»˜å‡ºå¤ªå¤š,è¿™æ˜¯è‘›äº¦æ°‘æ°¸è¿œæ¬ ä½ çš„.å°†æ¥å¿…æŠ¥ç­”.</font></div>
 													</font>
 													<div align="left">
 														<font face="Verdana">
-														Ö»ÊÇÎÒÃÇ²»Í¬µÄÊÇ,ÄãÊÇÊ¥¾­ºÍ´«Í³,¶øÎÒÃÇÔÚÇó¸ü¸ßµÄÕæÀí,ÒòÎªÉñÎÞÏÞ.ÕæÀíÎÞÏÞ.<br>
-														ÄãËµÎÒÃÇ²»ÊÇ»ù¶½Í½,ÆäÊµÎÒÃÇÒ»Ö±ÊÇ,Éñ¾­ÉÏÒ®öÕÄÚÈÝºÜ¶à,Ö»ÊÇÎÒÃÇÒòÉÏÊö,´´Á¢Éñ½Ì,Îª¸ü½Ó½üÉñ.½Ó½üÕæÀí¡£</font></div>
+														åªæ˜¯æˆ‘ä»¬ä¸åŒçš„æ˜¯,ä½ æ˜¯åœ£ç»å’Œä¼ ç»Ÿ,è€Œæˆ‘ä»¬åœ¨æ±‚æ›´é«˜çš„çœŸç†,å› ä¸ºç¥žæ— é™.çœŸç†æ— é™.<br>
+														ä½ è¯´æˆ‘ä»¬ä¸æ˜¯åŸºç£å¾’,å…¶å®žæˆ‘ä»¬ä¸€ç›´æ˜¯,ç¥žç»ä¸Šè€¶ç¨£å†…å®¹å¾ˆå¤š,åªæ˜¯æˆ‘ä»¬å› ä¸Šè¿°,åˆ›ç«‹ç¥žæ•™,ä¸ºæ›´æŽ¥è¿‘ç¥ž.æŽ¥è¿‘çœŸç†ã€‚</font></div>
 													<font face="Verdana"><br>
 													</font><br>
-¡¡</font></td>
+ã€€</font></td>
 												</tr>
 											</table>
 											</td>
@@ -58,6 +58,7 @@
 		</div>
 	</div>
 </div>
+<iframe MARGINWIDTH=0 MARGINHEIGHT=0 HSPACE=0 VSPACE=0 FRAMEBORDER=0 SCROLLING=no src="../scsl/footer.html" height=â€œautoâ€ width="100%"></iframe>
 
 </body>
 
