--- a/xyyd/fjd.htm
+++ b/xyyd/fjd.htm
@@ -1,8 +1,8 @@
 <html>
 
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=gb2312">
-<title>·ð½ÌµÀ½ÌÉñ½ÌVS·ð¾­Ê¥¾­Éñ¾­</title>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<title>ä½›æ•™é“æ•™ç¥žæ•™VSä½›ç»åœ£ç»ç¥žç»</title>
 <style type="text/css">
 .style1 {
 	font-family: Arial, Helvetica, sans-serif;
@@ -16,13 +16,14 @@
 
 <p>
 <font style="FONT-SIZE: 12px" face="Arial, Helvetica, sans-serif" color="#555555">
-·ð½ÌµÀ½ÌÉñ½ÌVS·ð¾­Ê¥¾­Éñ¾­</font><br>
+ä½›æ•™é“æ•™ç¥žæ•™VSä½›ç»åœ£ç»ç¥žç»</font><br>
 <br>
 <font style="FONT-SIZE: 12px" face="Arial, Helvetica, sans-serif" color="#555555">
-Éñ½ÌÉñ¾­Ãû×Ö²»´í</font></p>
+ç¥žæ•™ç¥žç»åå­—ä¸é”™</font></p>
 <p>
-<span class="style1">¸ðÒàÃñ¡£</span><br>
-¡¡</p>
+<span class="style1">è‘›äº¦æ°‘ã€‚</span><br>
+ã€€</p>
+<iframe MARGINWIDTH=0 MARGINHEIGHT=0 HSPACE=0 VSPACE=0 FRAMEBORDER=0 SCROLLING=no src="../scsl/footer.html" height=â€œautoâ€ width="100%"></iframe>
 
 </body>
 
