--- a/xyyd/gc.htm
+++ b/xyyd/gc.htm
@@ -1,14 +1,14 @@
 <html>
 
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=gb2312">
-<title>ÈÃÏñ¹â²ÊÕâÑùµÄÃÀÅ®³ÉÁË½ÌÍ½</title>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<title>è®©åƒå…‰å½©è¿™æ ·çš„ç¾Žå¥³æˆäº†æ•™å¾’</title>
 </head>
 
 <body>
 
 <p><font face="Verdana" style="font-size: 12px; color: rgb(85,85,85)">
-ÈÃÏñ¹â²ÊÕâÑùµÄÃÀÅ®³ÉÁË½ÌÍ½</font><br>
+è®©åƒå…‰å½©è¿™æ ·çš„ç¾Žå¥³æˆäº†æ•™å¾’</font><br>
 <font face="Verdana" style="font-size: 12px; color: rgb(85,85,85)"><br>
 </font><br>
 <font face="Verdana" style="font-size: 12px; color: rgb(85,85,85)"><br>
@@ -18,13 +18,14 @@
 <font face="Verdana" style="font-size: 12px; color: rgb(85,85,85)"><br>
 </font><br>
 <font face="Verdana" style="font-size: 12px; color: rgb(85,85,85)">
-¸ðÒàÃñ×°ÉñÅª¹íµÄ²»ÖªµÀÔÚ¸ãÉ¶£¬µ«Ëûµ±ÁË½ÌÖ÷£¬ÈÃÏñ¹â²ÊÕâÑùµÄÃÀÅ®³ÉÁË½ÌÍ½¡£</font><br>
+è‘›äº¦æ°‘è£…ç¥žå¼„é¬¼çš„ä¸çŸ¥é“åœ¨æžå•¥ï¼Œä½†ä»–å½“äº†æ•™ä¸»ï¼Œè®©åƒå…‰å½©è¿™æ ·çš„ç¾Žå¥³æˆäº†æ•™å¾’ã€‚</font><br>
 <font face="Verdana" style="font-size: 12px; color: rgb(85,85,85)"><br>
 </font><br>
 <font face="Verdana" style="font-size: 12px; color: rgb(85,85,85)">
-&gt;&gt;&gt;¹â²Ê£¬¾ø¶ÔÊÇÉñ½ÌµÄ±£ÂÞ£¬ËûÐÅ¸ðÒàÃñ£¬ÊÇÉÏÌì¸øËýµÄÒìÏó£¬±ðÈËÑ§²»À´µÄ¡£</font><br>
+&gt;&gt;&gt;å…‰å½©ï¼Œç»å¯¹æ˜¯ç¥žæ•™çš„ä¿ç½—ï¼Œä»–ä¿¡è‘›äº¦æ°‘ï¼Œæ˜¯ä¸Šå¤©ç»™å¥¹çš„å¼‚è±¡ï¼Œåˆ«äººå­¦ä¸æ¥çš„ã€‚</font><br>
 <br>
-¡¡</p>
+ã€€</p><iframe MARGINWIDTH=0 MARGINHEIGHT=0 HSPACE=0 VSPACE=0 FRAMEBORDER=0 SCROLLING=no src="../scsl/footer.html" height=â€œautoâ€ width="100%"></iframe>
+
 
 </body>
 
