--- a/xyyd/gjs.htm
+++ b/xyyd/gjs.htm
@@ -1,8 +1,8 @@
 <html>
 
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=gb2312">
-<title>¸ð¾ÝËµ±»³ÆÎªÊ¥ÈËÈýºÅ</title>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<title>è‘›æ®è¯´è¢«ç§°ä¸ºåœ£äººä¸‰å·</title>
 </head>
 
 <body>
@@ -26,21 +26,21 @@
 													<font style="FONT-SIZE: 9pt" face="Arial, Helvetica, sans-serif">
 													<div align="left">
 														<font face="Verdana">
-														¸ð¾ÝËµ±»³ÆÎªÊ¥ÈËÈýºÅ</font></div>
+														è‘›æ®è¯´è¢«ç§°ä¸ºåœ£äººä¸‰å·</font></div>
 													<div align="left">
-¡¡</div>
+ã€€</div>
 													<div align="left">
 														<font face="Verdana">
-														¸ðÒàÃñ¾ÝËµ±»³ÆÎªÊ¥ÈËÈýºÅ 1ºÅåÐÒ£¹úÍâ 2ºÅ 4ºÅ 
-														5ºÅÒ²Î£ÏÕ ²»ÈëµØÓüË­Èë ÀúÁ·ÏÂÒ²ºÃ</font></div>
+														è‘›äº¦æ°‘æ®è¯´è¢«ç§°ä¸ºåœ£äººä¸‰å· 1å·é€é¥å›½å¤– 2å· 4å· 
+														5å·ä¹Ÿå±é™© ä¸å…¥åœ°ç‹±è°å…¥ åŽ†ç»ƒä¸‹ä¹Ÿå¥½</font></div>
 													<font face="Verdana"><br>
 													</font><br>
 													</font><br>
-¡¡</td>
+ã€€</td>
 												</tr>
 											</table>
 											<br>
-¡¡</td>
+ã€€</td>
 										</tr>
 									</table>
 								</div>
@@ -52,7 +52,8 @@
 			</div>
 		</div>
 	</div>
-</div>
+</div><iframe MARGINWIDTH=0 MARGINHEIGHT=0 HSPACE=0 VSPACE=0 FRAMEBORDER=0 SCROLLING=no src="../scsl/footer.html" height=â€œautoâ€ width="100%"></iframe>
+
 
 </body>
 
