--- a/xyyd/gymb.htm
+++ b/xyyd/gymb.htm
@@ -1,8 +1,8 @@
 <html>
 
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=gb2312">
-<title>¸ðÒàÃñ±»ÎÞÊýÓÐÑªÐÔµÄÑ×»Æ×ÓËï¼à¿ØÖÐ</title>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<title>è‘›äº¦æ°‘è¢«æ— æ•°æœ‰è¡€æ€§çš„ç‚Žé»„å­å­™ç›‘æŽ§ä¸­</title>
 </head>
 
 <body>
@@ -26,19 +26,19 @@
 													<font style="FONT-SIZE: 9pt" face="Arial, Helvetica, sans-serif">
 													<div align="left">
 														<font face="Verdana">
-														¸ðÒàÃñ±»ÎÞÊýÓÐÑªÐÔµÄÑ×»Æ×ÓËï¼à¿ØÖÐ</font></div>
+														è‘›äº¦æ°‘è¢«æ— æ•°æœ‰è¡€æ€§çš„ç‚Žé»„å­å­™ç›‘æŽ§ä¸­</font></div>
 													<div align="left">
 														<font face="Verdana">
 														<br>
-														¸ðÒàÃñ£¬Ð°½Ì¼«¶Ë·Ý×Ó£¬ÒÔ»ù¶½Îª¿¿É½£¬³öÊéÀ­ÈËÆóÍ¼Á¢½Ì£¬±»ÎÞÊýÓÐÑªÐÔµÄÑ×»Æ×ÓËï¼à¿ØÖÐ</font></div>
+														è‘›äº¦æ°‘ï¼Œé‚ªæ•™æžç«¯ä»½å­ï¼Œä»¥åŸºç£ä¸ºé å±±ï¼Œå‡ºä¹¦æ‹‰äººä¼å›¾ç«‹æ•™ï¼Œè¢«æ— æ•°æœ‰è¡€æ€§çš„ç‚Žé»„å­å­™ç›‘æŽ§ä¸­</font></div>
 													<font face="Verdana"><br>
 													</font><br>
 													</font><br>
-¡¡</td>
+ã€€</td>
 												</tr>
 											</table>
 											<br>
-¡¡</td>
+ã€€</td>
 										</tr>
 									</table>
 								</div>
@@ -51,6 +51,7 @@
 		</div>
 	</div>
 </div>
+<iframe MARGINWIDTH=0 MARGINHEIGHT=0 HSPACE=0 VSPACE=0 FRAMEBORDER=0 SCROLLING=no src="../scsl/footer.html" height=â€œautoâ€ width="100%"></iframe>
 
 </body>
 
