--- a/xyyd/gymh.htm
+++ b/xyyd/gymh.htm
@@ -1,8 +1,8 @@
 <html>
 
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=gb2312">
-<title>@¸ðÒàÃñ »¹ÓÐÄÇÐ©Ê²Ã´@ÈýÒ»½Ì µÈµÈ</title>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<title>@è‘›äº¦æ°‘ è¿˜æœ‰é‚£äº›ä»€ä¹ˆ@ä¸‰ä¸€æ•™ ç­‰ç­‰</title>
 </head>
 
 <body>
@@ -10,25 +10,26 @@
 <p>
 <font style="FONT-SIZE: 12px" face="Arial, Helvetica, sans-serif" color="#538fc4">
 <a target="_blank" href="http://tieba.baidu.com/i/sys/jump?un=%B8%F0%D2%E0%C3%F1">
-@¸ðÒàÃñ</a></font><font style="FONT-SIZE: 12px" face="Arial, Helvetica, sans-serif" color="#555555"> 
-»¹ÓÐÄÇÐ©Ê²Ã´@ÈýÒ»½Ì µÈµÈ </font><br>
+@è‘›äº¦æ°‘</a></font><font style="FONT-SIZE: 12px" face="Arial, Helvetica, sans-serif" color="#555555"> 
+è¿˜æœ‰é‚£äº›ä»€ä¹ˆ@ä¸‰ä¸€æ•™ ç­‰ç­‰ </font><br>
 <font style="FONT-SIZE: 12px" face="Arial, Helvetica, sans-serif" color="#555555">
-ÈôÒªÍê³ÉÄãÃÇÓîÎÄµÄÊ¹Ãü£¬½ö½öÊÇÍ¨¹ýÒ»±¾Éñ¾­Á¬ÖÐ¹ú»ù¶½½Ì¶¼¸ã²»¶¨ºÎ¿öÎ÷·½ÓÐÊÆÁ¦µÄ»ù¶½</font><br>
+è‹¥è¦å®Œæˆä½ ä»¬å®‡æ–‡çš„ä½¿å‘½ï¼Œä»…ä»…æ˜¯é€šè¿‡ä¸€æœ¬ç¥žç»è¿žä¸­å›½åŸºç£æ•™éƒ½æžä¸å®šä½•å†µè¥¿æ–¹æœ‰åŠ¿åŠ›çš„åŸºç£</font><br>
 <font style="FONT-SIZE: 12px" face="Arial, Helvetica, sans-serif" color="#555555">
-ÓîÎÄ¾ÍÊÇÓîÖæÎÄÃ÷£¬ÊÀ¼äÕæ·¨</font><br>
+å®‡æ–‡å°±æ˜¯å®‡å®™æ–‡æ˜Žï¼Œä¸–é—´çœŸæ³•</font><br>
 <font style="FONT-SIZE: 12px" face="Arial, Helvetica, sans-serif" color="#555555">
-ÊÀ¼äÕæ·¨Î¨ÓÐÖÇ»ÛºÍÕæÇé£¬ÖªÊ¶</font><br>
+ä¸–é—´çœŸæ³•å”¯æœ‰æ™ºæ…§å’ŒçœŸæƒ…ï¼ŒçŸ¥è¯†</font><br>
 <font style="FONT-SIZE: 12px" face="Arial, Helvetica, sans-serif" color="#555555">
-Ò»±¾±¾ºÉÂíÊ·Ê«£¬óðÑÔ£¬»òÕßÖÜÀñµÈµÈÏÖ³ÉµÄµä¹ÊÍêÈ«ÄÜ¹»ÊÕÂ£ÃñÖÚ£¬Õ½Ê¤»ù¶½£¬·ð½Ì</font><br>
+ä¸€æœ¬æœ¬è·é©¬å²è¯—ï¼Œç®´è¨€ï¼Œæˆ–è€…å‘¨ç¤¼ç­‰ç­‰çŽ°æˆçš„å…¸æ•…å®Œå…¨èƒ½å¤Ÿæ”¶æ‹¢æ°‘ä¼—ï¼Œæˆ˜èƒœåŸºç£ï¼Œä½›æ•™</font><br>
 <font style="FONT-SIZE: 12px" face="Arial, Helvetica, sans-serif" color="#555555">
-¸üÖØÒªµÄÊÇ£¬ÄãÃÇÒªÕýÐÄÕýµÂ£¬¶àÑ§Ï°¡£</font><br>
+æ›´é‡è¦çš„æ˜¯ï¼Œä½ ä»¬è¦æ­£å¿ƒæ­£å¾·ï¼Œå¤šå­¦ä¹ ã€‚</font><br>
 <font style="FONT-SIZE: 12px" face="Arial, Helvetica, sans-serif" color="#555555">
-±ðÔÙÏñÒÔÇ°ÄÇÑùÌìÌìË¢ÆÁ</font><br>
+åˆ«å†åƒä»¥å‰é‚£æ ·å¤©å¤©åˆ·å±</font><br>
 <font style="FONT-SIZE: 12px" face="Arial, Helvetica, sans-serif" color="#555555">
-Òª³ÉÆøºòÖ»ÓÐÕÒ×¼ÓîÎÄµÄÊ¹ÃüºÍ·½Ïò£¬ÁªºÏÆðÀ´</font><br>
+è¦æˆæ°”å€™åªæœ‰æ‰¾å‡†å®‡æ–‡çš„ä½¿å‘½å’Œæ–¹å‘ï¼Œè”åˆèµ·æ¥</font><br>
 <font style="FONT-SIZE: 12px" face="Arial, Helvetica, sans-serif" color="#555555">
-²»È»£¬³öÁËÌõÌõ¿ò¿òZF¿É²»»á¹ÜÄãÃÇÕâÐ©</font><br>
-¡¡</p>
+ä¸ç„¶ï¼Œå‡ºäº†æ¡æ¡æ¡†æ¡†ZFå¯ä¸ä¼šç®¡ä½ ä»¬è¿™äº›</font><br>
+ã€€</p><iframe MARGINWIDTH=0 MARGINHEIGHT=0 HSPACE=0 VSPACE=0 FRAMEBORDER=0 SCROLLING=no src="../scsl/footer.html" height=â€œautoâ€ width="100%"></iframe>
+
 
 </body>
 
