--- a/xyyd/gyms.htm
+++ b/xyyd/gyms.htm
@@ -1,8 +1,8 @@
 <html>
 
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=gb2312">
-<title>¸ðÒàÃñÊÇ¸ÉÂïµÄ£¿
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<title>è‘›äº¦æ°‘æ˜¯å¹²å˜›çš„ï¼Ÿ
 
 </title>
 </head>
@@ -24,25 +24,25 @@
 											<td id="postmessage_163" class="t_f">
 											<p style="TEXT-ALIGN: left; LINE-HEIGHT: 18px">
 											<font face="Verdana" style="font-size: 12px; color: rgb(85,85,85)">
-											¸ðÒàÃñÊÇ¸ÉÂïµÄ£¿</font></p>
-											<p style="TEXT-ALIGN: left; LINE-HEIGHT: 18px">¡¡</p>
-											<p style="TEXT-ALIGN: left; LINE-HEIGHT: 18px">¡¡</p>
+											è‘›äº¦æ°‘æ˜¯å¹²å˜›çš„ï¼Ÿ</font></p>
+											<p style="TEXT-ALIGN: left; LINE-HEIGHT: 18px">ã€€</p>
+											<p style="TEXT-ALIGN: left; LINE-HEIGHT: 18px">ã€€</p>
 											<font style="font-size: 12px; color: rgb(85,85,85)" face="Verdana">
 											<div align="left">
 												<font face="Arial, Helvetica, sans-serif">
 												<br>
-												Õâ¸öÈË»ëÉíÉÏÏÂ³ä³â×ÅÉñ¹÷µÄÎ¶µÀ¡£»¹ÓÐÒ»°ïÐ¡Éñ¹÷·îËûÎªÉñ¡£</font></div>
+												è¿™ä¸ªäººæµ‘èº«ä¸Šä¸‹å……æ–¥ç€ç¥žæ£çš„å‘³é“ã€‚è¿˜æœ‰ä¸€å¸®å°ç¥žæ£å¥‰ä»–ä¸ºç¥žã€‚</font></div>
 											<div align="left">
 												<font face="Arial, Helvetica, sans-serif">
-												ÂèµÄ Õâ...<br>
-												ÀÏ×ÓÓÐÌì×öÁË¸öÃÎÈ»ºóÎÒÒ²³ÉÉñÁË¡£</font></div>
+												å¦ˆçš„ è¿™...<br>
+												è€å­æœ‰å¤©åšäº†ä¸ªæ¢¦ç„¶åŽæˆ‘ä¹Ÿæˆç¥žäº†ã€‚</font></div>
 											</font>
 											<p style="TEXT-ALIGN: left; LINE-HEIGHT: 18px">
 											<font face="Verdana" style="font-size: 12px; color: rgb(85,85,85)">
 											<br>
-											ÂÔŒÅÂÔŒÅ</font></p>
+											ç•¥å±Œç•¥å±Œ</font></p>
 											<br>
-¡¡</td>
+ã€€</td>
 										</tr>
 									</table>
 								</div>
@@ -55,6 +55,7 @@
 		</div>
 	</div>
 </div>
+<iframe MARGINWIDTH=0 MARGINHEIGHT=0 HSPACE=0 VSPACE=0 FRAMEBORDER=0 SCROLLING=no src="../scsl/footer.html" height=â€œautoâ€ width="100%"></iframe>
 
 </body>
 
