--- a/xyyd/gymx.htm
+++ b/xyyd/gymx.htm
@@ -1,17 +1,18 @@
 <html>
 
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=gb2312">
-<title>¸ðÒàÃñÐÂ¾­ÎÄ</title>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<title>è‘›äº¦æ°‘æ–°ç»æ–‡</title>
 </head>
 
 <body>
 
-<p><font style="FONT-SIZE: 9pt" face="Arial, Helvetica, sans-serif">¸ðÒàÃñÐÂ¾­ÎÄ<br>
+<p><font style="FONT-SIZE: 9pt" face="Arial, Helvetica, sans-serif">è‘›äº¦æ°‘æ–°ç»æ–‡<br>
 <br>
-Äã¿ÉÒÔÊÇ¸ö³¹µ×µÄÎÞÉñÂÛÕß£¬ÄãÒ²¿ÉÒÔÊÇ¸ö³¹µ×µÄË¼ÏëÕß£¬µ«Äã²»ÄÜÍ¬Ê±ÊÇ¸ö³¹µ×µÄÎÞÉñÂÛÕßºÍË¼ÏëÕß£¬ÒòÎªÕâÑùµÄÈËÔçÒÑ×ÔÉ±ÁË¡£</font><br>
+ä½ å¯ä»¥æ˜¯ä¸ªå½»åº•çš„æ— ç¥žè®ºè€…ï¼Œä½ ä¹Ÿå¯ä»¥æ˜¯ä¸ªå½»åº•çš„æ€æƒ³è€…ï¼Œä½†ä½ ä¸èƒ½åŒæ—¶æ˜¯ä¸ªå½»åº•çš„æ— ç¥žè®ºè€…å’Œæ€æƒ³è€…ï¼Œå› ä¸ºè¿™æ ·çš„äººæ—©å·²è‡ªæ€äº†ã€‚</font><br>
 <br>
-¡¡</p>
+ã€€</p>
+<iframe MARGINWIDTH=0 MARGINHEIGHT=0 HSPACE=0 VSPACE=0 FRAMEBORDER=0 SCROLLING=no src="../scsl/footer.html" height=â€œautoâ€ width="100%"></iframe>
 
 </body>
 
