--- a/xyyd/gymy.htm
+++ b/xyyd/gymy.htm
@@ -1,30 +1,31 @@
 <html>
 
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=gb2312">
-<title>¸ðÒàÃñÒ»ÌõÐÂÎÅÃëÉ±ÆäËûËùÎ½Ê¥ÈË</title>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<title>è‘›äº¦æ°‘ä¸€æ¡æ–°é—»ç§’æ€å…¶ä»–æ‰€è°“åœ£äºº</title>
 </head>
 
 <body>
 
 <p><font style="FONT-SIZE: 9pt" face="Arial, Helvetica, sans-serif">
-¸ðÒàÃñÒ»ÌõÐÂÎÅÃëÉ±ÆäËûËùÎ½Ê¥ÈË<br>
+è‘›äº¦æ°‘ä¸€æ¡æ–°é—»ç§’æ€å…¶ä»–æ‰€è°“åœ£äºº<br>
 <br>
 <br>
-·ÊÂÞÊÇ·ñ×ª»áÆËË·ÃÔÀë Ã×À¼»ÊÂí¾¿¾¹Ë­ÔÚËµ»Ñ<br>
+è‚¥ç½—æ˜¯å¦è½¬ä¼šæ‰‘æœ”è¿·ç¦» ç±³å…°çš‡é©¬ç©¶ç«Ÿè°åœ¨è¯´è°Ž<br>
 <font color="#538fc4">
 <a target="_blank" href="http://sports.163.com/06/0814/11/2OG0AQE500051CD5.html">
 http://sports.163.com/06/0814/11/2OG0AQE500051CD5.html</a></font><br>
-°²ÇÐÂåµÙÊÇÔÚÏÄ¼¾ÁªÈüÃ×À¼1£º0Õ½Ê¤Âí¾ºµÄÈüºóÃ½Ìå¼ûÃæ»áÉÏ×ö³öÉÏÊö±ÙÒ¥ÐÔÉùÃû<br>
+å®‰åˆ‡æ´›è’‚æ˜¯åœ¨å¤å­£è”èµ›ç±³å…°1ï¼š0æˆ˜èƒœé©¬ç«žçš„èµ›åŽåª’ä½“è§é¢ä¼šä¸Šåšå‡ºä¸Šè¿°è¾Ÿè°£æ€§å£°å<br>
 <br>
-µÄ£¬ÓÃËûµÄ»°½²£¬¡°¡¶Òâ´óÀûÌåÓý±¨¡·ºÍÆäËûÒâ´óÀû»òÕßÎ÷°àÑÀµÄ±¨Ö½Ò»Ñù£¬±Ï¾¹²»<br>
+çš„ï¼Œç”¨ä»–çš„è¯è®²ï¼Œâ€œã€Šæ„å¤§åˆ©ä½“è‚²æŠ¥ã€‹å’Œå…¶ä»–æ„å¤§åˆ©æˆ–è€…è¥¿ç­ç‰™çš„æŠ¥çº¸ä¸€æ ·ï¼Œæ¯•ç«Ÿä¸<br>
 <br>
-ÊÇ¡¶Ò®Ã·¾­¡·¡£¡±<br>
+æ˜¯ã€Šè€¶æ¢…ç»ã€‹ã€‚â€<br>
 <br>
 <br>
-£¨¡¶Ò®Ã·¾­¡·¼´¡¶Éñ¾­¡·£¬¸ðÒàÃñÖø×÷¡££©</font><br>
+ï¼ˆã€Šè€¶æ¢…ç»ã€‹å³ã€Šç¥žç»ã€‹ï¼Œè‘›äº¦æ°‘è‘—ä½œã€‚ï¼‰</font><br>
 <br>
-¡¡</p>
+ã€€</p><iframe MARGINWIDTH=0 MARGINHEIGHT=0 HSPACE=0 VSPACE=0 FRAMEBORDER=0 SCROLLING=no src="../scsl/footer.html" height=â€œautoâ€ width="100%"></iframe>
+
 
 </body>
 
