--- a/xyyd/gymyd.htm
+++ b/xyyd/gymyd.htm
@@ -1,8 +1,8 @@
 <html>
 
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=gb2312">
-<title>¸ðÒàÃñÒì¶Ë</title>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<title>è‘›äº¦æ°‘å¼‚ç«¯</title>
 </head>
 
 <body>
@@ -22,21 +22,21 @@
 											<td id="postmessage_116" class="t_f">
 											<p style="TEXT-ALIGN: left; LINE-HEIGHT: 18px">
 											<font face="Verdana" style="font-size: 12px; color: rgb(85,85,85)">
-											¸ðÒàÃñÒì¶Ë</font></p>
+											è‘›äº¦æ°‘å¼‚ç«¯</font></p>
 											<p style="TEXT-ALIGN: left; LINE-HEIGHT: 18px">
 											<font face="Verdana" style="font-size: 12px; color: rgb(85,85,85)">
 											<br>
-											Çë´ó¼ÒÈÏÇåÕâ¸ö×Ô³ÆÎª»ù¶½µÄ¼ÙÉñ, ÕûÌì¶¼ÔÚÒâÒù×Ô¼º¾ÍÊÇÉóÅÐÈÕµÄÖ÷, 
-											µ½´¦ÕÐÒ¡×²Æ­, »¹×ÔÈÏÎªºÜÓÐÈËÆø, ´¦´¦ÍáÇú&lt;Ê¥¾­&gt;µÄÉÏÌìÖ÷µÄ»°Óï, 
-											ÍýÏë³ÉÎªÒ®öÕ»ù¶½! 
-											ÒÔÎª¶ÁÁËN±é&lt;Ê¥¾­&gt;¾ÍÊÇ¿ÉÒÔ°Ñ×Ô¼ºÍ¬Ò®öÕ»ù¶½µÈÍ¬ÆðÀ´! 
-											»¹Ð´ÁËËùÎ½µÄ&lt;Éñ¾­&gt;À´ÃÔ»óÉñµÄÑ¡Ãñ! 
-											¾¹È»ÎÞ³Üµ½³ÆºôÉñÏÈÖªËùÐ´µÄ&lt;Ê¥¾­&gt;¿ÉÒÔ³ÆÎª&lt;Éñ¾­&gt;, 
-											¶øÇÒ³öÍþÏÅ±ðÈË,ÒªÖªµÀ±ðÈËÐÕÃû, Éí·ÝÖ¤ºÅ, µØÖ·, 
-											¼òÖ±µ½ÁËÎÞÒÔ¸´¼ÒµÄµØ²½, ÉõÖÁ»¹³ÉÁ¢ÁËËùÎ½µÄ¹²²úÖ÷Òå»ù¶½µ³, 
-											×Ô³ÆÎª¸Ãµ³µÄ´´°ìÈË, ×ÜÊé¼ÇµÈ.</font></p>
+											è¯·å¤§å®¶è®¤æ¸…è¿™ä¸ªè‡ªç§°ä¸ºåŸºç£çš„å‡ç¥ž, æ•´å¤©éƒ½åœ¨æ„æ·«è‡ªå·±å°±æ˜¯å®¡åˆ¤æ—¥çš„ä¸», 
+											åˆ°å¤„æ‹›æ‘‡æ’žéª—, è¿˜è‡ªè®¤ä¸ºå¾ˆæœ‰äººæ°”, å¤„å¤„æ­ªæ›²&lt;åœ£ç»&gt;çš„ä¸Šå¤©ä¸»çš„è¯è¯­, 
+											å¦„æƒ³æˆä¸ºè€¶ç¨£åŸºç£! 
+											ä»¥ä¸ºè¯»äº†Né&lt;åœ£ç»&gt;å°±æ˜¯å¯ä»¥æŠŠè‡ªå·±åŒè€¶ç¨£åŸºç£ç­‰åŒèµ·æ¥! 
+											è¿˜å†™äº†æ‰€è°“çš„&lt;ç¥žç»&gt;æ¥è¿·æƒ‘ç¥žçš„é€‰æ°‘! 
+											ç«Ÿç„¶æ— è€»åˆ°ç§°å‘¼ç¥žå…ˆçŸ¥æ‰€å†™çš„&lt;åœ£ç»&gt;å¯ä»¥ç§°ä¸º&lt;ç¥žç»&gt;, 
+											è€Œä¸”å‡ºå¨å“åˆ«äºº,è¦çŸ¥é“åˆ«äººå§“å, èº«ä»½è¯å·, åœ°å€, 
+											ç®€ç›´åˆ°äº†æ— ä»¥å¤å®¶çš„åœ°æ­¥, ç”šè‡³è¿˜æˆç«‹äº†æ‰€è°“çš„å…±äº§ä¸»ä¹‰åŸºç£å…š, 
+											è‡ªç§°ä¸ºè¯¥å…šçš„åˆ›åŠžäºº, æ€»ä¹¦è®°ç­‰.</font></p>
 											<br>
-¡¡</td>
+ã€€</td>
 										</tr>
 									</table>
 								</div>
@@ -49,6 +49,7 @@
 		</div>
 	</div>
 </div>
+<iframe MARGINWIDTH=0 MARGINHEIGHT=0 HSPACE=0 VSPACE=0 FRAMEBORDER=0 SCROLLING=no src="../scsl/footer.html" height=â€œautoâ€ width="100%"></iframe>
 
 </body>
 
