--- a/xyyd/mld.htm
+++ b/xyyd/mld.htm
@@ -1,43 +1,44 @@
 <html>
 
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=gb2312">
-<title>¡°ÃÀÀöµÄÈËÉú¡±MM¸ÕËÍÒ®Ã·µÄÊ«£º£©</title>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<title>â€œç¾Žä¸½çš„äººç”Ÿâ€MMåˆšé€è€¶æ¢…çš„è¯—ï¼šï¼‰</title>
 </head>
 
 <body>
 
 <p>
 <font style="FONT-SIZE: 12px" face="Arial, Helvetica, sans-serif" color="#555555">
-¡°ÃÀÀöµÄÈËÉú¡±MM¸ÕËÍÒ®Ã·µÄÊ«£º£©</font><br>
+â€œç¾Žä¸½çš„äººç”Ÿâ€MMåˆšé€è€¶æ¢…çš„è¯—ï¼šï¼‰</font><br>
 <font style="FONT-SIZE: 12px" face="Arial, Helvetica, sans-serif" color="#555555">
-Ê¥µ®¿ìÀÖÒà°²¿µ</font><br>
+åœ£è¯žå¿«ä¹äº¦å®‰åº·</font><br>
 <br>
 <font style="FONT-SIZE: 12px" face="Arial, Helvetica, sans-serif" color="#555555">
-Ò®öÕÉñÁéÖ¸·½Ïò</font><br>
+è€¶ç¨£ç¥žçµæŒ‡æ–¹å‘</font><br>
 <br>
 <font style="FONT-SIZE: 12px" face="Arial, Helvetica, sans-serif" color="#555555">
-Ã·»¨ÈýÐ¦´ºÀ´Ôç</font><br>
+æ¢…èŠ±ä¸‰ç¬‘æ˜¥æ¥æ—©</font><br>
 <br>
 <font style="FONT-SIZE: 12px" face="Arial, Helvetica, sans-serif" color="#555555">
-ÔÞ¸èÒ»ÇúÌìÌì³ª</font><br>
+èµžæ­Œä¸€æ›²å¤©å¤©å”±</font><br>
 <br>
 <br>
 <font style="FONT-SIZE: 12px" face="Arial, Helvetica, sans-serif" color="#555555">
-Ò»·ÖÖÓÒ»Ê×£º</font><br>
+ä¸€åˆ†é’Ÿä¸€é¦–ï¼š</font><br>
 <br>
 <font style="FONT-SIZE: 12px" face="Arial, Helvetica, sans-serif" color="#555555">
-Ê¥µîÖ®ÉÏÓÐÊ¥ÏÍ</font><br>
+åœ£æ®¿ä¹‹ä¸Šæœ‰åœ£è´¤</font><br>
 <br>
 <font style="FONT-SIZE: 12px" face="Arial, Helvetica, sans-serif" color="#555555">
-Ò®Ã·ÅóÓÑ²»¼òµ¥</font><br>
+è€¶æ¢…æœ‹å‹ä¸ç®€å•</font><br>
 <br>
 <font style="FONT-SIZE: 12px" face="Arial, Helvetica, sans-serif" color="#555555">
-Ã·Ô°·ç¹âÕæÃÀÃî</font><br>
+æ¢…å›­é£Žå…‰çœŸç¾Žå¦™</font><br>
 <br>
 <font style="FONT-SIZE: 12px" face="Arial, Helvetica, sans-serif" color="#555555">
-ºÃÎÄ´ó×÷ÁîÈËÔÞ</font><br>
-¡¡</p>
+å¥½æ–‡å¤§ä½œä»¤äººèµž</font><br>
+ã€€</p>
+<iframe MARGINWIDTH=0 MARGINHEIGHT=0 HSPACE=0 VSPACE=0 FRAMEBORDER=0 SCROLLING=no src="../scsl/footer.html" height=â€œautoâ€ width="100%"></iframe>
 
 </body>
 
