--- a/xyyd/mml.htm
+++ b/xyyd/mml.htm
@@ -1,69 +1,70 @@
 <html>
 
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=gb2312">
-<title>ºÃ¾ÃÃ»ÓÐºÍMMÁÄÌìÁË</title>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<title>å¥½ä¹…æ²¡æœ‰å’ŒMMèŠå¤©äº†</title>
 </head>
 
 <body>
 
-<p>ºÃ¾ÃÃ»ÓÐºÍMMÁÄÌìÁË<br>
+<p>å¥½ä¹…æ²¡æœ‰å’ŒMMèŠå¤©äº†<br>
 <br>
 <br>
-¥äÈÕ¹âÇã³Ç~¥¾&nbsp;&nbsp;10:07:00 <br>
-Éñ ÔÚÂð<br>
-¥äÈÕ¹âÇã³Ç~¥¾&nbsp;&nbsp;10:09:40 <br>
-ÔÚÂðÔÚÂð<br>
-¸ðÒàÃñ 10:40:30 <br>
-ÍíÉÏÁÄ<br>
-¥äÈÕ¹âÇã³Ç~¥¾&nbsp;&nbsp;10:40:47 <br>
-à¸<br>
+ãƒ¤æ—¥å…‰å€¾åŸŽ~ã‚¾&nbsp;&nbsp;10:07:00 <br>
+ç¥ž åœ¨å—<br>
+ãƒ¤æ—¥å…‰å€¾åŸŽ~ã‚¾&nbsp;&nbsp;10:09:40 <br>
+åœ¨å—åœ¨å—<br>
+è‘›äº¦æ°‘ 10:40:30 <br>
+æ™šä¸ŠèŠ<br>
+ãƒ¤æ—¥å…‰å€¾åŸŽ~ã‚¾&nbsp;&nbsp;10:40:47 <br>
+å–”<br>
 2013-08-15 <br>
-¥äÈÕ¹âÇã³Ç~¥¾&nbsp;&nbsp;9:48:11 <br>
-Éñ ×òÌìÍíÉÏÓÐÊÂ²»ÔÚ ÏÖÔÚÓÐÊ±¼äÂð¡£<br>
-¸ðÒàÃñ 10:02:13 <br>
-¼òµ¥ËµÏÂ<br>
-¥äÈÕ¹âÇã³Ç~¥¾&nbsp;&nbsp;10:02:47 <br>
-¡£¡£¾ÍÖ»Ïë±í´ïÒ»ÏÂ¶ÔÄãµÄ³ç°ÝÖ®Çé<br>
-¸ðÒàÃñ 10:03:11 <br>
-ÎÒÊÇÆÕÍ¨ÈË°¡£¬ÈËÈËÒ»Ñù<br>
-¥äÈÕ¹âÇã³Ç~¥¾&nbsp;&nbsp;10:03:27 <br>
-Äã²»ÊÇ¸ðÒËÃñÉñÂð£¬£¬<br>
-¸ðÒàÃñ 10:03:37 <br>
-ÊÇµÄ<br>
-¥äÈÕ¹âÇã³Ç~¥¾&nbsp;&nbsp;10:03:47 <br>
-ÄÇ²»¾Í²»ÆÕÍ¨ÁË<br>
-¸ðÒàÃñ 10:03:55 <br>
-Õâ¸öÉñ²»ÉñµÄ£¬Ëµ²»Çå<br>
-¥äÈÕ¹âÇã³Ç~¥¾&nbsp;&nbsp;10:04:10 <br>
-¡£¡£ÄÇÄãµ½µ×ÊÇ²»ÊÇÉñ£¿<br>
-¸ðÒàÃñ 10:04:19 <br>
-ÒòÎªÎÒÓÐÒìÏóºÍÊÔÁ¶£¬¹ÊÈç´ËËµ<br>
-¸ðÒàÃñ 10:04:33 <br>
-ÎÒÈÏÎªÎÒÊÇÉñ<br>
-¸ðÒàÃñ 10:04:38 <br>
-Ò²ÊÇÈË<br>
-¥äÈÕ¹âÇã³Ç~¥¾&nbsp;&nbsp;10:05:05 <br>
-¡£¡£ºÃÉî°Â<br>
-¸ðÒàÃñ 10:05:30 <br>
-ÎÒµÄÐÅÏ¢¶¼ÔÚÉñ¾­Àï<br>
-¸ðÒàÃñ 10:05:58 <br>
+ãƒ¤æ—¥å…‰å€¾åŸŽ~ã‚¾&nbsp;&nbsp;9:48:11 <br>
+ç¥ž æ˜¨å¤©æ™šä¸Šæœ‰äº‹ä¸åœ¨ çŽ°åœ¨æœ‰æ—¶é—´å—ã€‚<br>
+è‘›äº¦æ°‘ 10:02:13 <br>
+ç®€å•è¯´ä¸‹<br>
+ãƒ¤æ—¥å…‰å€¾åŸŽ~ã‚¾&nbsp;&nbsp;10:02:47 <br>
+ã€‚ã€‚å°±åªæƒ³è¡¨è¾¾ä¸€ä¸‹å¯¹ä½ çš„å´‡æ‹œä¹‹æƒ…<br>
+è‘›äº¦æ°‘ 10:03:11 <br>
+æˆ‘æ˜¯æ™®é€šäººå•Šï¼Œäººäººä¸€æ ·<br>
+ãƒ¤æ—¥å…‰å€¾åŸŽ~ã‚¾&nbsp;&nbsp;10:03:27 <br>
+ä½ ä¸æ˜¯è‘›å®œæ°‘ç¥žå—ï¼Œï¼Œ<br>
+è‘›äº¦æ°‘ 10:03:37 <br>
+æ˜¯çš„<br>
+ãƒ¤æ—¥å…‰å€¾åŸŽ~ã‚¾&nbsp;&nbsp;10:03:47 <br>
+é‚£ä¸å°±ä¸æ™®é€šäº†<br>
+è‘›äº¦æ°‘ 10:03:55 <br>
+è¿™ä¸ªç¥žä¸ç¥žçš„ï¼Œè¯´ä¸æ¸…<br>
+ãƒ¤æ—¥å…‰å€¾åŸŽ~ã‚¾&nbsp;&nbsp;10:04:10 <br>
+ã€‚ã€‚é‚£ä½ åˆ°åº•æ˜¯ä¸æ˜¯ç¥žï¼Ÿ<br>
+è‘›äº¦æ°‘ 10:04:19 <br>
+å› ä¸ºæˆ‘æœ‰å¼‚è±¡å’Œè¯•ç‚¼ï¼Œæ•…å¦‚æ­¤è¯´<br>
+è‘›äº¦æ°‘ 10:04:33 <br>
+æˆ‘è®¤ä¸ºæˆ‘æ˜¯ç¥ž<br>
+è‘›äº¦æ°‘ 10:04:38 <br>
+ä¹Ÿæ˜¯äºº<br>
+ãƒ¤æ—¥å…‰å€¾åŸŽ~ã‚¾&nbsp;&nbsp;10:05:05 <br>
+ã€‚ã€‚å¥½æ·±å¥¥<br>
+è‘›äº¦æ°‘ 10:05:30 <br>
+æˆ‘çš„ä¿¡æ¯éƒ½åœ¨ç¥žç»é‡Œ<br>
+è‘›äº¦æ°‘ 10:05:58 <br>
 <a target="_blank" href="http://www.godjiao.com/bbs/viewthread.php?tid=249&extra=page%3D11">
 http://www.godjiao.com/bbs/viewthread.php?tid=249&extra=page%3D1</a><br>
-¥äÈÕ¹âÇã³Ç~¥¾&nbsp;&nbsp;10:06:02 <br>
-ÓÐºÃ¶àÈËÖÊÒÉÄã ²»¹ýÎÒÏàÐÅ£¡<br>
-¸ðÒàÃñ 10:06:15 <br>
-ºÇ<br>
-¸ðÒàÃñ 10:06:30 <br>
-Ò®öÕ»¹±»¶¤ËÀÄØ<br>
-¸ðÒàÃñ 10:07:05 <br>
-ÕâÊÇ¸ðÒàÃñ°É<a target="_blank" href="http://tieba.baidu.com/f?kw=%B8%F0%D2%E0%C3%F1">http://tieba.baidu.com/f?kw=%B8%F0%D2%E0%C3%F1</a><br>
+ãƒ¤æ—¥å…‰å€¾åŸŽ~ã‚¾&nbsp;&nbsp;10:06:02 <br>
+æœ‰å¥½å¤šäººè´¨ç–‘ä½  ä¸è¿‡æˆ‘ç›¸ä¿¡ï¼<br>
+è‘›äº¦æ°‘ 10:06:15 <br>
+å‘µ<br>
+è‘›äº¦æ°‘ 10:06:30 <br>
+è€¶ç¨£è¿˜è¢«é’‰æ­»å‘¢<br>
+è‘›äº¦æ°‘ 10:07:05 <br>
+è¿™æ˜¯è‘›äº¦æ°‘å§<a target="_blank" href="http://tieba.baidu.com/f?kw=%B8%F0%D2%E0%C3%F1">http://tieba.baidu.com/f?kw=%B8%F0%D2%E0%C3%F1</a><br>
 &nbsp;&nbsp;10:09:14 <br>
-ÎÒÃÇÒÑ¾­ÊÇºÃÓÑÁË£¬ÏÖÔÚ¿ªÊ¼¶Ô»°°É£¡<br>
-¥äÈÕ¹âÇã³Ç~¥¾&nbsp;&nbsp;10:23:43 <br>
-¿´Íê¸ü³ç°ÝÄãÁË¡£¡£<br>
-¸ðÒàÃñ 11:00:57 <br>
-Ð»Ð»£¬ÎÒÉÏ°àÁË£¬8</p>
+æˆ‘ä»¬å·²ç»æ˜¯å¥½å‹äº†ï¼ŒçŽ°åœ¨å¼€å§‹å¯¹è¯å§ï¼<br>
+ãƒ¤æ—¥å…‰å€¾åŸŽ~ã‚¾&nbsp;&nbsp;10:23:43 <br>
+çœ‹å®Œæ›´å´‡æ‹œä½ äº†ã€‚ã€‚<br>
+è‘›äº¦æ°‘ 11:00:57 <br>
+è°¢è°¢ï¼Œæˆ‘ä¸Šç­äº†ï¼Œ8</p><iframe MARGINWIDTH=0 MARGINHEIGHT=0 HSPACE=0 VSPACE=0 FRAMEBORDER=0 SCROLLING=no src="../scsl/footer.html" height=â€œautoâ€ width="100%"></iframe>
+
 
 </body>
 
