--- a/xyyd/njs.htm
+++ b/xyyd/njs.htm
@@ -1,8 +1,8 @@
 <html>
 
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=gb2312">
-<title>Äã¾ÍÊÇ¸ðÒàÃñ°¡£¡ÃûÉùºÜÏìÁÁ°¡
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<title>ä½ å°±æ˜¯è‘›äº¦æ°‘å•Šï¼åå£°å¾ˆå“äº®å•Š
 
 </title>
 </head>
@@ -24,13 +24,13 @@
 											<td id="postmessage_126" class="t_f">
 											<p style="TEXT-ALIGN: left; LINE-HEIGHT: 18px">
 											<font face="Verdana" style="font-size: 12px; color: rgb(85,85,85)">
-											Äã¾ÍÊÇ¸ðÒàÃñ°¡£¡ÃûÉùºÜÏìÁÁ°¡</font></p>
-											<p style="TEXT-ALIGN: left; LINE-HEIGHT: 18px">¡¡</p>
+											ä½ å°±æ˜¯è‘›äº¦æ°‘å•Šï¼åå£°å¾ˆå“äº®å•Š</font></p>
+											<p style="TEXT-ALIGN: left; LINE-HEIGHT: 18px">ã€€</p>
 											<p style="TEXT-ALIGN: left; LINE-HEIGHT: 18px">
 											<font face="Verdana" style="font-size: 12px; color: rgb(85,85,85)">
-											Äã¾ÍÊÇ¸ðÒàÃñ°¡£¡ÃûÉùºÜÏìÁÁ°¡£¬¹þ¹þ£¡¿´ÄãµÄ¾ä×Ó£¬²ÅÈáÓÐÓà£¬¼áÍ¦²»×ã°¡£¡ÄÄÄÜÏó´«ËµÖÐµÄê¬¸¶ÖØÈÎÄØ¡£ÄÐÉúÅ®Ïà£¬¿ÉÒÔÈ¥Ð´Ð¡ËµÁË£¬ºÜº£ÅÉ°¡£¡Ï¸ÄåÈáÂü£¬ÐÂÆæÓÐÊ¶£¬º£ÉÏ»¨ÏµÁÐ¿Éºó¼ÌÓÐÈËÁË£¬¹þ¹þ£¡À¼¸ðÖ®Èõ£¬ºÎ×Ô¹ËÍÐ´ó£¬Æñ²»·ÏÉúÒ²ÔÕ£¿»¹Íû×ÔÌåÕäÖØ¡£</font></p>
+											ä½ å°±æ˜¯è‘›äº¦æ°‘å•Šï¼åå£°å¾ˆå“äº®å•Šï¼Œå“ˆå“ˆï¼çœ‹ä½ çš„å¥å­ï¼Œæ‰æŸ”æœ‰ä½™ï¼ŒåšæŒºä¸è¶³å•Šï¼å“ªèƒ½è±¡ä¼ è¯´ä¸­çš„æˆ¡ä»˜é‡ä»»å‘¢ã€‚ç”·ç”Ÿå¥³ç›¸ï¼Œå¯ä»¥åŽ»å†™å°è¯´äº†ï¼Œå¾ˆæµ·æ´¾å•Šï¼ç»†è…»æŸ”æ›¼ï¼Œæ–°å¥‡æœ‰è¯†ï¼Œæµ·ä¸ŠèŠ±ç³»åˆ—å¯åŽç»§æœ‰äººäº†ï¼Œå“ˆå“ˆï¼å…°è‘›ä¹‹å¼±ï¼Œä½•è‡ªé¡¾æ‰˜å¤§ï¼Œå²‚ä¸åºŸç”Ÿä¹Ÿå“‰ï¼Ÿè¿˜æœ›è‡ªä½“çé‡ã€‚</font></p>
 											<br>
-¡¡</td>
+ã€€</td>
 										</tr>
 									</table>
 								</div>
@@ -42,7 +42,8 @@
 			</div>
 		</div>
 	</div>
-</div>
+</div><iframe MARGINWIDTH=0 MARGINHEIGHT=0 HSPACE=0 VSPACE=0 FRAMEBORDER=0 SCROLLING=no src="../scsl/footer.html" height=â€œautoâ€ width="100%"></iframe>
+
 
 </body>
 
