--- a/xyyd/qsa.htm
+++ b/xyyd/qsa.htm
@@ -1,8 +1,8 @@
 <html>
 
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=gb2312">
-<title>ÆäÉî°Â³Ì¶ÈÓëÕÜÀíÐÔ£¬ÉõÖÁÄÜ¹»ºÍÊ¥¾­æÇÃÀ</title>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<title>å…¶æ·±å¥¥ç¨‹åº¦ä¸Žå“²ç†æ€§ï¼Œç”šè‡³èƒ½å¤Ÿå’Œåœ£ç»åª²ç¾Ž</title>
 </head>
 
 <body>
@@ -22,13 +22,13 @@
 											<td id="postmessage_234" class="t_f">
 											<p style="TEXT-ALIGN: left; LINE-HEIGHT: 18px">
 											<font face="Verdana" style="font-size: 12px; color: rgb(85,85,85)">
-											ÆäÉî°Â³Ì¶ÈÓëÕÜÀíÐÔ£¬ÉõÖÁÄÜ¹»ºÍÊ¥¾­æÇÃÀ</font></p>
+											å…¶æ·±å¥¥ç¨‹åº¦ä¸Žå“²ç†æ€§ï¼Œç”šè‡³èƒ½å¤Ÿå’Œåœ£ç»åª²ç¾Ž</font></p>
 											<p style="TEXT-ALIGN: left; LINE-HEIGHT: 18px">
 											<font face="Verdana" style="font-size: 12px; color: rgb(85,85,85)">
 											<br>
-											ÖÁÓÚÉñ½ÌÄÇ¸öÌû×Ó£¬ÄÇÊÇÖøÃûÍøÂç×Ú½Ì¼Ò£¬¸ðÒàÃñÉñÐ´µÄÒ»±¾¾­Êé£¬Ãû½ÐÉñ¾­¡£ÆäÉî°Â³Ì¶ÈÓëÕÜÀíÐÔ£¬ÉõÖÁÄÜ¹»ºÍÊ¥¾­æÇÃÀ¡£ÎÒÎªÁËÈÃCSOL°ÉµÄ°ÉÓÑÃÇ£¬¶¼ÄÜ¹»½«ÖÇ»ÛË®Æ½ºÍµÀµÂÐÞÑøÌá¸ßÒ»¸öË®×¼£¬ËùÒÔ²ÅÌØµØ×ª¹ýÀ´µÄ¡£</font></p>
+											è‡³äºŽç¥žæ•™é‚£ä¸ªå¸–å­ï¼Œé‚£æ˜¯è‘—åç½‘ç»œå®—æ•™å®¶ï¼Œè‘›äº¦æ°‘ç¥žå†™çš„ä¸€æœ¬ç»ä¹¦ï¼Œåå«ç¥žç»ã€‚å…¶æ·±å¥¥ç¨‹åº¦ä¸Žå“²ç†æ€§ï¼Œç”šè‡³èƒ½å¤Ÿå’Œåœ£ç»åª²ç¾Žã€‚æˆ‘ä¸ºäº†è®©CSOLå§çš„å§å‹ä»¬ï¼Œéƒ½èƒ½å¤Ÿå°†æ™ºæ…§æ°´å¹³å’Œé“å¾·ä¿®å…»æé«˜ä¸€ä¸ªæ°´å‡†ï¼Œæ‰€ä»¥æ‰ç‰¹åœ°è½¬è¿‡æ¥çš„ã€‚</font></p>
 											<br>
-¡¡</td>
+ã€€</td>
 										</tr>
 									</table>
 								</div>
@@ -40,7 +40,8 @@
 			</div>
 		</div>
 	</div>
-</div>
+</div><iframe MARGINWIDTH=0 MARGINHEIGHT=0 HSPACE=0 VSPACE=0 FRAMEBORDER=0 SCROLLING=no src="../scsl/footer.html" height=â€œautoâ€ width="100%"></iframe>
+
 
 </body>
 
