--- a/xyyd/wzw.htm
+++ b/xyyd/wzw.htm
@@ -1,8 +1,8 @@
 <html>
 
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=gb2312">
-<title>ÎÒÔÚÍøÂçÉÏ¿´µ½¸ðÒàÃñµÄÏñ</title>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<title>æˆ‘åœ¨ç½‘ç»œä¸Šçœ‹åˆ°è‘›äº¦æ°‘çš„åƒ</title>
 </head>
 
 <body>
@@ -26,12 +26,12 @@
 													<font style="FONT-SIZE: 9pt" face="Arial, Helvetica, sans-serif">
 													<div align="left">
 														<font face="Verdana">
-														ÎÒÔÚÍøÂçÉÏ¿´µ½¸ðÒàÃñµÄÏñ</font></div>
+														æˆ‘åœ¨ç½‘ç»œä¸Šçœ‹åˆ°è‘›äº¦æ°‘çš„åƒ</font></div>
 													<div align="left">
 														<font face="Verdana">
 														<br>
-														ËûµÄÑÛÉñºÜÓÄ¿Õ,Ò»¿´¾ÍÊÇ±»Ä§¹íÉîÉîµÄ¿ØÖÆÁË,Ï£ÍûÖÚµÜÐÖæ¢ÃÃÎªËûµ»¸æ¡£<br>
-¡¡</font></div>
+														ä»–çš„çœ¼ç¥žå¾ˆå¹½ç©º,ä¸€çœ‹å°±æ˜¯è¢«é­”é¬¼æ·±æ·±çš„æŽ§åˆ¶äº†,å¸Œæœ›ä¼—å¼Ÿå…„å§Šå¦¹ä¸ºä»–ç¥·å‘Šã€‚<br>
+ã€€</font></div>
 													</font></td>
 												</tr>
 											</table>
@@ -47,7 +47,8 @@
 			</div>
 		</div>
 	</div>
-</div>
+</div><iframe MARGINWIDTH=0 MARGINHEIGHT=0 HSPACE=0 VSPACE=0 FRAMEBORDER=0 SCROLLING=no src="../scsl/footer.html" height=â€œautoâ€ width="100%"></iframe>
+
 
 </body>
 
