--- a/xyyd/xzw.htm
+++ b/xyyd/xzw.htm
@@ -1,20 +1,21 @@
 <html>
 
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=gb2312">
-<title>я╟воч╠:кЦакё╛нр╡╩дэтыбВведЦцгак║ё</title>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<title>Е╞╩Г╢╚Х√┤:Г╝≈Д╨├О╪▄Ф┬▒Д╦█Х┐╫Е├█Г·▓Г²─Д╫═Д╩╛Д╨├Ц─┌</title>
 </head>
 
 <body>
 
-<p>я╟воч╠:кЦакё╛нр╡╩дэтыбВведЦцгак║ё<br>
+<p>Е╞╩Г╢╚Х√┤:Г╝≈Д╨├О╪▄Ф┬▒Д╦█Х┐╫Е├█Г·▓Г²─Д╫═Д╩╛Д╨├Ц─┌<br>
 <br>
 <br>
 <br>
-йгй╠╨Р╧╚╡╪вон╒й╔хк╣дуФй╣иМ╥щакё╛╡╩╢Мё╛╣дх╥тзлЫ╟июО║ё<br>
+Ф≤╞Ф≈╤Е─≥Е┘╛Е╦┐Г╢╚Е╬╝Е°ёД╨╨Г └Г°÷Е╝·Х╨╚Д╩╫Д╨├О╪▄Д╦█И■≥О╪▄Г └Г║╝Е°╗Х╢╢Е░╖И┤▄Ц─┌<br>
 <br>
 <br>
-к╚сПкдвЦ║╒хутбюЖлЛ------╦ПрЮцЯ</p>
+Е▐▄Г╬╫Е⌡⌡Х╤ЁЦ─│Ф≈╔Ф°┬Д╦╫Е╓╘------Х▒⌡Д╨╕Ф╟▒</p><iframe MARGINWIDTH=0 MARGINHEIGHT=0 HSPACE=0 VSPACE=0 FRAMEBORDER=0 SCROLLING=no src="../scsl/footer.html" height=Б─°autoБ─² width="100%"></iframe>
+
 
 </body>
 
