--- a/xyyd/ynzx.htm
+++ b/xyyd/ynzx.htm
@@ -1,16 +1,17 @@
 <html>
 
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=gb2312">
-<title>р╤аИвсои:╡╩╦р╦ъей║ёюо╦П©ийгтз╧З╪йиоспцШ╣д║ё</title>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<title>Е▐╤Г│╣Е╜░Д╩≥:Д╦█Ф∙╒И╚≤Ф■─Ц─┌Х─│Х▒⌡Е▐╞Ф≤╞Е°╗Е⌡╫И≥┘Д╦┼Ф°┴Е░█Г └Ц─┌</title>
 </head>
 
 <body>
 
-<p>р╤аИвсои:╡╩╦р╦ъей║ёюо╦П©ийгтз╧З╪йиоспцШ╣д║ё<br>
+<p>Е▐╤Г│╣Е╜░Д╩≥:Д╦█Ф∙╒И╚≤Ф■─Ц─┌Х─│Х▒⌡Е▐╞Ф≤╞Е°╗Е⌡╫И≥┘Д╦┼Ф°┴Е░█Г └Ц─┌<br>
 <br>
-дЦ©╢нрсп╪╦мРвж╣диЯ╬╜нййюбПё©<br>
-нрожтзр╙йгсп╦ПрЮцЯ╣дж╙цШ╤хё╛╨м╥шк©ё╛╬мхыпрак║ё</p>
+Д╫═Г°▀Ф┬▒Ф°┴Е┤═Д╦┤Е╜≈Г └Г╔·Г╩▐И≈╝Д╦√Е░≈О╪÷<br>
+Ф┬▒Г▌╟Е°╗Х╕│Ф≤╞Ф°┴Х▒⌡Д╨╕Ф╟▒Г └Г÷╔Е░█Е╨╕О╪▄Е▓▄Г╡┴Д╦²О╪▄Е╟╠Х█ёЕ╧╦Д╨├Ц─┌</p>
+<iframe MARGINWIDTH=0 MARGINHEIGHT=0 HSPACE=0 VSPACE=0 FRAMEBORDER=0 SCROLLING=no src="../scsl/footer.html" height=Б─°autoБ─² width="100%"></iframe>
 
 </body>
 
