--- a/xyyd/zgs.htm
+++ b/xyyd/zgs.htm
@@ -1,8 +1,8 @@
 <html>
 
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=gb2312">
-<title>Õû¸öÊÀ½çÔÚËûÑÛÀïËÆºõ¾ÍÊÇ¼¸ÐÐÎÄ×Ö</title>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<title>æ•´ä¸ªä¸–ç•Œåœ¨ä»–çœ¼é‡Œä¼¼ä¹Žå°±æ˜¯å‡ è¡Œæ–‡å­—</title>
 </head>
 
 <body>
@@ -26,20 +26,20 @@
 													<font style="FONT-SIZE: 9pt" face="Arial, Helvetica, sans-serif">
 													<div align="left">
 														<font face="Verdana">
-														Õû¸öÊÀ½çÔÚËûÑÛÀïËÆºõ¾ÍÊÇ¼¸ÐÐÎÄ×Ö</font></div>
+														æ•´ä¸ªä¸–ç•Œåœ¨ä»–çœ¼é‡Œä¼¼ä¹Žå°±æ˜¯å‡ è¡Œæ–‡å­—</font></div>
 													<div align="left">
 														<font face="Verdana">
 														<br>
-														ÄÇ¸ö¸ðÒàÃñËÆºõÓÐµãÉñÉñß¶ß¶µÄ£¬¹À¼ÆÊÇÒ»¸öÄªÃûÆäÃîµÄ¼Ò»ï¡£Õû¸öÊÀ½çÔÚËûÑÛÀïËÆºõ¾ÍÊÇ¼¸ÐÐÎÄ×Ö£¬ÕâÖÖÈËºÜ¿ÉÅÂ<br>
-¡¡</font></div>
+														é‚£ä¸ªè‘›äº¦æ°‘ä¼¼ä¹Žæœ‰ç‚¹ç¥žç¥žå¨å¨çš„ï¼Œä¼°è®¡æ˜¯ä¸€ä¸ªèŽ«åå…¶å¦™çš„å®¶ä¼™ã€‚æ•´ä¸ªä¸–ç•Œåœ¨ä»–çœ¼é‡Œä¼¼ä¹Žå°±æ˜¯å‡ è¡Œæ–‡å­—ï¼Œè¿™ç§äººå¾ˆå¯æ€•<br>
+ã€€</font></div>
 													<font face="Verdana"><br>
 													</font><br>
 													</font><br>
-¡¡</td>
+ã€€</td>
 												</tr>
 											</table>
 											<br>
-¡¡</td>
+ã€€</td>
 										</tr>
 									</table>
 								</div>
@@ -52,6 +52,7 @@
 		</div>
 	</div>
 </div>
+<iframe MARGINWIDTH=0 MARGINHEIGHT=0 HSPACE=0 VSPACE=0 FRAMEBORDER=0 SCROLLING=no src="../scsl/footer.html" height=â€œautoâ€ width="100%"></iframe>
 
 </body>
 
