--- a/xyyd/rry.htm
+++ b/xyyd/rry.htm
@@ -1,17 +1,18 @@
 <html>
 
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=gb2312">
-<title>ÈËÈôÒª¸ü¸ÄÉÏµÛµÄÃû×Ö,(¸ðÒàÃñ)»¹Òª±È(ºÎµÂÐû)¸ü¼ÓÊÊºÏ</title>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<title>äººè‹¥è¦æ›´æ”¹ä¸Šå¸çš„åå­—,(è‘›äº¦æ°‘)è¿˜è¦æ¯”(ä½•å¾·å®£)æ›´åŠ é€‚åˆ</title>
 </head>
 
 <body>
 
-<p>ÈËÈôÒª¸ü¸ÄÉÏµÛµÄÃû×Ö,(¸ðÒàÃñ)»¹Òª±È(ºÎµÂÐû)¸ü¼ÓÊÊºÏ<br>
+<p>äººè‹¥è¦æ›´æ”¹ä¸Šå¸çš„åå­—,(è‘›äº¦æ°‘)è¿˜è¦æ¯”(ä½•å¾·å®£)æ›´åŠ é€‚åˆ<br>
 <br>
 <br>
 <br>
-ÉÏµÛµÄÃû×Ö,²¢²»»á½Ð(ºÎµÂÐû)»ò(¸ðÒàÃñ) ÈËÈôÒª¸ü¸ÄÉÏµÛµÄÃû×Ö,(¸ðÒàÃñ)»¹Òª±È(ºÎµÂÐû)¸ü¼ÓÊÊºÏ¡£Â¥Ö÷,Çë¼Ç×¡ÉÏµÛÖ»ÓÐÒ»¸öÃû×Ö¡£¡£¡£( Ò®ºÍ»ª )¡£...</p>
+ä¸Šå¸çš„åå­—,å¹¶ä¸ä¼šå«(ä½•å¾·å®£)æˆ–(è‘›äº¦æ°‘) äººè‹¥è¦æ›´æ”¹ä¸Šå¸çš„åå­—,(è‘›äº¦æ°‘)è¿˜è¦æ¯”(ä½•å¾·å®£)æ›´åŠ é€‚åˆã€‚æ¥¼ä¸»,è¯·è®°ä½ä¸Šå¸åªæœ‰ä¸€ä¸ªåå­—ã€‚ã€‚ã€‚( è€¶å’ŒåŽ )ã€‚...</p><iframe MARGINWIDTH=0 MARGINHEIGHT=0 HSPACE=0 VSPACE=0 FRAMEBORDER=0 SCROLLING=no src="../scsl/footer.html" height=â€œautoâ€ width="100%"></iframe>
+
 
 </body>
 
