--- a/xyyd/sj3.htm
+++ b/xyyd/sj3.htm
@@ -1,21 +1,22 @@
 <html>
 
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=gb2312">
-<title>ÊÀ½çÈý·Ö£¡1ÊÇ¸ðÒàÃñ BY857159924</title>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<title>ä¸–ç•Œä¸‰åˆ†ï¼1æ˜¯è‘›äº¦æ°‘ BY857159924</title>
 </head>
 
 <body>
 
-<p><font style="FONT-SIZE: 9pt" face="Arial, Helvetica, sans-serif">ÊÀ½çÈý·Ö£¡1ÊÇ¸ðÒàÃñ 
+<p><font style="FONT-SIZE: 9pt" face="Arial, Helvetica, sans-serif">ä¸–ç•Œä¸‰åˆ†ï¼1æ˜¯è‘›äº¦æ°‘ 
 BY857159924 <br>
 <br>
 <br>
 <br>
-ÎÒµÄÅóÓÑ£¡Ò»Î»ÐÕÕÅµÄÒõÑôÈËËµ£¡ÊÀ½çÈý·Ö£¡1ÊÇ¸ðÒàÃñ£¬2ÊÇÂíÎ¿Çç£¬3Ëû×Ô¼º£¡´ú±íÈý·ÖÊÀ½ç£¡<br>
+æˆ‘çš„æœ‹å‹ï¼ä¸€ä½å§“å¼ çš„é˜´é˜³äººè¯´ï¼ä¸–ç•Œä¸‰åˆ†ï¼1æ˜¯è‘›äº¦æ°‘ï¼Œ2æ˜¯é©¬æ…°æ™´ï¼Œ3ä»–è‡ªå·±ï¼ä»£è¡¨ä¸‰åˆ†ä¸–ç•Œï¼<br>
 </font><br>
 <br>
-¡¡</p>
+ã€€</p><iframe MARGINWIDTH=0 MARGINHEIGHT=0 HSPACE=0 VSPACE=0 FRAMEBORDER=0 SCROLLING=no src="../scsl/footer.html" height=â€œautoâ€ width="100%"></iframe>
+
 
 </body>
 
