--- a/xyyd/sjx.htm
+++ b/xyyd/sjx.htm
@@ -1,8 +1,8 @@
 <html>
 
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=gb2312">
-<title>Éñ¾­ÏÂÃæÒª½â¾öÈËÀàÈý´ó±¾Ô´ÎÊÌâ</title>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<title>ç¥žç»ä¸‹é¢è¦è§£å†³äººç±»ä¸‰å¤§æœ¬æºé—®é¢˜</title>
 </head>
 
 <body>
@@ -22,19 +22,19 @@
 											<td id="postmessage_217" class="t_f">
 											<p style="TEXT-ALIGN: left; LINE-HEIGHT: 18px">
 											<font face="Verdana" style="font-size: 12px; color: rgb(85,85,85)">
-											Éñ¾­ÏÂÃæÒª½â¾öÈËÀàÈý´ó±¾Ô´ÎÊÌâ</font></p>
+											ç¥žç»ä¸‹é¢è¦è§£å†³äººç±»ä¸‰å¤§æœ¬æºé—®é¢˜</font></p>
 											<font style="font-size: 12px; color: rgb(85,85,85)" face="Arial, Helvetica, sans-serif">
-											<br>¸ðÒàÃñ<br>
+											<br>è‘›äº¦æ°‘<br>
 											<br>
 &nbsp;<br>
-											1¡¢2019ÄêÈ«ÇòÊµÏÖ¹²²úÖ÷Òå¡£</font><p style="TEXT-ALIGN: left; LINE-HEIGHT: 18px">
+											1ã€2019å¹´å…¨çƒå®žçŽ°å…±äº§ä¸»ä¹‰ã€‚</font><p style="TEXT-ALIGN: left; LINE-HEIGHT: 18px">
 											<font style="font-size: 12px; color: rgb(85,85,85)" face="Arial, Helvetica, sans-serif">
-											2¡¢ÉÏµÛÊÇË­£¿</font></p>
+											2ã€ä¸Šå¸æ˜¯è°ï¼Ÿ</font></p>
 											<p style="TEXT-ALIGN: left; LINE-HEIGHT: 18px">
 											<font style="font-size: 12px; color: rgb(85,85,85)" face="Arial, Helvetica, sans-serif">
-											3¡¢³¤Éú²»ÀÏ¡£</font></p>
+											3ã€é•¿ç”Ÿä¸è€ã€‚</font></p>
 											<br>
-¡¡</td>
+ã€€</td>
 										</tr>
 									</table>
 								</div>
@@ -46,7 +46,8 @@
 			</div>
 		</div>
 	</div>
-</div>
+</div><iframe MARGINWIDTH=0 MARGINHEIGHT=0 HSPACE=0 VSPACE=0 FRAMEBORDER=0 SCROLLING=no src="../scsl/footer.html" height=â€œautoâ€ width="100%"></iframe>
+
 
 </body>
 
