--- a/xyyd/spr.htm
+++ b/xyyd/spr.htm
@@ -1,8 +1,8 @@
 <html>
 
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=gb2312">
-<title>ÉóÅÐÈÕ É³±È ¶¥¶àËãÒ»¸ö»á´ßÃß¶ÔÐÄÀíÑÐ¾¿Í¸³¹µÄÉ³±È¶øÒÑ</title>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<title>å®¡åˆ¤æ—¥ æ²™æ¯” é¡¶å¤šç®—ä¸€ä¸ªä¼šå‚¬çœ å¯¹å¿ƒç†ç ”ç©¶é€å½»çš„æ²™æ¯”è€Œå·²</title>
 </head>
 
 <body>
@@ -22,13 +22,13 @@
 											<td id="postmessage_134" class="t_f">
 											<p style="TEXT-ALIGN: left; LINE-HEIGHT: 18px">
 											<font face="Verdana" style="font-size: 12px; color: rgb(85,85,85)">
-											ÉóÅÐÈÕ É³±È ¶¥¶àËãÒ»¸ö»á´ßÃß¶ÔÐÄÀíÑÐ¾¿Í¸³¹µÄÉ³±È¶øÒÑ</font></p>
-											<p style="TEXT-ALIGN: left; LINE-HEIGHT: 18px">¡¡</p>
+											å®¡åˆ¤æ—¥ æ²™æ¯” é¡¶å¤šç®—ä¸€ä¸ªä¼šå‚¬çœ å¯¹å¿ƒç†ç ”ç©¶é€å½»çš„æ²™æ¯”è€Œå·²</font></p>
+											<p style="TEXT-ALIGN: left; LINE-HEIGHT: 18px">ã€€</p>
 											<p style="TEXT-ALIGN: left; LINE-HEIGHT: 18px">
 											<font face="Verdana" style="font-size: 12px; color: rgb(85,85,85)">
-											»á´ßÃß ¶ÔÐÄÀíÑÐ¾¿±È½ÏÍ¸³¹ »òÕß¾«ÉñÄÜÁ¿½ÏÇ¿¶øÒÑµÄ ÌøÁºÐ¡³ó 
-											¾Í±»´µ³ÉÉñÁË Ô¶¹ÅÎÄÃ÷ÒòÎª¸¯°Ü¶éÂä ÄÐÅ®¹ØÏµ»ìÂÒ **²»¿°µÈµÈ ±»ÖÚÉñ 
-											Ãð¾øµÄ ¸ðÒàÃñ¾ÍÊÇ¸öÌøÁºÐ¡³ó ÃÉ±ÎÒ»Åú¿ÕÐé¼ÅÄ¯µÄ É³±È¶øÒÑ</font></td>
+											ä¼šå‚¬çœ  å¯¹å¿ƒç†ç ”ç©¶æ¯”è¾ƒé€å½» æˆ–è€…ç²¾ç¥žèƒ½é‡è¾ƒå¼ºè€Œå·²çš„ è·³æ¢å°ä¸‘ 
+											å°±è¢«å¹æˆç¥žäº† è¿œå¤æ–‡æ˜Žå› ä¸ºè…è´¥å •è½ ç”·å¥³å…³ç³»æ··ä¹± **ä¸å ªç­‰ç­‰ è¢«ä¼—ç¥ž 
+											ç­ç»çš„ è‘›äº¦æ°‘å°±æ˜¯ä¸ªè·³æ¢å°ä¸‘ è’™è”½ä¸€æ‰¹ç©ºè™šå¯‚å¯žçš„ æ²™æ¯”è€Œå·²</font></td>
 										</tr>
 									</table>
 								</div>
@@ -41,6 +41,7 @@
 		</div>
 	</div>
 </div>
+<iframe MARGINWIDTH=0 MARGINHEIGHT=0 HSPACE=0 VSPACE=0 FRAMEBORDER=0 SCROLLING=no src="../scsl/footer.html" height=â€œautoâ€ width="100%"></iframe>
 
 </body>
 
