--- a/xyyd/stx.htm
+++ b/xyyd/stx.htm
@@ -1,23 +1,24 @@
 <html>
 
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=gb2312">
-<title>Ê¹Í½¹â²Ê£º¸ðÒàÃñÉñ½ÌÑÏ¸ñÀ´Ëµ²¢²»ÊÇÊ²Ã´½ÌÅÉ£¬¶øÊÇÒ»ÖÖ¾«ÉñÌåÏÖ</title>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<title>ä½¿å¾’å…‰å½©ï¼šè‘›äº¦æ°‘ç¥žæ•™ä¸¥æ ¼æ¥è¯´å¹¶ä¸æ˜¯ä»€ä¹ˆæ•™æ´¾ï¼Œè€Œæ˜¯ä¸€ç§ç²¾ç¥žä½“çŽ°</title>
 </head>
 
 <body>
 
-<p>Ê¹Í½¹â²Ê£º¸ðÒàÃñÉñ½ÌÑÏ¸ñÀ´Ëµ²¢²»ÊÇÊ²Ã´½ÌÅÉ£¬¶øÊÇÒ»ÖÖ¾«ÉñÌåÏÖ<br>
+<p>ä½¿å¾’å…‰å½©ï¼šè‘›äº¦æ°‘ç¥žæ•™ä¸¥æ ¼æ¥è¯´å¹¶ä¸æ˜¯ä»€ä¹ˆæ•™æ´¾ï¼Œè€Œæ˜¯ä¸€ç§ç²¾ç¥žä½“çŽ°<br>
 <br>
 <br>
 <br>
-¸ðÒàÃñÉñ½ÌÑÏ¸ñÀ´Ëµ²¢²»ÊÇÊ²Ã´½ÌÅÉ£¬¶øÊÇÒ»ÖÖ¾«ÉñÌåÏÖ£¬ÓÐ×Å¹²Í¬Ä¿±êÓëÀíÏëµÄÈË¾Û¼¯¡£ <br>
+è‘›äº¦æ°‘ç¥žæ•™ä¸¥æ ¼æ¥è¯´å¹¶ä¸æ˜¯ä»€ä¹ˆæ•™æ´¾ï¼Œè€Œæ˜¯ä¸€ç§ç²¾ç¥žä½“çŽ°ï¼Œæœ‰ç€å…±åŒç›®æ ‡ä¸Žç†æƒ³çš„äººèšé›†ã€‚ <br>
 <br>
-ÊÇÒýÓÃ£¬µ«·Ç³­Ï®£¬¶øÊÇÎÒ¿´µ½µÄ¶«Î÷£¬Óë¸ðÒàÃñÖøÐ´µÄ¡¶Éñ¾­¡·ÖÐËù±í´ïµÄÄÚÈÝ£¬ÊµÔÚÊÇ²»Ä±¶øºÏ¡£Õâ×ãÒÔËµÃ÷£¬¡¶Éñ¾­¡·ÊµÔÚ°üÂÞÍòÏó£¬°üº¬°Ù¼Ò¾«Ëè¡£ <br>
+æ˜¯å¼•ç”¨ï¼Œä½†éžæŠ„è¢­ï¼Œè€Œæ˜¯æˆ‘çœ‹åˆ°çš„ä¸œè¥¿ï¼Œä¸Žè‘›äº¦æ°‘è‘—å†™çš„ã€Šç¥žç»ã€‹ä¸­æ‰€è¡¨è¾¾çš„å†…å®¹ï¼Œå®žåœ¨æ˜¯ä¸è°‹è€Œåˆã€‚è¿™è¶³ä»¥è¯´æ˜Žï¼Œã€Šç¥žç»ã€‹å®žåœ¨åŒ…ç½—ä¸‡è±¡ï¼ŒåŒ…å«ç™¾å®¶ç²¾é«“ã€‚ <br>
 <br>
 <br>
 <br>
-¿É¼û,´«½ÌÊÇÒ»¼þ¹â»ÔºÍÈÙÒ«µÄÊÂÇé,Äã×èÖ¹ÎÒ´«½Ì,¾ÍµÈÓÚÓëÀúÊ·×ö¶Ô,ÓëÌìÏÂÈËÃñ×ö¶Ô,×èÄÓËûÃÇÍ¶Ïò¸ðÒàÃñÉñµÄ»³±§,ÄãÖªµÀÃ´?</p>
+å¯è§,ä¼ æ•™æ˜¯ä¸€ä»¶å…‰è¾‰å’Œè£è€€çš„äº‹æƒ…,ä½ é˜»æ­¢æˆ‘ä¼ æ•™,å°±ç­‰äºŽä¸ŽåŽ†å²åšå¯¹,ä¸Žå¤©ä¸‹äººæ°‘åšå¯¹,é˜»æŒ ä»–ä»¬æŠ•å‘è‘›äº¦æ°‘ç¥žçš„æ€€æŠ±,ä½ çŸ¥é“ä¹ˆ?</p><iframe MARGINWIDTH=0 MARGINHEIGHT=0 HSPACE=0 VSPACE=0 FRAMEBORDER=0 SCROLLING=no src="../scsl/footer.html" height=â€œautoâ€ width="100%"></iframe>
+
 
 </body>
 
