--- a/xyyd/syn.htm
+++ b/xyyd/syn.htm
@@ -1,8 +1,8 @@
 <html>
 
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=gb2312">
-<title>ËùÒÔÄÇ¸ö¸ðÒàÃñ¾Í·è¿ñµÄÌùÌû×ÓÐû´«ËûµÄË¼Ïë</title>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<title>æ‰€ä»¥é‚£ä¸ªè‘›äº¦æ°‘å°±ç–¯ç‹‚çš„è´´å¸–å­å®£ä¼ ä»–çš„æ€æƒ³</title>
 </head>
 
 <body>
@@ -26,23 +26,23 @@
 													<font style="FONT-SIZE: 9pt" face="Arial, Helvetica, sans-serif">
 													<div align="left">
 														<font face="Verdana">
-														ËùÒÔÄÇ¸ö¸ðÒàÃñ¾Í·è¿ñµÄÌùÌû×ÓÐû´«ËûµÄË¼Ïë</font></div>
+														æ‰€ä»¥é‚£ä¸ªè‘›äº¦æ°‘å°±ç–¯ç‹‚çš„è´´å¸–å­å®£ä¼ ä»–çš„æ€æƒ³</font></div>
 													<div align="left">
-¡¡</div>
+ã€€</div>
 													<div align="left">
 														<font face="Verdana">
-														Ê¥ÈËµÄÇóÖÎË¼ÏëÊÇ×îÖØÒªµÄ£¬ËùÒÔÄÇ¸ö¸ðÒàÃñ¾Í·è¿ñµÄÌùÌû×ÓÐû´«ËûµÄË¼Ïë¡£Èç¹ûÓÐÒ»ÌìÓÐÔ¤ÑÔËµÐÐ¶¯ÊÇÖØÒªµÄ£¬¹À¼ÆËû»áÕûÌì¸ã±©¶¯<br>
-														¸÷·½ÊÆÁ¦¶¼ÓÐ¸´ÖÆ°¡£¡¸ðÒàÃñ²»ÊÇÂð£¿£¨ÔªÏµÉñÎÞ¼«µÄÊ¹Õß£¬ÅÑÍ½£¬ÁíÒ»ÖØÉí·ÝÒÉËÆÈöµ©£©ÀîÂÖÖÁÒ²ÊÇ°¡£¡<br>
-														ÎÒ¼ÇµÃÏÖÔÚµÄÇàÁ«£¬¿ä¹ýÐ¡¸ðºÍËÄÍÞ¿ÉÒÔµ±×ÏÊ¥£¬¼Ç²»ÇåÁË£¬ºÃÏñÓÐÕâÊÂ<br>
-¡¡</font></div>
+														åœ£äººçš„æ±‚æ²»æ€æƒ³æ˜¯æœ€é‡è¦çš„ï¼Œæ‰€ä»¥é‚£ä¸ªè‘›äº¦æ°‘å°±ç–¯ç‹‚çš„è´´å¸–å­å®£ä¼ ä»–çš„æ€æƒ³ã€‚å¦‚æžœæœ‰ä¸€å¤©æœ‰é¢„è¨€è¯´è¡ŒåŠ¨æ˜¯é‡è¦çš„ï¼Œä¼°è®¡ä»–ä¼šæ•´å¤©æžæš´åŠ¨<br>
+														å„æ–¹åŠ¿åŠ›éƒ½æœ‰å¤åˆ¶å•Šï¼è‘›äº¦æ°‘ä¸æ˜¯å—ï¼Ÿï¼ˆå…ƒç³»ç¥žæ— æžçš„ä½¿è€…ï¼Œå›å¾’ï¼Œå¦ä¸€é‡èº«ä»½ç–‘ä¼¼æ’’æ—¦ï¼‰æŽè½®è‡³ä¹Ÿæ˜¯å•Šï¼<br>
+														æˆ‘è®°å¾—çŽ°åœ¨çš„é’èŽ²ï¼Œå¤¸è¿‡å°è‘›å’Œå››å¨ƒå¯ä»¥å½“ç´«åœ£ï¼Œè®°ä¸æ¸…äº†ï¼Œå¥½åƒæœ‰è¿™äº‹<br>
+ã€€</font></div>
 													<font face="Verdana"><br>
 													</font><br>
 													</font><br>
-¡¡</td>
+ã€€</td>
 												</tr>
 											</table>
 											<br>
-¡¡</td>
+ã€€</td>
 										</tr>
 									</table>
 								</div>
@@ -54,7 +54,8 @@
 			</div>
 		</div>
 	</div>
-</div>
+</div><iframe MARGINWIDTH=0 MARGINHEIGHT=0 HSPACE=0 VSPACE=0 FRAMEBORDER=0 SCROLLING=no src="../scsl/footer.html" height=â€œautoâ€ width="100%"></iframe>
+
 
 </body>
 
