--- a/xyyd/tgw.htm
+++ b/xyyd/tgw.htm
@@ -1,8 +1,8 @@
 <html>
 
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=gb2312">
-<title>Í¨¸æ£ºÎÒÃÇ²»¹òÈÎºÎÈË£¬°üÀ¨Éñ£¬ÎÒÃÇÓëÉÏµÛÆ½µÈ</title>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<title>é€šå‘Šï¼šæˆ‘ä»¬ä¸è·ªä»»ä½•äººï¼ŒåŒ…æ‹¬ç¥žï¼Œæˆ‘ä»¬ä¸Žä¸Šå¸å¹³ç­‰</title>
 <style type="text/css">
 .style1 {
 	font-family: Arial, Helvetica, sans-serif;
@@ -16,20 +16,21 @@
 
 <p>
 <font style="FONT-SIZE: 12px" face="Arial, Helvetica, sans-serif" color="#555555">
-Í¨¸æ£ºÎÒÃÇ²»¹òÈÎºÎÈË£¬°üÀ¨Éñ£¬ÎÒÃÇÓëÉÏµÛÆ½µÈ</font><br>
+é€šå‘Šï¼šæˆ‘ä»¬ä¸è·ªä»»ä½•äººï¼ŒåŒ…æ‹¬ç¥žï¼Œæˆ‘ä»¬ä¸Žä¸Šå¸å¹³ç­‰</font><br>
 <br>
 <br>
 <font style="FONT-SIZE: 12px" face="Arial, Helvetica, sans-serif" color="#555555">
-ÎÒÃÇ³ÐÈÏÎÒÃÇµÄÄÜÁ¦Ô¶Ô¶²»¼°ÉÏµÛ£¬ËûÊÇÔìÎïÖ÷</font><br>
+æˆ‘ä»¬æ‰¿è®¤æˆ‘ä»¬çš„èƒ½åŠ›è¿œè¿œä¸åŠä¸Šå¸ï¼Œä»–æ˜¯é€ ç‰©ä¸»</font><br>
 <font style="FONT-SIZE: 12px" face="Arial, Helvetica, sans-serif" color="#555555">
-µ«ËûÐèÒªÎÒÃÇºÏ×÷</font><br>
+ä½†ä»–éœ€è¦æˆ‘ä»¬åˆä½œ</font><br>
 <font style="FONT-SIZE: 12px" face="Arial, Helvetica, sans-serif" color="#555555">
-ÎÒÃÇÔ¸Òâ³ÉÎªÉÏµÛÆ½µÈµÄºÏ×÷Õß</font><br>
+æˆ‘ä»¬æ„¿æ„æˆä¸ºä¸Šå¸å¹³ç­‰çš„åˆä½œè€…</font><br>
 <font style="FONT-SIZE: 12px" face="Arial, Helvetica, sans-serif" color="#555555">
-¹²´´ÈËÀàÐÒ¸£</font></p>
+å…±åˆ›äººç±»å¹¸ç¦</font></p>
 <p>
-<span class="style1">¸ðÒàÃñ¡£</span><br>
-¡¡</p>
+<span class="style1">è‘›äº¦æ°‘ã€‚</span><br>
+ã€€</p>
+<iframe MARGINWIDTH=0 MARGINHEIGHT=0 HSPACE=0 VSPACE=0 FRAMEBORDER=0 SCROLLING=no src="../scsl/footer.html" height=â€œautoâ€ width="100%"></iframe>
 
 </body>
 
