--- a/xyyd/wlsc.htm
+++ b/xyyd/wlsc.htm
@@ -1,8 +1,8 @@
 <html>
 
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=gb2312">
-<title>ÍøÂçÉÏ³öÏÖÁËÒ»¸ö½Ð¸ðÒàÃñµÄÈËÐû³Æ×Ô¼º½ÓÊÜÉñÃü³ÉÎª»ù¶½µÚ¶þ</title>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<title>ç½‘ç»œä¸Šå‡ºçŽ°äº†ä¸€ä¸ªå«è‘›äº¦æ°‘çš„äººå®£ç§°è‡ªå·±æŽ¥å—ç¥žå‘½æˆä¸ºåŸºç£ç¬¬äºŒ</title>
 </head>
 
 <body>
@@ -22,12 +22,12 @@
 											<td id="postmessage_226" class="t_f">
 											<p style="TEXT-ALIGN: left; LINE-HEIGHT: 18px">
 											<font face="Verdana" style="font-size: 12px; color: rgb(85,85,85)">
-											ÍøÂçÉÏ³öÏÖÁËÒ»¸ö½Ð¸ðÒàÃñµÄÈËÐû³Æ×Ô¼º½ÓÊÜÉñÃü³ÉÎª»ù¶½µÚ¶þ</font></p>
+											ç½‘ç»œä¸Šå‡ºçŽ°äº†ä¸€ä¸ªå«è‘›äº¦æ°‘çš„äººå®£ç§°è‡ªå·±æŽ¥å—ç¥žå‘½æˆä¸ºåŸºç£ç¬¬äºŒ</font></p>
 											<p style="TEXT-ALIGN: left; LINE-HEIGHT: 18px">
 											<font face="Verdana" style="font-size: 12px; color: rgb(85,85,85)">
-											ÍøÂçÉÏ³öÏÖÁËÒ»¸ö½Ð¸ðÒàÃñµÄÈËÐû³Æ×Ô¼º½ÓÊÜÉñÃü³ÉÎª»ù¶½µÚ¶þ£¬²¢µ·¹Ä³öÒ»²¿½«»ù¶½½ÌºÍ¹²²úÖ÷Òå»ìºÏ³ÉËùÎ½»ù¶½½Ì¹²²úÖ÷ÒåµÄ¡¶¸ðÒàÃñ¾­¡·¡£ÀúÊ·ÉÏ»ù¶½½ÌÐÅÍ½ÖÐÃ°³öµÄ×Ô³Æ×Ô¼ºÊÇÃÖÈüÑÇ¼´¾ÈÊÀÖ÷µÄÈË¸üÊÇÓÐ¼¸°ÙÈËÖ®¶à.</font></p>
+											ç½‘ç»œä¸Šå‡ºçŽ°äº†ä¸€ä¸ªå«è‘›äº¦æ°‘çš„äººå®£ç§°è‡ªå·±æŽ¥å—ç¥žå‘½æˆä¸ºåŸºç£ç¬¬äºŒï¼Œå¹¶æ£é¼“å‡ºä¸€éƒ¨å°†åŸºç£æ•™å’Œå…±äº§ä¸»ä¹‰æ··åˆæˆæ‰€è°“åŸºç£æ•™å…±äº§ä¸»ä¹‰çš„ã€Šè‘›äº¦æ°‘ç»ã€‹ã€‚åŽ†å²ä¸ŠåŸºç£æ•™ä¿¡å¾’ä¸­å†’å‡ºçš„è‡ªç§°è‡ªå·±æ˜¯å¼¥èµ›äºšå³æ•‘ä¸–ä¸»çš„äººæ›´æ˜¯æœ‰å‡ ç™¾äººä¹‹å¤š.</font></p>
 											<br>
-¡¡</td>
+ã€€</td>
 										</tr>
 									</table>
 								</div>
@@ -39,7 +39,8 @@
 			</div>
 		</div>
 	</div>
-</div>
+</div><iframe MARGINWIDTH=0 MARGINHEIGHT=0 HSPACE=0 VSPACE=0 FRAMEBORDER=0 SCROLLING=no src="../scsl/footer.html" height=â€œautoâ€ width="100%"></iframe>
+
 
 </body>
 
