--- a/xyyd/wsgy.htm
+++ b/xyyd/wsgy.htm
@@ -1,8 +1,8 @@
 <html>
 
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=gb2312">
-<title>ÎÒÉñ¸ðÒàÃñ»ëÉíÉ¢·¢µÄ°ÔÆø²ÅÄÜËã×ö¿Ø³¡</title>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<title>æˆ‘ç¥žè‘›äº¦æ°‘æµ‘èº«æ•£å‘çš„éœ¸æ°”æ‰èƒ½ç®—åšæŽ§åœº</title>
 </head>
 
 <body>
@@ -22,13 +22,13 @@
 											<td id="postmessage_174" class="t_f">
 											<p style="TEXT-ALIGN: left; LINE-HEIGHT: 18px">
 											<font face="Verdana" style="font-size: 12px; color: rgb(85,85,85)">
-											ÎÒÉñ¸ðÒàÃñ»ëÉíÉ¢·¢µÄ°ÔÆø²ÅÄÜËã×ö¿Ø³¡</font></p>
+											æˆ‘ç¥žè‘›äº¦æ°‘æµ‘èº«æ•£å‘çš„éœ¸æ°”æ‰èƒ½ç®—åšæŽ§åœº</font></p>
 											<p style="TEXT-ALIGN: left; LINE-HEIGHT: 18px">
 											<font face="Verdana" style="font-size: 12px; color: rgb(85,85,85)">
 											<br>
-											ÕâÖÖÂµÂµÎÞÎªÖ®±²Ò²¸Ò×Ô³Æ¿Ø³¡£¿ÎÒÉñ¸ðÒàÃñ»ëÉíÉ¢·¢µÄ°ÔÆø²ÅÄÜËã×ö¿Ø³¡</font></p>
+											è¿™ç§ç¢Œç¢Œæ— ä¸ºä¹‹è¾ˆä¹Ÿæ•¢è‡ªç§°æŽ§åœºï¼Ÿæˆ‘ç¥žè‘›äº¦æ°‘æµ‘èº«æ•£å‘çš„éœ¸æ°”æ‰èƒ½ç®—åšæŽ§åœº</font></p>
 											<br>
-¡¡</td>
+ã€€</td>
 										</tr>
 									</table>
 								</div>
@@ -40,7 +40,8 @@
 			</div>
 		</div>
 	</div>
-</div>
+</div><iframe MARGINWIDTH=0 MARGINHEIGHT=0 HSPACE=0 VSPACE=0 FRAMEBORDER=0 SCROLLING=no src="../scsl/footer.html" height=â€œautoâ€ width="100%"></iframe>
+
 
 </body>
 
