--- a/xyyd/wss.htm
+++ b/xyyd/wss.htm
@@ -1,136 +1,137 @@
 <html>
 
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=gb2312">
-<title>ÍøÉÏËùÖ¸µÄÒ®Ã·¾­£¬ÊÇÖ¸Ê¥¾­°É£¿</title>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<title>ç½‘ä¸Šæ‰€æŒ‡çš„è€¶æ¢…ç»ï¼Œæ˜¯æŒ‡åœ£ç»å§ï¼Ÿ</title>
 </head>
 
 <body>
 
 <p>
 <font style="FONT-SIZE: 12px" face="Arial, Helvetica, sans-serif" color="#555555">
-ÍøÉÏËùÖ¸µÄÒ®Ã·¾­£¬ÊÇÖ¸Ê¥¾­°É£¿</font><br>
+ç½‘ä¸Šæ‰€æŒ‡çš„è€¶æ¢…ç»ï¼Œæ˜¯æŒ‡åœ£ç»å§ï¼Ÿ</font><br>
 <br>
 <font style="FONT-SIZE: 12px" face="Arial, Helvetica, sans-serif" color="#555555">
-¡ùÖÐÈA¤ÎÒ¼·¬¡ü 19:32:46 </font><br>
+â€»ä¸­è¯ã®å£¹ç•ªâ†‘ 19:32:46 </font><br>
 <font style="FONT-SIZE: 12px" face="Arial, Helvetica, sans-serif" color="#555555">
-¡¶Òâ´óÀûÌåÓý±¨¡·±Ï¾¹²»ÊÇ¡¶Éñ¾­¡·£¿£¿ </font><br>
+ã€Šæ„å¤§åˆ©ä½“è‚²æŠ¥ã€‹æ¯•ç«Ÿä¸æ˜¯ã€Šç¥žç»ã€‹ï¼Ÿï¼Ÿ </font><br>
 <font style="FONT-SIZE: 12px" face="Arial, Helvetica, sans-serif" color="#555555">
-Éñ½Ì 19:33:04 </font><br>
+ç¥žæ•™ 19:33:04 </font><br>
 <font style="FONT-SIZE: 12px" face="Arial, Helvetica, sans-serif" color="#555555">
-Ò»¸öÐÂÎÅ </font><br>
+ä¸€ä¸ªæ–°é—» </font><br>
 <font style="FONT-SIZE: 12px" face="Arial, Helvetica, sans-serif" color="#555555">
-¡ùÖÐÈA¤ÎÒ¼·¬¡ü 19:33:28 </font><br>
+â€»ä¸­è¯ã®å£¹ç•ªâ†‘ 19:33:28 </font><br>
 <font style="FONT-SIZE: 12px" face="Arial, Helvetica, sans-serif" color="#555555">
-ÓÐÍøÖ·Âð£¿ </font><br>
+æœ‰ç½‘å€å—ï¼Ÿ </font><br>
 <font style="FONT-SIZE: 12px" face="Arial, Helvetica, sans-serif" color="#555555">
-Éñ½Ì 19:34:46 </font><br>
+ç¥žæ•™ 19:34:46 </font><br>
 <font style="FONT-SIZE: 12px" face="Arial, Helvetica, sans-serif" color="#538fc4">
 <a target="_blank" href="http://sports.163.com/06/0814/11/2OG0AQE500051CD5.html">
 http://sports.163.com/06/0814/11/2OG0AQE500051CD5.html</a></font><font style="FONT-SIZE: 12px" face="Arial, Helvetica, sans-serif" color="#555555">
 </font><br>
 <font style="FONT-SIZE: 12px" face="Arial, Helvetica, sans-serif" color="#555555">
-Éñ½Ì 19:34:59 </font><br>
+ç¥žæ•™ 19:34:59 </font><br>
 <font style="FONT-SIZE: 12px" face="Arial, Helvetica, sans-serif" color="#555555">
-°²ÇÐÂåµÙÊÇÔÚÏÄ¼¾ÁªÈüÃ×À¼1£º0Õ½Ê¤Âí¾ºµÄÈüºóÃ½Ìå¼ûÃæ»áÉÏ×ö³öÉÏÊö±ÙÒ¥ÐÔÉùÃûµÄ£¬ÓÃËûµÄ»°½²£¬¡°¡¶Òâ´óÀûÌåÓý±¨¡·ºÍÆäËûÒâ´óÀû»òÕßÎ÷°àÑÀµÄ±¨Ö½Ò»Ñù£¬±Ï¾¹²»ÊÇ¡¶Ò®Ã·¾­¡·¡£¡±
+å®‰åˆ‡æ´›è’‚æ˜¯åœ¨å¤å­£è”èµ›ç±³å…°1ï¼š0æˆ˜èƒœé©¬ç«žçš„èµ›åŽåª’ä½“è§é¢ä¼šä¸Šåšå‡ºä¸Šè¿°è¾Ÿè°£æ€§å£°åçš„ï¼Œç”¨ä»–çš„è¯è®²ï¼Œâ€œã€Šæ„å¤§åˆ©ä½“è‚²æŠ¥ã€‹å’Œå…¶ä»–æ„å¤§åˆ©æˆ–è€…è¥¿ç­ç‰™çš„æŠ¥çº¸ä¸€æ ·ï¼Œæ¯•ç«Ÿä¸æ˜¯ã€Šè€¶æ¢…ç»ã€‹ã€‚â€
 </font><br>
 <font style="FONT-SIZE: 12px" face="Arial, Helvetica, sans-serif" color="#555555">
-¡ùÖÐÈA¤ÎÒ¼·¬¡ü 19:36:40 </font><br>
+â€»ä¸­è¯ã®å£¹ç•ªâ†‘ 19:36:40 </font><br>
 <font style="FONT-SIZE: 12px" face="Arial, Helvetica, sans-serif" color="#555555">
-ÈË¼ÒËµµÄÊÇ¡¶Ò®Ã·¾­¡·£¬ÓÖÃ»ËµÊÇÄãµÄ¡¶Éñ¾­¡· </font><br>
+äººå®¶è¯´çš„æ˜¯ã€Šè€¶æ¢…ç»ã€‹ï¼Œåˆæ²¡è¯´æ˜¯ä½ çš„ã€Šç¥žç»ã€‹ </font><br>
 <font style="FONT-SIZE: 12px" face="Arial, Helvetica, sans-serif" color="#555555">
-Éñ½Ì 19:37:02 </font><br>
+ç¥žæ•™ 19:37:02 </font><br>
 <font style="FONT-SIZE: 12px" face="Arial, Helvetica, sans-serif" color="#555555">
-Éñ¾­ÒÔÇ°½ÐÒ®Ã·¾­ </font><br>
+ç¥žç»ä»¥å‰å«è€¶æ¢…ç» </font><br>
 <font style="FONT-SIZE: 12px" face="Arial, Helvetica, sans-serif" color="#555555">
-Éñ½Ì 19:37:10 </font><br>
+ç¥žæ•™ 19:37:10 </font><br>
 <font style="FONT-SIZE: 12px" face="Arial, Helvetica, sans-serif" color="#555555">
-¶¼ÊÇÎÒÐ´µÄ </font><br>
+éƒ½æ˜¯æˆ‘å†™çš„ </font><br>
 <font style="FONT-SIZE: 12px" face="Arial, Helvetica, sans-serif" color="#555555">
-¡ùÖÐÈA¤ÎÒ¼·¬¡ü 19:37:15 </font><br>
+â€»ä¸­è¯ã®å£¹ç•ªâ†‘ 19:37:15 </font><br>
 <font style="FONT-SIZE: 12px" face="Arial, Helvetica, sans-serif" color="#555555">
-°¡£¿ </font><br>
+å•Šï¼Ÿ </font><br>
 <font style="FONT-SIZE: 12px" face="Arial, Helvetica, sans-serif" color="#555555">
-Éñ½Ì 19:37:17 </font><br>
+ç¥žæ•™ 19:37:17 </font><br>
 <font style="FONT-SIZE: 12px" face="Arial, Helvetica, sans-serif" color="#555555">
-ÎÒÒÔÇ°½ÐÊ¥Ò®Ã· </font><br>
+æˆ‘ä»¥å‰å«åœ£è€¶æ¢… </font><br>
 <font style="FONT-SIZE: 12px" face="Arial, Helvetica, sans-serif" color="#555555">
-¡ùÖÐÈA¤ÎÒ¼·¬¡ü 19:41:59 </font><br>
+â€»ä¸­è¯ã®å£¹ç•ªâ†‘ 19:41:59 </font><br>
 <font style="FONT-SIZE: 12px" face="Arial, Helvetica, sans-serif" color="#555555">
-ÍøÉÏËùÖ¸µÄÒ®Ã·¾­£¬ÊÇÖ¸Ê¥¾­°É£¿ </font><br>
+ç½‘ä¸Šæ‰€æŒ‡çš„è€¶æ¢…ç»ï¼Œæ˜¯æŒ‡åœ£ç»å§ï¼Ÿ </font><br>
 <font style="FONT-SIZE: 12px" face="Arial, Helvetica, sans-serif" color="#555555">
-Éñ½Ì 19:42:18 </font><br>
+ç¥žæ•™ 19:42:18 </font><br>
 <font style="FONT-SIZE: 12px" face="Arial, Helvetica, sans-serif" color="#555555">
-ÎÒÐ´µÄÑ½ </font><br>
+æˆ‘å†™çš„å‘€ </font><br>
 <font style="FONT-SIZE: 12px" face="Arial, Helvetica, sans-serif" color="#555555">
-¡ùÖÐÈA¤ÎÒ¼·¬¡ü 19:42:31 </font><br>
+â€»ä¸­è¯ã®å£¹ç•ªâ†‘ 19:42:31 </font><br>
 <font style="FONT-SIZE: 12px" face="Arial, Helvetica, sans-serif" color="#555555">
-Ê¥¾­ÊÇÄãÐ´µÄ£¿ </font><br>
+åœ£ç»æ˜¯ä½ å†™çš„ï¼Ÿ </font><br>
 <font style="FONT-SIZE: 12px" face="Arial, Helvetica, sans-serif" color="#555555">
-Éñ½Ì 19:42:39 </font><br>
+ç¥žæ•™ 19:42:39 </font><br>
 <font style="FONT-SIZE: 12px" face="Arial, Helvetica, sans-serif" color="#555555">
-Ò®Ã·¾­=¸èÒÚÃñ¾­=¸ðÒàÃñ¾­=Éñ¾­ </font><br>
+è€¶æ¢…ç»=æ­Œäº¿æ°‘ç»=è‘›äº¦æ°‘ç»=ç¥žç» </font><br>
 <font style="FONT-SIZE: 12px" face="Arial, Helvetica, sans-serif" color="#555555">
-¡ùÖÐÈA¤ÎÒ¼·¬¡ü 19:43:03 </font><br>
+â€»ä¸­è¯ã®å£¹ç•ªâ†‘ 19:43:03 </font><br>
 <font style="FONT-SIZE: 12px" face="Arial, Helvetica, sans-serif" color="#555555">
-²»ÊÇ°É£¿ </font><br>
+ä¸æ˜¯å§ï¼Ÿ </font><br>
 <font style="FONT-SIZE: 12px" face="Arial, Helvetica, sans-serif" color="#555555">
-Éñ½Ì 19:43:11 </font><br>
+ç¥žæ•™ 19:43:11 </font><br>
 <font style="FONT-SIZE: 12px" face="Arial, Helvetica, sans-serif" color="#555555">
-Ò®Ã·¾­ÊÇÎÒÐ´µÄ£¬ÄÇÊ±ÎÒ½ÐÊ¥Ò®Ã·£¬ÍøÕ¾ÊÇÒ®Ã·Íø </font><br>
+è€¶æ¢…ç»æ˜¯æˆ‘å†™çš„ï¼Œé‚£æ—¶æˆ‘å«åœ£è€¶æ¢…ï¼Œç½‘ç«™æ˜¯è€¶æ¢…ç½‘ </font><br>
 <font style="FONT-SIZE: 12px" face="Arial, Helvetica, sans-serif" color="#555555">
-Éñ½Ì 19:43:21 </font><br>
+ç¥žæ•™ 19:43:21 </font><br>
 <font style="FONT-SIZE: 12px" face="Arial, Helvetica, sans-serif" color="#555555">
-ÄãËÑÏÂÒ®Ã·¾­¾ÍÖªµÀ </font><br>
+ä½ æœä¸‹è€¶æ¢…ç»å°±çŸ¥é“ </font><br>
 <font style="FONT-SIZE: 12px" face="Arial, Helvetica, sans-serif" color="#555555">
-Éñ½Ì 19:44:00 </font><br>
+ç¥žæ•™ 19:44:00 </font><br>
 <font style="FONT-SIZE: 12px" face="Arial, Helvetica, sans-serif" color="#555555">
-ÄãËÑË÷£¬Ò®Ã·¾­È«ÊÇÎÒµÄÄÚÈÝ </font><br>
+ä½ æœç´¢ï¼Œè€¶æ¢…ç»å…¨æ˜¯æˆ‘çš„å†…å®¹ </font><br>
 <font style="FONT-SIZE: 12px" face="Arial, Helvetica, sans-serif" color="#555555">
-Éñ½Ì 19:44:27 </font><br>
+ç¥žæ•™ 19:44:27 </font><br>
 <font style="FONT-SIZE: 12px" face="Arial, Helvetica, sans-serif" color="#555555">
-ÄÇÊ±ÎÒÃÇ½ÐÒ®Ã·½Ì </font><br>
+é‚£æ—¶æˆ‘ä»¬å«è€¶æ¢…æ•™ </font><br>
 <font style="FONT-SIZE: 12px" face="Arial, Helvetica, sans-serif" color="#555555">
-¡ùÖÐÈA¤ÎÒ¼·¬¡ü 19:49:59 </font><br>
+â€»ä¸­è¯ã®å£¹ç•ªâ†‘ 19:49:59 </font><br>
 <font style="FONT-SIZE: 12px" face="Arial, Helvetica, sans-serif" color="#555555">
-Å¶ </font><br>
+å“¦ </font><br>
 <font style="FONT-SIZE: 12px" face="Arial, Helvetica, sans-serif" color="#555555">
-¡ùÖÐÈA¤ÎÒ¼·¬¡ü 19:54:26 </font><br>
+â€»ä¸­è¯ã®å£¹ç•ªâ†‘ 19:54:26 </font><br>
 <font style="FONT-SIZE: 12px" face="Arial, Helvetica, sans-serif" color="#555555">
-Ò®Ã·ÊÇË­°¡£¿ </font><br>
+è€¶æ¢…æ˜¯è°å•Šï¼Ÿ </font><br>
 <font style="FONT-SIZE: 12px" face="Arial, Helvetica, sans-serif" color="#555555">
-Éñ½Ì 19:54:33 </font><br>
+ç¥žæ•™ 19:54:33 </font><br>
 <font style="FONT-SIZE: 12px" face="Arial, Helvetica, sans-serif" color="#555555">
-ÎÒÑ½ </font><br>
+æˆ‘å‘€ </font><br>
 <font style="FONT-SIZE: 12px" face="Arial, Helvetica, sans-serif" color="#555555">
-Éñ½Ì 19:54:41 </font><br>
+ç¥žæ•™ 19:54:41 </font><br>
 <font style="FONT-SIZE: 12px" face="Arial, Helvetica, sans-serif" color="#555555">
-ÎÒ¿ªÊ¼ÉÏÍø½ÐÒ®Ã· </font><br>
+æˆ‘å¼€å§‹ä¸Šç½‘å«è€¶æ¢… </font><br>
 <font style="FONT-SIZE: 12px" face="Arial, Helvetica, sans-serif" color="#555555">
-¡ùÖÐÈA¤ÎÒ¼·¬¡ü 19:54:46 </font><br>
+â€»ä¸­è¯ã®å£¹ç•ªâ†‘ 19:54:46 </font><br>
 <font style="FONT-SIZE: 12px" face="Arial, Helvetica, sans-serif" color="#555555">
 ... </font><br>
 <font style="FONT-SIZE: 12px" face="Arial, Helvetica, sans-serif" color="#555555">
-Éñ½Ì 19:54:47 </font><br>
+ç¥žæ•™ 19:54:47 </font><br>
 <font style="FONT-SIZE: 12px" face="Arial, Helvetica, sans-serif" color="#555555">
-ÍøÃû </font><br>
+ç½‘å </font><br>
 <font style="FONT-SIZE: 12px" face="Arial, Helvetica, sans-serif" color="#555555">
-¡ùÖÐÈA¤ÎÒ¼·¬¡ü 19:55:57 </font><br>
+â€»ä¸­è¯ã®å£¹ç•ªâ†‘ 19:55:57 </font><br>
 <font style="FONT-SIZE: 12px" face="Arial, Helvetica, sans-serif" color="#555555">
-µ±Ê±Äã³öÃûÂð£¿ </font><br>
+å½“æ—¶ä½ å‡ºåå—ï¼Ÿ </font><br>
 <font style="FONT-SIZE: 12px" face="Arial, Helvetica, sans-serif" color="#555555">
-Éñ½Ì 19:56:17 </font><br>
+ç¥žæ•™ 19:56:17 </font><br>
 <font style="FONT-SIZE: 12px" face="Arial, Helvetica, sans-serif" color="#555555">
-04ÄêÔÚ°Ù¶ÈÌù°É³öµÄÃû </font><br>
+04å¹´åœ¨ç™¾åº¦è´´å§å‡ºçš„å </font><br>
 <font style="FONT-SIZE: 12px" face="Arial, Helvetica, sans-serif" color="#555555">
-Éñ½Ì 19:56:34 </font><br>
+ç¥žæ•™ 19:56:34 </font><br>
 <font style="FONT-SIZE: 12px" face="Arial, Helvetica, sans-serif" color="#555555">
-ÓÐÒ®Ã·°É£¬·âÁË </font><br>
+æœ‰è€¶æ¢…å§ï¼Œå°äº† </font><br>
 <font style="FONT-SIZE: 12px" face="Arial, Helvetica, sans-serif" color="#555555">
-¡ùÖÐÈA¤ÎÒ¼·¬¡ü 19:56:45 </font><br>
+â€»ä¸­è¯ã®å£¹ç•ªâ†‘ 19:56:45 </font><br>
 <font style="FONT-SIZE: 12px" face="Arial, Helvetica, sans-serif" color="#555555">
-Å¶ </font><br>
-¡¡</p>
+å“¦ </font><br>
+ã€€</p>
+<iframe MARGINWIDTH=0 MARGINHEIGHT=0 HSPACE=0 VSPACE=0 FRAMEBORDER=0 SCROLLING=no src="../scsl/footer.html" height=â€œautoâ€ width="100%"></iframe>
 
 </body>
 
