--- a/xyyd/wsx.htm
+++ b/xyyd/wsx.htm
@@ -1,24 +1,25 @@
 <html>
 
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=gb2312">
-<title>ÎÒÊÇÏÈÖªµÀ2019£¬ºóÖªµÀ2012£¬ÄãÃÇÄØ</title>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<title>æˆ‘æ˜¯å…ˆçŸ¥é“2019ï¼ŒåŽçŸ¥é“2012ï¼Œä½ ä»¬å‘¢</title>
 </head>
 
 <body>
 
 <p>
 <font style="FONT-SIZE: 12px" face="Arial, Helvetica, sans-serif" color="#555555">
-ÎÒÊÇÏÈÖªµÀ2019£¬ºóÖªµÀ2012£¬ÄãÃÇÄØ</font><br>
+æˆ‘æ˜¯å…ˆçŸ¥é“2019ï¼ŒåŽçŸ¥é“2012ï¼Œä½ ä»¬å‘¢</font><br>
 <br>
 <br>
 <font style="FONT-SIZE: 12px" face="Arial, Helvetica, sans-serif" color="#555555">
-2019ÎÒÊÇÔÚ2001Äê8ÔÂ£¬¿´µ½¸ðÒàÃñÔÚ»¥ÁªÍøÉÏ·¢±í</font><br>
+2019æˆ‘æ˜¯åœ¨2001å¹´8æœˆï¼Œçœ‹åˆ°è‘›äº¦æ°‘åœ¨äº’è”ç½‘ä¸Šå‘è¡¨</font><br>
 <font style="FONT-SIZE: 12px" face="Arial, Helvetica, sans-serif" color="#555555">
-2012£¬ÎÒÊÇÔÚ2004ÄêÔÚÒ»ÂÛÌ³¿´µ½</font><br>
+2012ï¼Œæˆ‘æ˜¯åœ¨2004å¹´åœ¨ä¸€è®ºå›çœ‹åˆ°</font><br>
 <font style="FONT-SIZE: 12px" face="Arial, Helvetica, sans-serif" color="#555555">
-ÄãÃÇÄØ£¿</font><br>
-¡¡</p>
+ä½ ä»¬å‘¢ï¼Ÿ</font><br>
+ã€€</p>
+<iframe MARGINWIDTH=0 MARGINHEIGHT=0 HSPACE=0 VSPACE=0 FRAMEBORDER=0 SCROLLING=no src="../scsl/footer.html" height=â€œautoâ€ width="100%"></iframe>
 
 </body>
 
