--- a/xyyd/wxj.htm
+++ b/xyyd/wxj.htm
@@ -1,8 +1,8 @@
 <html>
 
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=gb2312">
-<title>ÎÒÏë¼ÓÈëÉñ½Ì</title>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<title>æˆ‘æƒ³åŠ å…¥ç¥žæ•™</title>
 </head>
 
 <body>
@@ -22,146 +22,146 @@
 											<td id="postmessage_220" class="t_f">
 											<p style="TEXT-ALIGN: left; LINE-HEIGHT: 18px">
 											<font face="Verdana" style="font-size: 12px; color: rgb(85,85,85)">
-											ÎÒÏë¼ÓÈëÉñ½Ì</font></p>
+											æˆ‘æƒ³åŠ å…¥ç¥žæ•™</font></p>
 											<font style="font-size: 12px; color: rgb(85,85,85)" face="Verdana">
 											<div align="left">
 												<font face="Arial, Helvetica, sans-serif">
 												<br>
-												¸ðÒàÃñ&nbsp;&nbsp;9:43:59<br>
-												ºÃ°¡<br>
-												ÄãÄÄÀïÈË?<br>
-												Ã×µê&nbsp;&nbsp;9:44:42<br>
-												Ê²Ã´Í¾¾¶ <br>
-												¸ðÒàÃñ&nbsp;&nbsp;9:45:06<br>
-												ÎÒÃÇÇóÕæÀí,²»ÓÃÕýÊ½×éÖ¯<br>
-												Ã×µê&nbsp;&nbsp;9:45:28<br>
-												ÎÒÃÀ¹ú¹ú¼® ÏÖÔÚÔÚ±±¾© <br>
-												¹ýÄêÖ®ºó»ØÃÀ <br>
-												¸ðÒàÃñ&nbsp;&nbsp;9:46:14<br>
-												¸ð»¨36[ÕÅÌìÖÇ£¬ÄÐ£¬1978ÄêÉú£¬ÂíÀ´Î÷ÑÇ¼ªÂ¡ÆÂ]£¨Éñ½ÌÂíÀ´Î÷ÑÇ»á³¤£©<br>
-												Ã×µê&nbsp;&nbsp;9:46:16<br>
-												ÄÇÔõÃ´Ö¤Ã÷×Ô¼ºÊÇ½ÌÍ½£¿ <br>
-												¸ðÒàÃñ&nbsp;&nbsp;9:46:23<br>
-												ÕÕËûÕâ¸ö<br>
-												¸ð»¨39<br>
-												¸ðÒàÃñ&nbsp;&nbsp;9:47:55<br>
-												¸ð»¨39[Ã×µê£¬ÄÐ£¬19**ÄêÉú£¬ÃÀ¹ú]£¨Éñ½Ì±±ÃÀ»á³¤£©</font></div>
+												è‘›äº¦æ°‘&nbsp;&nbsp;9:43:59<br>
+												å¥½å•Š<br>
+												ä½ å“ªé‡Œäºº?<br>
+												ç±³åº—&nbsp;&nbsp;9:44:42<br>
+												ä»€ä¹ˆé€”å¾„ <br>
+												è‘›äº¦æ°‘&nbsp;&nbsp;9:45:06<br>
+												æˆ‘ä»¬æ±‚çœŸç†,ä¸ç”¨æ­£å¼ç»„ç»‡<br>
+												ç±³åº—&nbsp;&nbsp;9:45:28<br>
+												æˆ‘ç¾Žå›½å›½ç± çŽ°åœ¨åœ¨åŒ—äº¬ <br>
+												è¿‡å¹´ä¹‹åŽå›žç¾Ž <br>
+												è‘›äº¦æ°‘&nbsp;&nbsp;9:46:14<br>
+												è‘›èŠ±36[å¼ å¤©æ™ºï¼Œç”·ï¼Œ1978å¹´ç”Ÿï¼Œé©¬æ¥è¥¿äºšå‰éš†å¡]ï¼ˆç¥žæ•™é©¬æ¥è¥¿äºšä¼šé•¿ï¼‰<br>
+												ç±³åº—&nbsp;&nbsp;9:46:16<br>
+												é‚£æ€Žä¹ˆè¯æ˜Žè‡ªå·±æ˜¯æ•™å¾’ï¼Ÿ <br>
+												è‘›äº¦æ°‘&nbsp;&nbsp;9:46:23<br>
+												ç…§ä»–è¿™ä¸ª<br>
+												è‘›èŠ±39<br>
+												è‘›äº¦æ°‘&nbsp;&nbsp;9:47:55<br>
+												è‘›èŠ±39[ç±³åº—ï¼Œç”·ï¼Œ19**å¹´ç”Ÿï¼Œç¾Žå›½]ï¼ˆç¥žæ•™åŒ—ç¾Žä¼šé•¿ï¼‰</font></div>
 											<div align="left">
 												<font face="Arial, Helvetica, sans-serif">
-												Ã×µê&nbsp;&nbsp;9:49:14<br>
-												ÍÛ ¿ÉÒÔ×öÕû¸ö±±ÃÀµÄ»á³¤Âð <br>
-												¸ðÒàÃñ&nbsp;&nbsp;9:49:24<br>
-												ÊÇ°¡<br>
-												ÆäÊµÖØÒªµÄÊÇÇóµÃÕæÀí<br>
-												ÄãÍ¬Òâ,ÎÒÉñ¾­ÉÏ¼ÓÉÏÄã<br>
-												¸ðÒàÃñ&nbsp;&nbsp;9:51:38<br>
-												ÄãÄÄÄêÉúµÄ?</font></div>
+												ç±³åº—&nbsp;&nbsp;9:49:14<br>
+												å“‡ å¯ä»¥åšæ•´ä¸ªåŒ—ç¾Žçš„ä¼šé•¿å— <br>
+												è‘›äº¦æ°‘&nbsp;&nbsp;9:49:24<br>
+												æ˜¯å•Š<br>
+												å…¶å®žé‡è¦çš„æ˜¯æ±‚å¾—çœŸç†<br>
+												ä½ åŒæ„,æˆ‘ç¥žç»ä¸ŠåŠ ä¸Šä½ <br>
+												è‘›äº¦æ°‘&nbsp;&nbsp;9:51:38<br>
+												ä½ å“ªå¹´ç”Ÿçš„?</font></div>
 											<div align="left">
 												<font face="Arial, Helvetica, sans-serif">
 												<br>
-												Ã×µê&nbsp;&nbsp;9:52:08<br>
-												ÎÒ¾õµÃÎÒ»¹Ã»ÓÐÄÜÁ¦µ±»á³¤ <br>
-												ÎÒÖ»ÏëÕÒµ½×ÔÎÒ¾ÈÊêµÄ·½Ê½ <br>
-												¸ðÒàÃñ&nbsp;&nbsp;9:52:36<br>
-												²»ÒªÄã×öÊ²Ã´,Ò»¸öÐéÃû<br>
-												Ã×µê&nbsp;&nbsp;9:52:36<br>
-												ÎÒ¾õµÃÎÒÓÐ×ï <br>
-												¸ðÒàÃñ&nbsp;&nbsp;9:52:58<br>
-												ÊÇµÄ,×ïÊÇÄ¿²»ÖÐµÄ,´ï²»µ½ÉñµÄÒªÇó<br>
-												ÎÒÃÇÕÒµ½·½·¨,´ïµ½ÉñµÄÒªÇó<br>
-												Ã×µê&nbsp;&nbsp;9:53:39<br>
-												ÔõÃ´²Å¿ÉÒÔÏ´µÓµô×ï <br>
-												¸ðÒàÃñ&nbsp;&nbsp;9:53:51<br>
-												ÖÁÓÚÉú»îÖÐ·¸×ï,ÊÇ´ÎÒªµÄ<br>
-												Éú»îÖÐ·¸×ï,Äã»Ú¸Ä,<br>
-												Ã×µê&nbsp;&nbsp;9:54:33<br>
-												¿ÉÊÇÎÒËÄ´¦Åö±Ú <br>
-												¸ðÒàÃñ&nbsp;&nbsp;9:54:35<br>
-												ÓÐ¿ÉÄÜ²¹³¥¶Ô·½<br>
-												Ã×µê&nbsp;&nbsp;9:54:56<br>
-												ÎÒ¾õµÃÎÒµÄ×ïÊÇ±ðÈË´Ì¼¤µÄ <br>
-												¸ðÒàÃñ&nbsp;&nbsp;9:55:01<br>
-												ÄãÄÜÔÚÃÀ¹ú,¾ÍÊÇÒ»¶¨³É¹¦<br>
-												Ã×µê&nbsp;&nbsp;9:55:19<br>
-												Èç¹ûÃ»ÓÐËûÃÇ ÎÒ¾ÍÃ»ÓÐ×ï <br>
-												¸ðÒàÃñ&nbsp;&nbsp;9:55:41<br>
-												Ò®öÕËµÏÂ´Î²»·¸¾ÍÐÐ,ÐÐÒù¸¾ÈËÄÇÕÂ<br>
-												ÄÇ¿ÉÒÔ,ÏÂ´Î²»ÊÜ´Ì¼¤,¿ËÖÆ<br>
-												ÄãËµÏÂÄÄÄêÉúÈË?<br>
-												¿´Äã¶à´ó<br>
-												¸ðÒàÃñ&nbsp;&nbsp;9:57:26<br>
-												ÎÒ69Äê<br>
-												Ã×µê&nbsp;&nbsp;9:58:44<br>
-												ÎÒ82Äê <br>
-												¸ðÒàÃñ&nbsp;&nbsp;9:59:09<br>
-												ºÃÐ¡°¡<br>
-												Ã×µê&nbsp;&nbsp;9:59:14<br>
-												ÎÒ¶ÔÕÜÑ§µÄ¿ÊÇó±È½ÏÇ¿ÁÒ <br>
-												¸ðÒàÃñ&nbsp;&nbsp;9:59:23<br>
-												ÎÒÒ²ÊÇ<br>
-												Ï²»¶Äá²É<br>
-												¸ðÒàÃñ&nbsp;&nbsp;10:00:26<br>
-												¸ð»¨39[Ã×µê£¬ÄÐ£¬1982ÄêÉú£¬ÃÀ¹ú]£¨Éñ½Ì±±ÃÀ»á³¤£©</font></div>
+												ç±³åº—&nbsp;&nbsp;9:52:08<br>
+												æˆ‘è§‰å¾—æˆ‘è¿˜æ²¡æœ‰èƒ½åŠ›å½“ä¼šé•¿ <br>
+												æˆ‘åªæƒ³æ‰¾åˆ°è‡ªæˆ‘æ•‘èµŽçš„æ–¹å¼ <br>
+												è‘›äº¦æ°‘&nbsp;&nbsp;9:52:36<br>
+												ä¸è¦ä½ åšä»€ä¹ˆ,ä¸€ä¸ªè™šå<br>
+												ç±³åº—&nbsp;&nbsp;9:52:36<br>
+												æˆ‘è§‰å¾—æˆ‘æœ‰ç½ª <br>
+												è‘›äº¦æ°‘&nbsp;&nbsp;9:52:58<br>
+												æ˜¯çš„,ç½ªæ˜¯ç›®ä¸ä¸­çš„,è¾¾ä¸åˆ°ç¥žçš„è¦æ±‚<br>
+												æˆ‘ä»¬æ‰¾åˆ°æ–¹æ³•,è¾¾åˆ°ç¥žçš„è¦æ±‚<br>
+												ç±³åº—&nbsp;&nbsp;9:53:39<br>
+												æ€Žä¹ˆæ‰å¯ä»¥æ´—æ¶¤æŽ‰ç½ª <br>
+												è‘›äº¦æ°‘&nbsp;&nbsp;9:53:51<br>
+												è‡³äºŽç”Ÿæ´»ä¸­çŠ¯ç½ª,æ˜¯æ¬¡è¦çš„<br>
+												ç”Ÿæ´»ä¸­çŠ¯ç½ª,ä½ æ‚”æ”¹,<br>
+												ç±³åº—&nbsp;&nbsp;9:54:33<br>
+												å¯æ˜¯æˆ‘å››å¤„ç¢°å£ <br>
+												è‘›äº¦æ°‘&nbsp;&nbsp;9:54:35<br>
+												æœ‰å¯èƒ½è¡¥å¿å¯¹æ–¹<br>
+												ç±³åº—&nbsp;&nbsp;9:54:56<br>
+												æˆ‘è§‰å¾—æˆ‘çš„ç½ªæ˜¯åˆ«äººåˆºæ¿€çš„ <br>
+												è‘›äº¦æ°‘&nbsp;&nbsp;9:55:01<br>
+												ä½ èƒ½åœ¨ç¾Žå›½,å°±æ˜¯ä¸€å®šæˆåŠŸ<br>
+												ç±³åº—&nbsp;&nbsp;9:55:19<br>
+												å¦‚æžœæ²¡æœ‰ä»–ä»¬ æˆ‘å°±æ²¡æœ‰ç½ª <br>
+												è‘›äº¦æ°‘&nbsp;&nbsp;9:55:41<br>
+												è€¶ç¨£è¯´ä¸‹æ¬¡ä¸çŠ¯å°±è¡Œ,è¡Œæ·«å¦‡äººé‚£ç« <br>
+												é‚£å¯ä»¥,ä¸‹æ¬¡ä¸å—åˆºæ¿€,å…‹åˆ¶<br>
+												ä½ è¯´ä¸‹å“ªå¹´ç”Ÿäºº?<br>
+												çœ‹ä½ å¤šå¤§<br>
+												è‘›äº¦æ°‘&nbsp;&nbsp;9:57:26<br>
+												æˆ‘69å¹´<br>
+												ç±³åº—&nbsp;&nbsp;9:58:44<br>
+												æˆ‘82å¹´ <br>
+												è‘›äº¦æ°‘&nbsp;&nbsp;9:59:09<br>
+												å¥½å°å•Š<br>
+												ç±³åº—&nbsp;&nbsp;9:59:14<br>
+												æˆ‘å¯¹å“²å­¦çš„æ¸´æ±‚æ¯”è¾ƒå¼ºçƒˆ <br>
+												è‘›äº¦æ°‘&nbsp;&nbsp;9:59:23<br>
+												æˆ‘ä¹Ÿæ˜¯<br>
+												å–œæ¬¢å°¼é‡‡<br>
+												è‘›äº¦æ°‘&nbsp;&nbsp;10:00:26<br>
+												è‘›èŠ±39[ç±³åº—ï¼Œç”·ï¼Œ1982å¹´ç”Ÿï¼Œç¾Žå›½]ï¼ˆç¥žæ•™åŒ—ç¾Žä¼šé•¿ï¼‰</font></div>
 											</font>
 											<p style="TEXT-ALIGN: left; LINE-HEIGHT: 18px">
 											<font face="Verdana" style="font-size: 12px; color: rgb(85,85,85)">
-											¹Ò¸öÃû<br>
-											¸ðÒàÃñ&nbsp;&nbsp;10:02:07<br>
-											¡¶¸ð»¨²á¡·<br>
-											¸ð»¨A [¸ðÒàÃñ£¬ÄÐ£¬1969ÄêÉú£¬½­ËÕÕò½­]<br>
-											¸ð»¨K [ÄúµÄÎ»ÖÃ]<br>
-											¸ð»¨Q [ÄúµÄÎ»ÖÃ]<br>
-											¸ð»¨J [ÄúµÄÎ»ÖÃ]<br>
-											¸ð»¨10 [ÄúµÄÎ»ÖÃ]<br>
-											¸ð»¨9 [ÄúµÄÎ»ÖÃ]<br>
-											¸ð»¨8 [ÄúµÄÎ»ÖÃ]<br>
-											¸ð»¨7 [ÄúµÄÎ»ÖÃ]<br>
-											¸ð»¨6 [ÄúµÄÎ»ÖÃ]<br>
-											¸ð»¨5 [ÄúµÄÎ»ÖÃ]<br>
-											¸ð»¨4 [ÄúµÄÎ»ÖÃ]<br>
-											¸ð»¨3 [ÄúµÄÎ»ÖÃ]<br>
-											¸ð»¨2 [ÄúµÄÎ»ÖÃ]<br>
-											£¨¸ð»¨1--13£¬Ö»Ô¤±¸¸ø×îÓÐÔµµÄ¸ð»¨£©<br>
-											¸ð»¨14[x£¬Å®£¬1990ÄêÉú£¬Ê¯¼Ò×¯]<br>
-											¸ð»¨15[ÒÀ³¿·ÛË¿£¬ÄÐ£¬1994ÄêÉú£¬½­ËÕÕò½­]<br>
-											¸ð»¨16[ÂíÐ¡Àö£¬Å®£¬1982ÄêÉú£¬½­ËÕÕò½­]<br>
-											¸ð»¨17[È«±wµÀÒ×ì`×Ó£¬ÄÐ£¬1971ÄêÉú£¬Î÷°²]<br>
-											¸ð»¨18[³ÐÖZ£¬µÄ±³áá£¬Å®£¬1990ÄêÉú£¬º£ÄÏÈýÑÇ]<br>
-											¸ð»¨19[À¶À¶, Å®, 1988ÄêÉú, ºþÄÏ]<br>
-											¸ð»¨20[¿ÉËÜÆ·£¬Å®£¬1981ÄêÉú£¬½­ËÕÕò½­]<br>
-											¸ð»¨21[Ò®Ñ©£¬Å®£¬1985ÄêÉú£¬±±¾©]<br>
-											¸ð»¨22[·Ñ¼ÎÁá£¬Å®£¬1970ÄêÉú£¬ÃÀ¹ú±öÏ¦·¨ÀûÑÇ]<br>
-											¸ð»¨23[¹ùºìÃ·£¬Å®£¬1983ÄêÉú£¬½­ËÕÕò½­]<br>
-											¸ð»¨24[Âê¸ñÀöÌØ.Ê·µÙ·ÒÉ­£¬Å®£¬1962ÄêÉú£¬Ó¢¹úÂü³¹Ë¹ÌØ]<br>
-											¸ð»¨25[Ð¦¿´ÈËÉú£¬Å®£¬1985ÄêÉú£¬Ì¨Íå]<br>
-											¸ð»¨26[ÆßÃÃ£¬Å®£¬1972ÄêÉú£¬½­ËÕ»´°²]<br>
-											¸ð»¨27[ÂêÀ­»ù£¬ÄÐ£¬1990ÄêÉú£¬ºÓÄÏ½¹×÷]<br>
-											¸ð»¨28[ÁÕ£¬Å®£¬1970ÄêÉú£¬ºÓ±±ºâË®]<br>
-											¸ð»¨29[´º×ËµúÎè£¬Å®£¬1986ÄêÉú£¬Õã½­ÎÂÖÝ]<br>
-											¸ð»¨30[»ÒÊJ£¬Å®£¬1972ÄêÉú£¬Îäºº]<br>
-											¸ð»¨31[Blue¦ÕÐÅÑö£¬Å®£¬1991ÄêÉú£¬ÖØÇì]<br>
-											¸ð»¨32[____¼ú¡æ,ÄÐ,1992ÄêÉú£¬ÖÐ¹ú]<br>
-											¸ð»¨33[ºÚÒ¹µû£¬Å®£¬1989ÄêÉú£¬³É¶¼]<br>
-											¸ð»¨34[É¢ÓðÐÇ³½,ÄÐ,1994ÄêÉú£¬¹óÑô]<br>
-											¸ð»¨35[Äà°Í´ó½Å,ÄÐ,1969ÄêÉú£¬½­ËÕ]<br>
-											¸ð»¨36[ÕÅÌìÖÇ£¬ÄÐ£¬1978ÄêÉú£¬ÂíÀ´Î÷ÑÇ¼ªÂ¡ÆÂ]£¨Éñ½ÌÂíÀ´Î÷ÑÇ»á³¤£©<br>
-											¸ð»¨37[ÃÎµûÎè£¬Å®£¬1989ÄêÉú£¬ÔÆÄÏ±£É½]<br>
-											¸ð»¨38[º®Îä·ã£¬Å®£¬1992ÄêÉú£¬½­ËÕÐìÖÝ] <br>
-											¸ð»¨39[Ã×µê£¬ÄÐ£¬1982ÄêÉú£¬ÃÀ¹ú]£¨Éñ½Ì±±ÃÀ»á³¤£©<br>
-											¸ð»¨40[ÄúµÄÎ»ÖÃ]<br>
+											æŒ‚ä¸ªå<br>
+											è‘›äº¦æ°‘&nbsp;&nbsp;10:02:07<br>
+											ã€Šè‘›èŠ±å†Œã€‹<br>
+											è‘›èŠ±A [è‘›äº¦æ°‘ï¼Œç”·ï¼Œ1969å¹´ç”Ÿï¼Œæ±Ÿè‹é•‡æ±Ÿ]<br>
+											è‘›èŠ±K [æ‚¨çš„ä½ç½®]<br>
+											è‘›èŠ±Q [æ‚¨çš„ä½ç½®]<br>
+											è‘›èŠ±J [æ‚¨çš„ä½ç½®]<br>
+											è‘›èŠ±10 [æ‚¨çš„ä½ç½®]<br>
+											è‘›èŠ±9 [æ‚¨çš„ä½ç½®]<br>
+											è‘›èŠ±8 [æ‚¨çš„ä½ç½®]<br>
+											è‘›èŠ±7 [æ‚¨çš„ä½ç½®]<br>
+											è‘›èŠ±6 [æ‚¨çš„ä½ç½®]<br>
+											è‘›èŠ±5 [æ‚¨çš„ä½ç½®]<br>
+											è‘›èŠ±4 [æ‚¨çš„ä½ç½®]<br>
+											è‘›èŠ±3 [æ‚¨çš„ä½ç½®]<br>
+											è‘›èŠ±2 [æ‚¨çš„ä½ç½®]<br>
+											ï¼ˆè‘›èŠ±1--13ï¼Œåªé¢„å¤‡ç»™æœ€æœ‰ç¼˜çš„è‘›èŠ±ï¼‰<br>
+											è‘›èŠ±14[xï¼Œå¥³ï¼Œ1990å¹´ç”Ÿï¼ŒçŸ³å®¶åº„]<br>
+											è‘›èŠ±15[ä¾æ™¨ç²‰ä¸ï¼Œç”·ï¼Œ1994å¹´ç”Ÿï¼Œæ±Ÿè‹é•‡æ±Ÿ]<br>
+											è‘›èŠ±16[é©¬å°ä¸½ï¼Œå¥³ï¼Œ1982å¹´ç”Ÿï¼Œæ±Ÿè‹é•‡æ±Ÿ]<br>
+											è‘›èŠ±17[å…¨çœžé“æ˜“éˆå­ï¼Œç”·ï¼Œ1971å¹´ç”Ÿï¼Œè¥¿å®‰]<br>
+											è‘›èŠ±18[æ‰¿è«¾ï¼Œçš„èƒŒå¾Œï¼Œå¥³ï¼Œ1990å¹´ç”Ÿï¼Œæµ·å—ä¸‰äºš]<br>
+											è‘›èŠ±19[è“è“, å¥³, 1988å¹´ç”Ÿ, æ¹–å—]<br>
+											è‘›èŠ±20[å¯å¡‘å“ï¼Œå¥³ï¼Œ1981å¹´ç”Ÿï¼Œæ±Ÿè‹é•‡æ±Ÿ]<br>
+											è‘›èŠ±21[è€¶é›ªï¼Œå¥³ï¼Œ1985å¹´ç”Ÿï¼ŒåŒ—äº¬]<br>
+											è‘›èŠ±22[è´¹å˜‰çŽ²ï¼Œå¥³ï¼Œ1970å¹´ç”Ÿï¼Œç¾Žå›½å®¾å¤•æ³•åˆ©äºš]<br>
+											è‘›èŠ±23[éƒ­çº¢æ¢…ï¼Œå¥³ï¼Œ1983å¹´ç”Ÿï¼Œæ±Ÿè‹é•‡æ±Ÿ]<br>
+											è‘›èŠ±24[çŽ›æ ¼ä¸½ç‰¹.å²è’‚èŠ¬æ£®ï¼Œå¥³ï¼Œ1962å¹´ç”Ÿï¼Œè‹±å›½æ›¼å½»æ–¯ç‰¹]<br>
+											è‘›èŠ±25[ç¬‘çœ‹äººç”Ÿï¼Œå¥³ï¼Œ1985å¹´ç”Ÿï¼Œå°æ¹¾]<br>
+											è‘›èŠ±26[ä¸ƒå¦¹ï¼Œå¥³ï¼Œ1972å¹´ç”Ÿï¼Œæ±Ÿè‹æ·®å®‰]<br>
+											è‘›èŠ±27[çŽ›æ‹‰åŸºï¼Œç”·ï¼Œ1990å¹´ç”Ÿï¼Œæ²³å—ç„¦ä½œ]<br>
+											è‘›èŠ±28[ç³ï¼Œå¥³ï¼Œ1970å¹´ç”Ÿï¼Œæ²³åŒ—è¡¡æ°´]<br>
+											è‘›èŠ±29[æ˜¥å§¿ç¢Ÿèˆžï¼Œå¥³ï¼Œ1986å¹´ç”Ÿï¼Œæµ™æ±Ÿæ¸©å·ž]<br>
+											è‘›èŠ±30[ç°è”Žï¼Œå¥³ï¼Œ1972å¹´ç”Ÿï¼Œæ­¦æ±‰]<br>
+											è‘›èŠ±31[BlueÏ†ä¿¡ä»°ï¼Œå¥³ï¼Œ1991å¹´ç”Ÿï¼Œé‡åº†]<br>
+											è‘›èŠ±32[____è´±â„ƒ,ç”·,1992å¹´ç”Ÿï¼Œä¸­å›½]<br>
+											è‘›èŠ±33[é»‘å¤œè¶ï¼Œå¥³ï¼Œ1989å¹´ç”Ÿï¼Œæˆéƒ½]<br>
+											è‘›èŠ±34[æ•£ç¾½æ˜Ÿè¾°,ç”·,1994å¹´ç”Ÿï¼Œè´µé˜³]<br>
+											è‘›èŠ±35[æ³¥å·´å¤§è„š,ç”·,1969å¹´ç”Ÿï¼Œæ±Ÿè‹]<br>
+											è‘›èŠ±36[å¼ å¤©æ™ºï¼Œç”·ï¼Œ1978å¹´ç”Ÿï¼Œé©¬æ¥è¥¿äºšå‰éš†å¡]ï¼ˆç¥žæ•™é©¬æ¥è¥¿äºšä¼šé•¿ï¼‰<br>
+											è‘›èŠ±37[æ¢¦è¶èˆžï¼Œå¥³ï¼Œ1989å¹´ç”Ÿï¼Œäº‘å—ä¿å±±]<br>
+											è‘›èŠ±38[å¯’æ­¦æž«ï¼Œå¥³ï¼Œ1992å¹´ç”Ÿï¼Œæ±Ÿè‹å¾å·ž] <br>
+											è‘›èŠ±39[ç±³åº—ï¼Œç”·ï¼Œ1982å¹´ç”Ÿï¼Œç¾Žå›½]ï¼ˆç¥žæ•™åŒ—ç¾Žä¼šé•¿ï¼‰<br>
+											è‘›èŠ±40[æ‚¨çš„ä½ç½®]<br>
 											.............................................<br>
-											Ã×µê&nbsp;&nbsp;10:03:23<br>
-											ÏÖÔÚÓÐ¶àÉÙ½ÌÖÚ <br>
-											¸ðÒàÃñ&nbsp;&nbsp;10:04:36<br>
-											Ã»×éÖ¯£¬¶¼ÊÇ°µÖÐÐÅµÄ£¬10Íò¶à<br>
-											Ã×µê&nbsp;&nbsp;10:05:26<br>
-											ÄÇÎªÊ²Ã´»¹¹ÒÃû£¿ <br>
-											¸ðÒàÃñ&nbsp;&nbsp;10:05:56<br>
-											ÎÒÃÇ²»¸ã×éÖ¯£¬²»¸ãÈËÍ·£¬Ö»ÇóÕæÀí<br>
-											¹Ò¸öÃûºÃ¿´µã<br>
-											¸ðÒàÃñ&nbsp;&nbsp;10:07:18<br>
-											Äã»áÊÇ¸öÆóÒµ¼Ò<br>
-											25¡¢20130105ÒìÃÎ£ºÎÒ¾ÍÊÇÒ®öÕ£¬ÎÒÏóÒ®öÕÒ»ÑùÊÕÃÅÍ½£¬ÎÒµÄÃÅÍ½±ÈÒ®öÕÃÅÍ½»¹ÒªÈõÐ¡£¬µ«³É¾Í¾Þ´ó£¬³ÉÁËÆóÒµ¼ÒÐ¬Íõ¡£</font></td>
+											ç±³åº—&nbsp;&nbsp;10:03:23<br>
+											çŽ°åœ¨æœ‰å¤šå°‘æ•™ä¼— <br>
+											è‘›äº¦æ°‘&nbsp;&nbsp;10:04:36<br>
+											æ²¡ç»„ç»‡ï¼Œéƒ½æ˜¯æš—ä¸­ä¿¡çš„ï¼Œ10ä¸‡å¤š<br>
+											ç±³åº—&nbsp;&nbsp;10:05:26<br>
+											é‚£ä¸ºä»€ä¹ˆè¿˜æŒ‚åï¼Ÿ <br>
+											è‘›äº¦æ°‘&nbsp;&nbsp;10:05:56<br>
+											æˆ‘ä»¬ä¸æžç»„ç»‡ï¼Œä¸æžäººå¤´ï¼Œåªæ±‚çœŸç†<br>
+											æŒ‚ä¸ªåå¥½çœ‹ç‚¹<br>
+											è‘›äº¦æ°‘&nbsp;&nbsp;10:07:18<br>
+											ä½ ä¼šæ˜¯ä¸ªä¼ä¸šå®¶<br>
+											25ã€20130105å¼‚æ¢¦ï¼šæˆ‘å°±æ˜¯è€¶ç¨£ï¼Œæˆ‘è±¡è€¶ç¨£ä¸€æ ·æ”¶é—¨å¾’ï¼Œæˆ‘çš„é—¨å¾’æ¯”è€¶ç¨£é—¨å¾’è¿˜è¦å¼±å°ï¼Œä½†æˆå°±å·¨å¤§ï¼Œæˆäº†ä¼ä¸šå®¶éž‹çŽ‹ã€‚</font></td>
 										</tr>
 									</table>
 								</div>
@@ -174,6 +174,7 @@
 		</div>
 	</div>
 </div>
+<iframe MARGINWIDTH=0 MARGINHEIGHT=0 HSPACE=0 VSPACE=0 FRAMEBORDER=0 SCROLLING=no src="../scsl/footer.html" height=â€œautoâ€ width="100%"></iframe>
 
 </body>
 
