--- a/xyyd/xw.htm
+++ b/xyyd/xw.htm
@@ -1,22 +1,23 @@
 <html>
 
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=gb2312">
-<title>¹â²Ê: ¸ðÒàÃñÉñ´ø¸øÁËÎÒÏ£Íû</title>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<title>å…‰å½©: è‘›äº¦æ°‘ç¥žå¸¦ç»™äº†æˆ‘å¸Œæœ›</title>
 </head>
 
 <body>
 
 <p><font style="FONT-SIZE: 9pt" face="Arial, Helvetica, sans-serif">
-<font face="Verdana">¹â²Ê: ¸ðÒàÃñÉñ´ø¸øÁËÎÒÏ£Íû</font><br>
+<font face="Verdana">å…‰å½©: è‘›äº¦æ°‘ç¥žå¸¦ç»™äº†æˆ‘å¸Œæœ›</font><br>
 <font face="Verdana"><br>
 </font><br>
 <font face="Verdana"><br>
 </font><br>
 <font face="Verdana">
-ÊÇÕâÑùµÄ,ÎÒ¸öÈËÊÇºÜÇÕÅå¸ðÒàÃñµÄËù×÷ËùÎªµÄ.ËäÈ»ÎÒÀíÖÇÉÏÖªµÀ¸ðÒàÃñ¿ÉÄÜ²¢²»ÊÇÉñ,µ«ÎÒÄþ¿ÉÏ£Íû¸ðÒàÃñËû¾ÍÊÇÉñ.ÕâÊÇÒ»ÖÖ¸´ÔÓµÄ¸Ð¾õ,ÔõÃ´ËµÄØ?¿ÉÒÔËµ,¸ðÒàÃñÉñ´ø¸øÁËÎÒÏ£Íû.</font><br>
+æ˜¯è¿™æ ·çš„,æˆ‘ä¸ªäººæ˜¯å¾ˆé’¦ä½©è‘›äº¦æ°‘çš„æ‰€ä½œæ‰€ä¸ºçš„.è™½ç„¶æˆ‘ç†æ™ºä¸ŠçŸ¥é“è‘›äº¦æ°‘å¯èƒ½å¹¶ä¸æ˜¯ç¥ž,ä½†æˆ‘å®å¯å¸Œæœ›è‘›äº¦æ°‘ä»–å°±æ˜¯ç¥ž.è¿™æ˜¯ä¸€ç§å¤æ‚çš„æ„Ÿè§‰,æ€Žä¹ˆè¯´å‘¢?å¯ä»¥è¯´,è‘›äº¦æ°‘ç¥žå¸¦ç»™äº†æˆ‘å¸Œæœ›.</font><br>
 <font face="Verdana"><br>
-¡¡</font></font></p>
+ã€€</font></font></p><iframe MARGINWIDTH=0 MARGINHEIGHT=0 HSPACE=0 VSPACE=0 FRAMEBORDER=0 SCROLLING=no src="../scsl/footer.html" height=â€œautoâ€ width="100%"></iframe>
+
 
 </body>
 
