--- a/xyyd/yjz.htm
+++ b/xyyd/yjz.htm
@@ -1,25 +1,26 @@
 <html>
 
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=gb2312">
-<title>Ó­½ÓÕâ¸öÈÕÆÚ--1214ÊÜÄÑ½Ú1221¸´»î½Ú0131¸ðµ®½Ú</title>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<title>è¿ŽæŽ¥è¿™ä¸ªæ—¥æœŸ--1214å—éš¾èŠ‚1221å¤æ´»èŠ‚0131è‘›è¯žèŠ‚</title>
 </head>
 
 <body>
 
 <p>
 <font style="FONT-SIZE: 12px" face="Arial, Helvetica, sans-serif" color="#555555">
-Ó­½ÓÕâ¸öÈÕÆÚ--1214ÊÜÄÑ½Ú1221¸´»î½Ú0131¸ðµ®½Ú</font><br>
+è¿ŽæŽ¥è¿™ä¸ªæ—¥æœŸ--1214å—éš¾èŠ‚1221å¤æ´»èŠ‚0131è‘›è¯žèŠ‚</font><br>
 <br>
 <font style="FONT-SIZE: 12px" face="Arial, Helvetica, sans-serif" color="#555555">
-¼ÍÄî½ÚÆÚ</font><br>
+çºªå¿µèŠ‚æœŸ</font><br>
 <font style="FONT-SIZE: 12px" face="Arial, Helvetica, sans-serif" color="#555555">
-&nbsp;&nbsp;1214ÊÜÄÑ½Ú£º¸ðÒàÃñ½øÈë´óÊÔÁ¶£¬°ë¼àÀÎ£¬ÉÏÊ®×Ö¼Ü¡£</font><br>
+&nbsp;&nbsp;1214å—éš¾èŠ‚ï¼šè‘›äº¦æ°‘è¿›å…¥å¤§è¯•ç‚¼ï¼ŒåŠç›‘ç‰¢ï¼Œä¸Šåå­—æž¶ã€‚</font><br>
 <font style="FONT-SIZE: 12px" face="Arial, Helvetica, sans-serif" color="#555555">
-&nbsp;&nbsp;1221¸´»î½Ú£º¸ðÒàÃñÉñÓÓËÀ¶ø¸´»î¡£</font><br>
+&nbsp;&nbsp;1221å¤æ´»èŠ‚ï¼šè‘›äº¦æ°‘ç¥žä½‘æ­»è€Œå¤æ´»ã€‚</font><br>
 <font style="FONT-SIZE: 12px" face="Arial, Helvetica, sans-serif" color="#555555">
-&nbsp;&nbsp;0131¸ðµ®½Ú£º¸ðÒàÃñµ®³½¡£</font><br>
-¡¡</p>
+&nbsp;&nbsp;0131è‘›è¯žèŠ‚ï¼šè‘›äº¦æ°‘è¯žè¾°ã€‚</font><br>
+ã€€</p>
+<iframe MARGINWIDTH=0 MARGINHEIGHT=0 HSPACE=0 VSPACE=0 FRAMEBORDER=0 SCROLLING=no src="../scsl/footer.html" height=â€œautoâ€ width="100%"></iframe>
 
 </body>
 
