--- a/xyyd/ysm.htm
+++ b/xyyd/ysm.htm
@@ -1,16 +1,17 @@
 <html>
 
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=gb2312">
-<title>Ò®öÕ+Âí¿ËË¼+Âõ¿Ë¶û.½Ü¿ËÑ·+¹ù¾¸+ÌÆ²®»¢=¸ðÒàÃñÉñ
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<title>è€¶ç¨£+é©¬å…‹æ€+è¿ˆå…‹å°”.æ°å…‹é€Š+éƒ­é–+å”ä¼¯è™Ž=è‘›äº¦æ°‘ç¥ž
 </title>
 </head>
 
 <body>
 
 <p><font style="FONT-SIZE: 12px" face="Verdana" color="#555555">
-Ò®öÕ+Âí¿ËË¼+Âõ¿Ë¶û.½Ü¿ËÑ·+¹ù¾¸+ÌÆ²®»¢=¸ðÒàÃñÉñ</font><br>
-¡¡</p>
+è€¶ç¨£+é©¬å…‹æ€+è¿ˆå…‹å°”.æ°å…‹é€Š+éƒ­é–+å”ä¼¯è™Ž=è‘›äº¦æ°‘ç¥ž</font><br>
+ã€€</p>
+<iframe MARGINWIDTH=0 MARGINHEIGHT=0 HSPACE=0 VSPACE=0 FRAMEBORDER=0 SCROLLING=no src="../scsl/footer.html" height=â€œautoâ€ width="100%"></iframe>
 
 </body>
 
