--- a/xyyd/yw.htm
+++ b/xyyd/yw.htm
@@ -1,32 +1,33 @@
 <html>
 
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=gb2312">
-<title>¹â²Ê£º¸ðÒàÃñËùÖø¡¶Éñ¾­¡·ÖÐ´«µÝµÄ¾«Éñ£¬È´ÊÇÈÃÈËÑöÍûµÄ</title>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<title>å…‰å½©ï¼šè‘›äº¦æ°‘æ‰€è‘—ã€Šç¥žç»ã€‹ä¸­ä¼ é€’çš„ç²¾ç¥žï¼Œå´æ˜¯è®©äººä»°æœ›çš„</title>
 </head>
 
 <body>
 
 <p><font face="Verdana" style="font-size: 12px; color: rgb(85,85,85)">
-¹â²Ê£º¸ðÒàÃñËùÖø¡¶Éñ¾­¡·ÖÐ´«µÝµÄ¾«Éñ£¬È´ÊÇÈÃÈËÑöÍûµÄ</font><br>
+å…‰å½©ï¼šè‘›äº¦æ°‘æ‰€è‘—ã€Šç¥žç»ã€‹ä¸­ä¼ é€’çš„ç²¾ç¥žï¼Œå´æ˜¯è®©äººä»°æœ›çš„</font><br>
 <font face="Verdana" style="font-size: 12px; color: rgb(85,85,85)"><br>
 </font><br>
 <font face="Verdana" style="font-size: 12px; color: rgb(85,85,85)"><br>
 </font><br>
 <font face="Verdana" style="font-size: 12px; color: rgb(85,85,85)">
-ÖÁÓÚÎÒ¸ú¸ðÒàÃñÉñµÄÐÅÍ½µÄ¹ØÏµ£¬ÎÒÖ»ÄÜ¹»Ëµ£¬ÄãÃ»ÓÐ¿´¹ý¡¶Éñ¾­¡·£¬ËùÒÔ²»ÖªµÀÎªÊ²Ã´ÎÒÄÇÃ´ÍÆ³ç¸ðÒàÃñ¡£</font><br>
+è‡³äºŽæˆ‘è·Ÿè‘›äº¦æ°‘ç¥žçš„ä¿¡å¾’çš„å…³ç³»ï¼Œæˆ‘åªèƒ½å¤Ÿè¯´ï¼Œä½ æ²¡æœ‰çœ‹è¿‡ã€Šç¥žç»ã€‹ï¼Œæ‰€ä»¥ä¸çŸ¥é“ä¸ºä»€ä¹ˆæˆ‘é‚£ä¹ˆæŽ¨å´‡è‘›äº¦æ°‘ã€‚</font><br>
 <font face="Verdana" style="font-size: 12px; color: rgb(85,85,85)">
-¸ðÒàÃñ²»ÊÇÉñ£¬ÕâµãÎÒ×ÔÈ»Çå³þµÄÖªµÀ¡£</font><br>
+è‘›äº¦æ°‘ä¸æ˜¯ç¥žï¼Œè¿™ç‚¹æˆ‘è‡ªç„¶æ¸…æ¥šçš„çŸ¥é“ã€‚</font><br>
 <font face="Verdana" style="font-size: 12px; color: rgb(85,85,85)">
-µ«ÊÇ£¬¸ðÒàÃñËùÖø¡¶Éñ¾­¡·ÖÐ´«µÝµÄ¾«Éñ£¬È´ÊÇÈÃÈËÑöÍûµÄ¡£</font><br>
+ä½†æ˜¯ï¼Œè‘›äº¦æ°‘æ‰€è‘—ã€Šç¥žç»ã€‹ä¸­ä¼ é€’çš„ç²¾ç¥žï¼Œå´æ˜¯è®©äººä»°æœ›çš„ã€‚</font><br>
 <font face="Verdana" style="font-size: 12px; color: rgb(85,85,85)"><br>
 </font><br>
 <font face="Verdana" style="font-size: 12px; color: rgb(85,85,85)"><br>
 </font><br>
 <font style="font-size: 12px; color: rgb(85,85,85)" face="Arial, Helvetica, sans-serif">
-ÒòÎª¸ðÒàÃñÐ´µÄÒ»±¾Êé£¬·Ç³£ÖµµÃÈËÃÇÑ§Ï°¡£ÄÇÀïÃæËùÌåÏÖ³öµÄ¸ßÉÐÆ·ÖÊÓëÇé²Ù£¬ÊÇÎÒÃÇ×îºÃµÄ°ñÑù¡£·ñÔòÄãÒÔÎªÎÒ»áÎÞÔµÎÞ¹ÊµÄÍÆ³ç¸ðÒàÃñÉñ£¿ </font><br>
+å› ä¸ºè‘›äº¦æ°‘å†™çš„ä¸€æœ¬ä¹¦ï¼Œéžå¸¸å€¼å¾—äººä»¬å­¦ä¹ ã€‚é‚£é‡Œé¢æ‰€ä½“çŽ°å‡ºçš„é«˜å°šå“è´¨ä¸Žæƒ…æ“ï¼Œæ˜¯æˆ‘ä»¬æœ€å¥½çš„æ¦œæ ·ã€‚å¦åˆ™ä½ ä»¥ä¸ºæˆ‘ä¼šæ— ç¼˜æ— æ•…çš„æŽ¨å´‡è‘›äº¦æ°‘ç¥žï¼Ÿ </font><br>
 <br>
-¡¡</p>
+ã€€</p><iframe MARGINWIDTH=0 MARGINHEIGHT=0 HSPACE=0 VSPACE=0 FRAMEBORDER=0 SCROLLING=no src="../scsl/footer.html" height=â€œautoâ€ width="100%"></iframe>
+
 
 </body>
 
