--- a/xyyd/ywm.htm
+++ b/xyyd/ywm.htm
@@ -1,8 +1,8 @@
 <html>
 
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=gb2312">
-<title>Ò»Íí£¬ÃÎµ½Ò»¸ö½Ð¡°¸ðÒàÃñ¡±µÄÈËÄÃ×ÅËûÐ´µÄÊé¸øÎÒ¿´</title>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<title>ä¸€æ™šï¼Œæ¢¦åˆ°ä¸€ä¸ªå«â€œè‘›äº¦æ°‘â€çš„äººæ‹¿ç€ä»–å†™çš„ä¹¦ç»™æˆ‘çœ‹</title>
 </head>
 
 <body>
@@ -22,19 +22,19 @@
 											<td id="postmessage_231" class="t_f">
 											<p style="TEXT-ALIGN: left; LINE-HEIGHT: 18px">
 											<font face="Verdana" style="font-size: 12px; color: rgb(85,85,85)">
-											Ò»Íí£¬ÃÎµ½Ò»¸ö½Ð¡°¸ðÒàÃñ¡±µÄÈËÄÃ×ÅËûÐ´µÄÊé¸øÎÒ¿´</font></p>
-											<p style="TEXT-ALIGN: left; LINE-HEIGHT: 18px">¡¡</p>
+											ä¸€æ™šï¼Œæ¢¦åˆ°ä¸€ä¸ªå«â€œè‘›äº¦æ°‘â€çš„äººæ‹¿ç€ä»–å†™çš„ä¹¦ç»™æˆ‘çœ‹</font></p>
+											<p style="TEXT-ALIGN: left; LINE-HEIGHT: 18px">ã€€</p>
 											<p style="TEXT-ALIGN: left; LINE-HEIGHT: 18px">
 											<font face="Verdana" style="font-size: 12px; color: rgb(85,85,85)">
-											´º½Ú»ØÏç¹ýÄê<br>
-											Ò»Íí£¬ÃÎµ½Ò»¸ö½Ð¡°¸ðÒàÃñ¡±µÄÈËÄÃ×ÅËûÐ´µÄÊé¸øÎÒ¿´£¬<br>
-											ËµËûÈçºÎµÄ°®»¤²ÔÉú°ÙÐÕ£¬ÈçºÎµÄ¾È»¤ÌìÏÂÖÚÉú<br>
-											ÎÒ¿´ÊéÐ´µÃ²»´í£¬Í»È»¾õµÃËûÔ­À´²»¹ýÊÇÎªÁË¡°¹¦Àû¡±<br>
-											Ëû·¢ÏÖÎÒ¿´ÆÆÁËËûµÄÕæÊµÓÃÐÄ£¬ÄÕÐß³ÉÅ­£¬¾ÓÈ»¾ÙÊÖ´òÎÒ<br>
-											ÎÒ¾ÙÆð½ÅºÝºÝµÄ»ØÁËËûÒ»½Å<br>
-											¾ÍÐÑÁË</font></p>
+											æ˜¥èŠ‚å›žä¹¡è¿‡å¹´<br>
+											ä¸€æ™šï¼Œæ¢¦åˆ°ä¸€ä¸ªå«â€œè‘›äº¦æ°‘â€çš„äººæ‹¿ç€ä»–å†™çš„ä¹¦ç»™æˆ‘çœ‹ï¼Œ<br>
+											è¯´ä»–å¦‚ä½•çš„çˆ±æŠ¤è‹ç”Ÿç™¾å§“ï¼Œå¦‚ä½•çš„æ•‘æŠ¤å¤©ä¸‹ä¼—ç”Ÿ<br>
+											æˆ‘çœ‹ä¹¦å†™å¾—ä¸é”™ï¼Œçªç„¶è§‰å¾—ä»–åŽŸæ¥ä¸è¿‡æ˜¯ä¸ºäº†â€œåŠŸåˆ©â€<br>
+											ä»–å‘çŽ°æˆ‘çœ‹ç ´äº†ä»–çš„çœŸå®žç”¨å¿ƒï¼Œæ¼ç¾žæˆæ€’ï¼Œå±…ç„¶ä¸¾æ‰‹æ‰“æˆ‘<br>
+											æˆ‘ä¸¾èµ·è„šç‹ ç‹ çš„å›žäº†ä»–ä¸€è„š<br>
+											å°±é†’äº†</font></p>
 											<br>
-¡¡</td>
+ã€€</td>
 										</tr>
 									</table>
 								</div>
@@ -46,7 +46,8 @@
 			</div>
 		</div>
 	</div>
-</div>
+</div><iframe MARGINWIDTH=0 MARGINHEIGHT=0 HSPACE=0 VSPACE=0 FRAMEBORDER=0 SCROLLING=no src="../scsl/footer.html" height=â€œautoâ€ width="100%"></iframe>
+
 
 </body>
 
