--- a/xyyd/zh.htm
+++ b/xyyd/zh.htm
@@ -1,8 +1,8 @@
 <html>
 
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=gb2312">
-<title>¸ðÒàÃñÖ®»¨±Ø½«ÂúÌìÏÂ</title>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<title>è‘›äº¦æ°‘ä¹‹èŠ±å¿…å°†æ»¡å¤©ä¸‹</title>
 </head>
 
 <body>
@@ -22,20 +22,20 @@
 											<td id="postmessage_218" class="t_f">
 											<p style="TEXT-ALIGN: left; LINE-HEIGHT: 18px">
 											<font face="Verdana" style="font-size: 12px; color: rgb(85,85,85)">
-											¸ðÒàÃñÖ®»¨±Ø½«ÂúÌìÏÂ</font></p>
-											<p style="TEXT-ALIGN: left; LINE-HEIGHT: 18px">¡¡</p>
+											è‘›äº¦æ°‘ä¹‹èŠ±å¿…å°†æ»¡å¤©ä¸‹</font></p>
+											<p style="TEXT-ALIGN: left; LINE-HEIGHT: 18px">ã€€</p>
 											<p style="TEXT-ALIGN: left; LINE-HEIGHT: 18px">
 											<font face="Verdana" style="font-size: 12px; color: rgb(85,85,85)">
-											¸ðÒàÃñµÄÔ­ÐÎ -- 
-											ÀîÐ¡Åô£¬Ëû×Ô¼ÒÔÚ×öÊ¥ÈË´óÃÎ£¬Àî¼Ò´óËÁÐû´«ÄÃ±¾ÈË×öµ²¼ýÅÆ¡£</font></p>
+											è‘›äº¦æ°‘çš„åŽŸå½¢ -- 
+											æŽå°é¹ï¼Œä»–è‡ªå®¶åœ¨åšåœ£äººå¤§æ¢¦ï¼ŒæŽå®¶å¤§è‚†å®£ä¼ æ‹¿æœ¬äººåšæŒ¡ç®­ç‰Œã€‚</font></p>
 											<p style="TEXT-ALIGN: left; LINE-HEIGHT: 18px">
 											<font face="Verdana" style="font-size: 12px; color: rgb(85,85,85)">
-											¸ðÒàÃñÖ®»¨±Ø½«ÂúÌìÏÂ¡£</font></p>
+											è‘›äº¦æ°‘ä¹‹èŠ±å¿…å°†æ»¡å¤©ä¸‹ã€‚</font></p>
 											<p style="TEXT-ALIGN: left; LINE-HEIGHT: 18px">
 											<font face="Verdana" style="font-size: 12px; color: rgb(85,85,85)">
-											ÀîÐ¡ÅôÑ¡ÃÀºó¹¬ÈËÊýÒÑ¾­³¬¹ýÊ®Íò£¬ÉøÍ¸¸÷´óÑ§Ð££¬ÂÒÄÃÀÍ×Ê×öµ²¼ýÅÆ´óËÁÐû´«¡£</font></p>
+											æŽå°é¹é€‰ç¾ŽåŽå®«äººæ•°å·²ç»è¶…è¿‡åä¸‡ï¼Œæ¸—é€å„å¤§å­¦æ ¡ï¼Œä¹±æ‹¿åŠ³èµ„åšæŒ¡ç®­ç‰Œå¤§è‚†å®£ä¼ ã€‚</font></p>
 											<br>
-¡¡</td>
+ã€€</td>
 										</tr>
 									</table>
 								</div>
@@ -47,7 +47,8 @@
 			</div>
 		</div>
 	</div>
-</div>
+</div><iframe MARGINWIDTH=0 MARGINHEIGHT=0 HSPACE=0 VSPACE=0 FRAMEBORDER=0 SCROLLING=no src="../scsl/footer.html" height=â€œautoâ€ width="100%"></iframe>
+
 
 </body>
 
