--- a/xyyd/zmz.htm
+++ b/xyyd/zmz.htm
@@ -1,8 +1,8 @@
 <html>
 
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=gb2312">
-<title>ÔõÃ´ÕâÃ´¶à¸ðÉñ¹÷µÄÌû×Ó</title>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<title>æ€Žä¹ˆè¿™ä¹ˆå¤šè‘›ç¥žæ£çš„å¸–å­</title>
 </head>
 
 <body>
@@ -26,20 +26,20 @@
 													<font style="FONT-SIZE: 9pt" face="Arial, Helvetica, sans-serif">
 													<div align="left">
 														<font face="Verdana">
-														ÔõÃ´ÕâÃ´¶à¸ðÉñ¹÷µÄÌû×Ó</font></div>
+														æ€Žä¹ˆè¿™ä¹ˆå¤šè‘›ç¥žæ£çš„å¸–å­</font></div>
 													<div align="left">
 														<font face="Verdana">
 														<br>
-														¸ðÒàÃñÔÚÖÐÑëÉí¾ÓºÎÖ°£¿ÔÚÎÒ¿´À´£¬Äã×ø²»µ½È¨Á¦Î»ÖÃ£¬ÈÎºÎ¾ÈÊÀµÄ»°¶¼ÊÇ³¶µ­£¬¸ð¹·¹ö´Ö£¡<br>
-¡¡</font></div>
+														è‘›äº¦æ°‘åœ¨ä¸­å¤®èº«å±…ä½•èŒï¼Ÿåœ¨æˆ‘çœ‹æ¥ï¼Œä½ åä¸åˆ°æƒåŠ›ä½ç½®ï¼Œä»»ä½•æ•‘ä¸–çš„è¯éƒ½æ˜¯æ‰¯æ·¡ï¼Œè‘›ç‹—æ»šç²—ï¼<br>
+ã€€</font></div>
 													<font face="Verdana"><br>
 													</font><br>
 													</font><br>
-¡¡</td>
+ã€€</td>
 												</tr>
 											</table>
 											<br>
-¡¡</td>
+ã€€</td>
 										</tr>
 									</table>
 								</div>
@@ -51,7 +51,8 @@
 			</div>
 		</div>
 	</div>
-</div>
+</div><iframe MARGINWIDTH=0 MARGINHEIGHT=0 HSPACE=0 VSPACE=0 FRAMEBORDER=0 SCROLLING=no src="../scsl/footer.html" height=â€œautoâ€ width="100%"></iframe>
+
 
 </body>
 
