--- a/xyyd/zssf.htm
+++ b/xyyd/zssf.htm
@@ -1,20 +1,21 @@
 <html>
 
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=gb2312">
-<title>¸Õ²Å´ÖÂÔ¿´ÁËÒ»ÏÂ<<Éñ¾­>>.¸ðÒàÃñ,ËûÖÁÉÙÊÇÒ»×ùÉ½·å
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<title>åˆšæ‰ç²—ç•¥çœ‹äº†ä¸€ä¸‹<<ç¥žç»>>.è‘›äº¦æ°‘,ä»–è‡³å°‘æ˜¯ä¸€åº§å±±å³°
 </title>
 </head>
 
 <body>
 
-<p>¸Õ²Å´ÖÂÔ¿´ÁËÒ»ÏÂ&lt;&lt;Éñ¾­&gt;&gt;.¸ðÒàÃñ,ËûÖÁÉÙÊÇÒ»×ùÉ½·å<br>
+<p>åˆšæ‰ç²—ç•¥çœ‹äº†ä¸€ä¸‹&lt;&lt;ç¥žç»&gt;&gt;.è‘›äº¦æ°‘,ä»–è‡³å°‘æ˜¯ä¸€åº§å±±å³°<br>
 <br>
 <br>
 <br>
-by:Ê¥»ðÖÐµÄÊÀ½ç<br>
+by:åœ£ç«ä¸­çš„ä¸–ç•Œ<br>
 <br>
-¡¡</p>
+ã€€</p><iframe MARGINWIDTH=0 MARGINHEIGHT=0 HSPACE=0 VSPACE=0 FRAMEBORDER=0 SCROLLING=no src="../scsl/footer.html" height=â€œautoâ€ width="100%"></iframe>
+
 
 </body>
 
