--- a/xyyd/zys.htm
+++ b/xyyd/zys.htm
@@ -1,8 +1,8 @@
 <html>
 
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=gb2312">
-<title>ÕâÈËÊÇÌù°ÉÉÏ×îÓÐÃûÆøµÄ²Ý¸ù»ù¶½Í½</title>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<title>è¿™äººæ˜¯è´´å§ä¸Šæœ€æœ‰åæ°”çš„è‰æ ¹åŸºç£å¾’</title>
 </head>
 
 <body>
@@ -22,39 +22,39 @@
 											<td id="postmessage_233" class="t_f">
 											<p style="TEXT-ALIGN: left; LINE-HEIGHT: 18px">
 											<font face="Verdana" style="font-size: 12px; color: rgb(85,85,85)">
-											ÕâÈËÊÇÌù°ÉÉÏ×îÓÐÃûÆøµÄ²Ý¸ù»ù¶½Í½</font></p>
+											è¿™äººæ˜¯è´´å§ä¸Šæœ€æœ‰åæ°”çš„è‰æ ¹åŸºç£å¾’</font></p>
 											<font style="font-size: 12px; color: rgb(85,85,85)" face="Verdana">
 											<div align="left">
 												<font face="Arial, Helvetica, sans-serif">
 												<br>
-												¸ðÒàÃñ</font></div>
+												è‘›äº¦æ°‘</font></div>
 											<div align="left">
 												<font face="Arial, Helvetica, sans-serif">
-												Ã²ËÆ»ù¶½¿ñÍ½</font></div>
+												è²Œä¼¼åŸºç£ç‹‚å¾’</font></div>
 											<div align="left">
 												<font face="Arial, Helvetica, sans-serif">
-												¶ªÁË¸ðÌìÊ¦µÄÁ³</font></div>
+												ä¸¢äº†è‘›å¤©å¸ˆçš„è„¸</font></div>
 											<div align="left">
 												<font face="Arial, Helvetica, sans-serif">
-												ËûÐ¡µÜºÜ¶à</font></div>
+												ä»–å°å¼Ÿå¾ˆå¤š</font></div>
 											<div align="left">
 												<font face="Arial, Helvetica, sans-serif">
-												²»µÍÓÚ60</font></div>
+												ä¸ä½ŽäºŽ60</font></div>
 											<div align="left">
 												<font face="Arial, Helvetica, sans-serif">
-												Ëû×îÀ÷º¦µÄ¼¼ÄÜÊÇÁ³Æ¤ºñ »ØÑª¿ì</font></div>
+												ä»–æœ€åŽ‰å®³çš„æŠ€èƒ½æ˜¯è„¸çš®åŽš å›žè¡€å¿«</font></div>
 											<div align="left">
 												<font face="Arial, Helvetica, sans-serif">
-												&gt;&gt;&gt;Èç¹ûÄãÔÚËûÖªÃû¶ÈºÜ¸ß¼´½«Éý¼¶ÒªÕÐµ½Ð¡µÜÀ©´óµÄÊ±ºò³öÊÖßÇàêÁËËû£¬</font></div>
+												&gt;&gt;&gt;å¦‚æžœä½ åœ¨ä»–çŸ¥ååº¦å¾ˆé«˜å³å°†å‡çº§è¦æ‹›åˆ°å°å¼Ÿæ‰©å¤§çš„æ—¶å€™å‡ºæ‰‹å’”åš“äº†ä»–ï¼Œ</font></div>
 											<div align="left">
 												<font face="Arial, Helvetica, sans-serif">
-												ÔÚÈ¥ÔìÊÆºé»Ä¾Í³öÃûÁË</font></div>
+												åœ¨åŽ»é€ åŠ¿æ´ªè’å°±å‡ºåäº†</font></div>
 											</font>
 											<p style="TEXT-ALIGN: left; LINE-HEIGHT: 18px">
 											<font face="Verdana" style="font-size: 12px; color: rgb(85,85,85)">
-											ÄãÊÇ²»ÖªµÀËûÔÚÍøÉÏºÍ¶àÉÙÈË¶ÔÅç ÑªÌõÌ«ÃÍ</font></p>
+											ä½ æ˜¯ä¸çŸ¥é“ä»–åœ¨ç½‘ä¸Šå’Œå¤šå°‘äººå¯¹å–· è¡€æ¡å¤ªçŒ›</font></p>
 											<br>
-¡¡</td>
+ã€€</td>
 										</tr>
 									</table>
 								</div>
@@ -67,6 +67,7 @@
 		</div>
 	</div>
 </div>
+<iframe MARGINWIDTH=0 MARGINHEIGHT=0 HSPACE=0 VSPACE=0 FRAMEBORDER=0 SCROLLING=no src="../scsl/footer.html" height=â€œautoâ€ width="100%"></iframe>
 
 </body>
 
