--- a/znzc/dyy.htm
+++ b/znzc/dyy.htm
@@ -1,8 +1,8 @@
 <html>
 
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=gb2312">
-<title>¶«ÑÇ×Ú½ÌÎÄÃ÷¼ä¶Ô»°ÂÛÌ³³ïÎ¯»áÑûÇëÅºÁË 
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<title>ä¸œäºšå®—æ•™æ–‡æ˜Žé—´å¯¹è¯è®ºå›ç­¹å§”ä¼šé‚€è¯·è—•äº† 
 </title>
 <style>
 <!--
@@ -20,18 +20,19 @@
 		<td class="inforight" vAlign="top">
 		<base target="_blank">
 		<div class="bodys" onload="this.style.overflowX='auto';">
-			ÑûÇëº¯&#8207;
-			<p>·¢¼þÈË£º ¶«ÑÇ×Ú½ÌÎÄÃ÷¼ä¶Ô»°ÂÛÌ³³ïÎ¯»á (<a href="mailto:earcf.org@gmail.com">earcf.org@gmail.com</a>)
+			é‚€è¯·å‡½&#8207;
+			<p>å‘ä»¶äººï¼š ä¸œäºšå®—æ•™æ–‡æ˜Žé—´å¯¹è¯è®ºå›ç­¹å§”ä¼š (<a href="mailto:earcf.org@gmail.com">earcf.org@gmail.com</a>)
 			</p>
-			<p>Äú¿ÉÄÜ²»ÖªµÀ·¢¼þÈËÊÇË­¡£ ±ê¼ÇÎª°²È« | ±ê¼ÇÎª²»°²È« ·¢ËÍÊ±¼ä£º 2007Äê8ÔÂ29ÈÕ 12:59:10 </p>
-			<p>ÊÕ¼þÈË£º <a href="mailto:webmaster@geyimin.com">webmaster@geyimin.com</a>
+			<p>æ‚¨å¯èƒ½ä¸çŸ¥é“å‘ä»¶äººæ˜¯è°ã€‚ æ ‡è®°ä¸ºå®‰å…¨ | æ ‡è®°ä¸ºä¸å®‰å…¨ å‘é€æ—¶é—´ï¼š 2007å¹´8æœˆ29æ—¥ 12:59:10 </p>
+			<p>æ”¶ä»¶äººï¼š <a href="mailto:webmaster@geyimin.com">webmaster@geyimin.com</a>
 			</p>
-			<p>ÏÂÔØÇ°½øÐÐ°²È«É¨Ãè ¶«ÑÇ×Ú½ÌÎÄÃ÷¼ä¶Ô»°...doc (30.3 KB), ½ÌÎÄÃ÷¼ä¶Ô»°ÂÛÌ³³ï...doc (24.6 KB), 
-			ÂÛÌ³ÁªÒê×é¼Ä³öº¯.doc (24.1 KB)</p>
-			<p>&nbsp;¸óÏÂÄúºÃ£º¾­ÑÐ¾¿ÎÒÃÇ·¢³ö´Ëº¯£¡ &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; ³ïÎ¯»áÉÏ</div>
+			<p>ä¸‹è½½å‰è¿›è¡Œå®‰å…¨æ‰«æ ä¸œäºšå®—æ•™æ–‡æ˜Žé—´å¯¹è¯...doc (30.3 KB), æ•™æ–‡æ˜Žé—´å¯¹è¯è®ºå›ç­¹...doc (24.6 KB), 
+			è®ºå›è”è°Šç»„å¯„å‡ºå‡½.doc (24.1 KB)</p>
+			<p>&nbsp;é˜ä¸‹æ‚¨å¥½ï¼šç»ç ”ç©¶æˆ‘ä»¬å‘å‡ºæ­¤å‡½ï¼ &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; ç­¹å§”ä¼šä¸Š</div>
 		</td>
 	</tr>
-</table>
+</table><iframe MARGINWIDTH=0 MARGINHEIGHT=0 HSPACE=0 VSPACE=0 FRAMEBORDER=0 SCROLLING=no src="../scsl/footer.html" height=â€œautoâ€ width="100%"></iframe>
+
 
 </body>
 
