--- a/znzc/bxyd.htm
+++ b/znzc/bxyd.htm
@@ -1,8 +1,8 @@
 <html>
 
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=gb2312">
-<title>¾ÝÈ¨ÍþÈËÊ¿ÏûÏ¢,²¼Ê²Ò²¶Á¸èÒÚÃñ¾­
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<title>æ®æƒå¨äººå£«æ¶ˆæ¯,å¸ƒä»€ä¹Ÿè¯»æ­Œäº¿æ°‘ç»
 
 
 </title>
@@ -17,22 +17,22 @@
 				<tr>
 					<td class="postcontent" ondblclick="ajaxget('modcp.php?action=editmessage&amp;pid=2472&amp;tid=1050', 'postmessage_2472')">
 					<div class="postmessage defaultpost">
-						<h2>¾ÝÈ¨ÍþÈËÊ¿ÏûÏ¢,²¼Ê²Ò²¶Á¸èÒÚÃñ¾­</h2>
+						<h2>æ®æƒå¨äººå£«æ¶ˆæ¯,å¸ƒä»€ä¹Ÿè¯»æ­Œäº¿æ°‘ç»</h2>
 						<div class="t_msgfont" id="postmessage_2472">
-							¾ÝÈ¨ÍþÈËÊ¿ÏûÏ¢,²¼Ê²Ò²¶Á¸èÒÚÃñ¾­ 
-							<p>&nbsp;</p>
-							<p>¸èÒÚÃñ¾­½øÈëÃÀ¹ú×ÜÍ³»ÝÑÛ,ÊµÔÚÈÙÐÒ!!! Åºµ±¸üÅ¬Á¦!!!</p>
-							<p>&nbsp;</p>
+							æ®æƒå¨äººå£«æ¶ˆæ¯,å¸ƒä»€ä¹Ÿè¯»æ­Œäº¿æ°‘ç» 
+							<p>ã€€</p>
+							<p>æ­Œäº¿æ°‘ç»è¿›å…¥ç¾Žå›½æ€»ç»Ÿæƒ çœ¼,å®žåœ¨è£å¹¸!!! è—•å½“æ›´åŠªåŠ›!!!</p>
+							<p>ã€€</p>
 							<p>
 							<a href="http://sports.163.com/06/0814/11/2OG0AQE500051CD5.html">
 							http://sports.163.com/06/0814/11/2OG0AQE500051CD5.html</a><br>
-							2006ÄêACÃ×À¼Ö÷½ÌÁ·°²ÇÐÂåµÙÊÇÔÚÏÄ¼¾ÁªÈüÃ×À¼1£º0Õ½Ê¤Âí¾ºµÄÈüºóÃ½Ìå¼ûÃæ»áÉÏ×ö³öÉÏÊö±ÙÒ¥ÐÔÉùÃûµÄ£¬ÓÃËûµÄ»° 
-							½²£¬¡°¡¶Òâ´óÀûÌåÓý±¨¡·ºÍÆäËûÒâ´óÀû»òÕßÎ÷°àÑÀµÄ±¨Ö½Ò»Ñù£¬±Ï¾¹²»ÊÇ¡¶Ò®Ã·¾­¡·¡£¡±</p>
+							2006å¹´ACç±³å…°ä¸»æ•™ç»ƒå®‰åˆ‡æ´›è’‚æ˜¯åœ¨å¤å­£è”èµ›ç±³å…°1ï¼š0æˆ˜èƒœé©¬ç«žçš„èµ›åŽåª’ä½“è§é¢ä¼šä¸Šåšå‡ºä¸Šè¿°è¾Ÿè°£æ€§å£°åçš„ï¼Œç”¨ä»–çš„è¯ 
+							è®²ï¼Œâ€œã€Šæ„å¤§åˆ©ä½“è‚²æŠ¥ã€‹å’Œå…¶ä»–æ„å¤§åˆ©æˆ–è€…è¥¿ç­ç‰™çš„æŠ¥çº¸ä¸€æ ·ï¼Œæ¯•ç«Ÿä¸æ˜¯ã€Šè€¶æ¢…ç»ã€‹ã€‚â€</p>
 							<p><br>
 							<a href="http://www.pcpop.com/doc/0/150/150301.shtml">
 							http://www.pcpop.com/doc/0/150/150301.shtml</a> <br>
-							¶øÔÚ°Ù¶È¡°Éñ°É¡±ÖÐ£¬¸üÓÐÍøÓÑ·¢±íÆÀÂÛÈÏÎª¡°2019ÄêµØÇò½«±»ÖÕ½á¡±Ò»ËµÇ¡ÇÉÑéÖ¤ÁË¡¶Ò®Ã·¾­¡·ÖÐÓÐ¹Ø<span class="t_tag" onclick="tagshow(event)" href="http://bbs.geyimin.com/tag.php?name=%CA%C0%BD%E7">ÊÀ½ç</span> 
-							Ä©ÈÕµÄÔ¤ÑÔ£»</div>
+							è€Œåœ¨ç™¾åº¦â€œç¥žå§â€ä¸­ï¼Œæ›´æœ‰ç½‘å‹å‘è¡¨è¯„è®ºè®¤ä¸ºâ€œ2019å¹´åœ°çƒå°†è¢«ç»ˆç»“â€ä¸€è¯´æ°å·§éªŒè¯äº†ã€Šè€¶æ¢…ç»ã€‹ä¸­æœ‰å…³<span class="t_tag" onclick="tagshow(event)" href="http://bbs.geyimin.com/tag.php?name=%CA%C0%BD%E7">ä¸–ç•Œ</span> 
+							æœ«æ—¥çš„é¢„è¨€ï¼›</div>
 <SCRIPT src="http://bbs.geyimin.com/tag.php?action=relatetag&rtid=1050" 
 type=text/javascript></SCRIPT>
 					</div>
@@ -42,6 +42,7 @@ type=text/javascript></SCRIPT>
 		</div>
 	</form>
 </div>
+<iframe MARGINWIDTH=0 MARGINHEIGHT=0 HSPACE=0 VSPACE=0 FRAMEBORDER=0 SCROLLING=no src="../scsl/footer.html" height=â€œautoâ€ width="100%"></iframe>
 
 </body>
 
