--- a/znzc/hxmc.htm
+++ b/znzc/hxmc.htm
@@ -1,20 +1,21 @@
 <html>
 
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=gb2312">
-<title>¸èÒÚÃñºËÐÄÃû´ÊÂß¼­¹ØÏµ</title>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<title>æ­Œäº¿æ°‘æ ¸å¿ƒåè¯é€»è¾‘å…³ç³»</title>
 </head>
 
 <body>
-¸ðÒàÃñºËÐÄÃû´ÊÂß¼­¹ØÏµ<br>
+è‘›äº¦æ°‘æ ¸å¿ƒåè¯é€»è¾‘å…³ç³»<br>
 <br>
-¸èÒÚÃñ¹ú¼Ê£ºÁé»êÎª¸èÒÚÃñ¼ÛÖµ¹Û¡£ <br>
+æ­Œäº¿æ°‘å›½é™…ï¼šçµé­‚ä¸ºæ­Œäº¿æ°‘ä»·å€¼è§‚ã€‚ <br>
 <br>
-£¨1£©Íø£¨¸èÒÚÃñÌù°É¡¢ÉçÇø£©£º¸èÒÚÃñ¼ÛÖµ¹ÛÐû´«Æ½Ì¨¡£<br>
-£¨2£©¾­£¨¸èÒÚÃñ¾­¡¢¸è»¨Ñµ¡¢»ù¹²ÃËÐûÑÔ£©£º¸èÒÚÃñ¼ÛÖµ¹ÛÄÚÈÝ¡£<br>
-£¨3£©½Ì£¨¸èÒÚÃñ½Ì¡¢»ù¶½½Ì¹²²úÁªÃË£©£ºÒÔ¸èÒÚÃñ¼ÛÖµ¹ÛÎªÖ¸µ¼¡£ <br>
+ï¼ˆ1ï¼‰ç½‘ï¼ˆæ­Œäº¿æ°‘è´´å§ã€ç¤¾åŒºï¼‰ï¼šæ­Œäº¿æ°‘ä»·å€¼è§‚å®£ä¼ å¹³å°ã€‚<br>
+ï¼ˆ2ï¼‰ç»ï¼ˆæ­Œäº¿æ°‘ç»ã€æ­ŒèŠ±è®­ã€åŸºå…±ç›Ÿå®£è¨€ï¼‰ï¼šæ­Œäº¿æ°‘ä»·å€¼è§‚å†…å®¹ã€‚<br>
+ï¼ˆ3ï¼‰æ•™ï¼ˆæ­Œäº¿æ°‘æ•™ã€åŸºç£æ•™å…±äº§è”ç›Ÿï¼‰ï¼šä»¥æ­Œäº¿æ°‘ä»·å€¼è§‚ä¸ºæŒ‡å¯¼ã€‚ <br>
 <br>
-¸èÒÚÃñ¶¨Î»£ºÏÈÖª¡£¸èÒÚÃñ¹ú¼Ê¶¨Î»£ºÉÏµÛ×îºóµÄÔ¼¶¨¡£
+æ­Œäº¿æ°‘å®šä½ï¼šå…ˆçŸ¥ã€‚æ­Œäº¿æ°‘å›½é™…å®šä½ï¼šä¸Šå¸æœ€åŽçš„çº¦å®šã€‚<iframe MARGINWIDTH=0 MARGINHEIGHT=0 HSPACE=0 VSPACE=0 FRAMEBORDER=0 SCROLLING=no src="../scsl/footer.html" height=â€œautoâ€ width="100%"></iframe>
+
 </body>
 
 </html>
