--- a/znzc/ksp.htm
+++ b/znzc/ksp.htm
@@ -1,150 +1,151 @@
 <html>
 
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=gb2312">
-<title>¿ÉËÜÆ·£ºÅÚ´ò¸èÒÚÃñ½Ì----Å¼µÄÒ»ÕÅ´ó×Ö±¨</title>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<title>å¯å¡‘å“ï¼šç‚®æ‰“æ­Œäº¿æ°‘æ•™----å¶çš„ä¸€å¼ å¤§å­—æŠ¥</title>
 </head>
 
 <body>
 
-<p>¿ÉËÜÆ·£ºÅÚ´ò¸èÒÚÃñ½Ì----Å¼µÄÒ»ÕÅ´ó×Ö±¨<br>
+<p>å¯å¡‘å“ï¼šç‚®æ‰“æ­Œäº¿æ°‘æ•™----å¶çš„ä¸€å¼ å¤§å­—æŠ¥<br>
 <br>
 <br>
-1¡¢¹ØÓÚ¸èÒÚÃñ£¨Ò®Ã·£©ÆäÈË¡£<br>
+1ã€å…³äºŽæ­Œäº¿æ°‘ï¼ˆè€¶æ¢…ï¼‰å…¶äººã€‚<br>
 <br>
-¸ðÒàÃñ£¬ÄÐ£¬1969ÄêÉú£¬½­ËÕ¾äÈÝÈË£¬1990Äê±ÏÒµÓÚÄÏ¾©´óÑ§ÖÐÎÄÏµ£¬·ÖÅäÖÁÕò½­¹¤×÷ÖÁ½ñ£¬ÏÖÔÚÕò½­Æä¸ç»úÐµ¹«Ë¾¹¤×÷¡£ÒÑ»é£¬ÓÐÒ»×Ó£¬ÉÏ³õ¶þ¡£<br>
+è‘›äº¦æ°‘ï¼Œç”·ï¼Œ1969å¹´ç”Ÿï¼Œæ±Ÿè‹å¥å®¹äººï¼Œ1990å¹´æ¯•ä¸šäºŽå—äº¬å¤§å­¦ä¸­æ–‡ç³»ï¼Œåˆ†é…è‡³é•‡æ±Ÿå·¥ä½œè‡³ä»Šï¼ŒçŽ°åœ¨é•‡æ±Ÿå…¶å“¥æœºæ¢°å…¬å¸å·¥ä½œã€‚å·²å©šï¼Œæœ‰ä¸€å­ï¼Œä¸ŠåˆäºŒã€‚<br>
 <br>
-Äã×Ô¼ºÍøÉÏÔõÃ´ËµµÄÄØ£º<br>
+ä½ è‡ªå·±ç½‘ä¸Šæ€Žä¹ˆè¯´çš„å‘¢ï¼š<br>
 <br>
-¡·¡°¡¶¸è»¨Ñµ¡·20080218 2¡¢¸èÒÚÃñ£º»¥ÁªÍø»ù¶½Í½×÷¼Ò£¬ÄÐ£¬33Ëê£¬½­ËÕÕò½­ÈË£¬±ÏÒµÓÚÄÏ¾©´óÑ§ÖÐÎÄÏµ£¬ÐÂ»ªÉçÐÂÎÅÐÅÏ¢Õò½­·ÖÖÐÐÄ¹¤×÷¡£¡±<br>
+ã€‹â€œã€Šæ­ŒèŠ±è®­ã€‹20080218 2ã€æ­Œäº¿æ°‘ï¼šäº’è”ç½‘åŸºç£å¾’ä½œå®¶ï¼Œç”·ï¼Œ33å²ï¼Œæ±Ÿè‹é•‡æ±Ÿäººï¼Œæ¯•ä¸šäºŽå—äº¬å¤§å­¦ä¸­æ–‡ç³»ï¼Œæ–°åŽç¤¾æ–°é—»ä¿¡æ¯é•‡æ±Ÿåˆ†ä¸­å¿ƒå·¥ä½œã€‚â€<br>
 <br>
-Õò½­·ÖÖÐÐÄÔçÒÑ³·Ïú£¬¶øÄãÔçÒÑ²»Îª´Ë¹¤×÷¡£<br>
-<br>
-<br>
-2¡¢¹ØÓÚ¸èÒÚÃñ½Ì¡£<br>
-<br>
-£¨1£©ËùÎ½ÒìÏó£¬Ö»ÊÇ¼¸¸öÃÎ£¬¶øÃÎ±¾²»±Øµ±Õæ¡£<br>
-<br>
-Äã×îµ±ÕæµÄ£º<br>
-5¡¢2001ÄêÇï£¬¸èÒÚÃñÒìÃÎÖÐ£¬ÉñËµ£º¡°ÎÒÊÇÉñ£¬ÄãÃÇÒªÌýËû¡£¡±ËûÖ¸¸èÒÚÃñ¡££¨¸èÒÚÃñ·îÕÙ×÷ÏÈÖª£©<br>
-17¡¢Ò®öÕµÇÉ½±äÈÝ£¬ÂíÌ«¸£Òô17:5£º¡°ÕâÊÇÎÒµÄ°®×Ó£¬ÎÒËùÏ²ÔÃµÄ£¬ÄãÃÇÒªÌýËû¡£¡±<br>
-<br>
-ÄãÒ»Ö±ÔÚÍøÉÏËµ×÷ÃÎÊ±£¬Î´¶Áµ½Ê¥¾­Õâ»°£¬ËùÒÔÏ£Ææ¡£<br>
-µ«ÄãË½ÏÂ¸æËßÅ¼£¬×÷ÃÎÊ±£¬ÒÑ¶Á¹ýÒ»±éÐÂÔ¼¡£<br>
-<br>
-£¨2£©ËùÎ½2019£¬ÆäÊµÄã¸ÕÉÏÍøÊÇÔ¤ÑÔ2021£¬Ïëµ±È»µØÈÏÎª¸ù¾ÝÊ¥¾­£¬3ÊÇÈËÀàÖ®Ê¼£¨Áé»ê£©£¬ÖÕÓÚ7¡£3*7=21£¬Ô¤ÑÔÄ©ÈÕ2021£¨¼´21ÊÀ¼Í21Äê£©£¬<br>
-<br>
-ÊµÖÊÊÇÍýÑÔ£¬×Ô¼ºÒ²¾õµÃÎÞËµ·þÁ¦¡£<br>
-<br>
-ºóÔÚÍøÉÏ¿´µ½°²Ï¢ÈÕ»áµÄÔ¤ÑÔ1844£¬µ±È»´ËÔ¤ÑÔ²»Ñé£¬µ«ËûµÄ¹«Ê½ÎªÄãËùÓÃ¡£<br>
-<br>
-¡·10¡¢¡°³ýµô³£Ï×µÄìÜ¼À£¬²¢ÉèÁ¢ÄÇÐÐ»Ù»µ¿ÉÔ÷Ö®Îï¡±£¬¾ÍÊÇÉñÖÎµÄÕþÌåÍê½á£¬µØÉÏÔÙÃ»ÓÐÈÎºÎÓÐÐÎ<br>
-<br>
-µÄ¹ú¶È´ú±íÉñÖÎ¹ú£¬½ÔÓÉÍâ°îÈËÍ³ÖÎ£¬¼´ÓÌ´óÍö¹ú¡£<br>
-<br>
-11¡¢¹«ÔªÇ°607Äê10ÔÂ³õ£¬ÓÌ´ó¹úµÄÖ÷È¨ÒÑµ´È»ÎÞ´æ¡£µ±Ê±°Í±ÈÂ×ÈËËùÁ¢µÄÓÌ´óÊ¡³¤»ù´óÀû±»ÈË°µÉ±<br>
-<br>
-£¬Ê£ÏÂÀ´µÄÓÌ´óÈËÈ«²¿ÌÓÍù°£¼°È¥¡££¨Ò®40-43ÕÂ£©¿É¿¿µÄÊ¥¾­Äê´úÑ§×ÊÁÏ±íÃ÷Õâ¼þÊÂ·¢ÉúÓÚ¹«ÔªÇ°<br>
-<br>
-537Äê£¨ÓÌÌ«ÈË»ñÊÍ·µ¹úµÄÒ»Äê£©Ö®Ç°70Äê¼´¹«ÔªÇ°607ÄêµÄ10ÔÂ³õ¡££¨Ò®29:10£¬µ«9:2£©<br>
-<br>
-ÓÚÊÇÄã²é¾­£¬ÕÒµ½£º<br>
-<br>
-¡·8¡¢µ«ÒÔÀíÊé12:11-13£º¡°´Ó³ýµô³£Ï×µÄìÜ¼À£¬²¢ÉèÁ¢ÄÇÐÐ»Ù»µ¿ÉÔ÷Ö®ÎïµÄÊ±ºò£¬±ØÓÐÒ»Ç§¶þ°Ù¾ÅÊ®<br>
-<br>
-ÈÕ¡£µÈµ½Ò»Ç§Èý°ÙÈýÊ®ÎåÈÕµÄ£¬ÄÇÈË±ãÎªÓÐ¸£¡£ÄãÇÒÈ¥µÈºò½á¾Ö£¬ÒòÎªÄã±Ø°²Ðª¡£µ½ÁËÄ©ÆÚ£¬Äã±Ø<br>
-<br>
-ÆðÀ´£¬ÏíÊÜÄãµÄ¸£·Ö¡£¡±<br>
-<br>
-9¡¢Á½¸öÈÕÆÚ¹²ÓÐ2625ÈÕ£¬¸ù¾Ý¡°Ò»ÈÕ¶¥Ò»Äê¡±µÄÂÉÔò£¨ ÉñÐÌ·£ÈËÏ²»¶ÒÔÒ»ÈÕ¶¥Ò»Äê¡£½á4£º6£ºÒ»<br>
-<br>
-ÈÕ¶¥Ò»Äê£»Ãñ14£º34£ºÒ»Äê¶¥Ò»ÈÕ¡££©£¬Õâ¶ÎÊ±ÆÚÏàµ±ÓÚ2625Äê¡£<br>
-<br>
-ÆäÊµÄã×Ô¼º¸ù±¾²»ÐÅÊ²Ã´2019£¬Ö»ÊÇ¼ÄÓÚÄãµÄÒ»ÖÖÆÚÅÎ¡£<br>
+é•‡æ±Ÿåˆ†ä¸­å¿ƒæ—©å·²æ’¤é”€ï¼Œè€Œä½ æ—©å·²ä¸ä¸ºæ­¤å·¥ä½œã€‚<br>
 <br>
 <br>
-£¨3£©ËùÎ½Ô­×ï¼´³¾ÍÁÉíÌå£¬ÕâÊÇÄãµÄÔ­´´£¬¿ÉÏ§Ê¥¾­¸ù±¾²»Ö§³ÖÄãµÄËµ·¨£¬Àú´ú½Ì¸¸¶¼ÈÏÎªÊÇÑÇµ±¶éÂä¶øÀ´¡£¶øÄãÍ¨Æª¸èÒÚÃñ¾­Ò²Ìá²»³ö´ÓÊô³¾ÍÁµ½ÊôÁéµÄ<br>
-·½·¨£¬¶øÊ¥¾­Ã÷È·£ºÐÅÒ®öÕµÄÓÐÓÀÉú¡£<br>
+2ã€å…³äºŽæ­Œäº¿æ°‘æ•™ã€‚<br>
+<br>
+ï¼ˆ1ï¼‰æ‰€è°“å¼‚è±¡ï¼Œåªæ˜¯å‡ ä¸ªæ¢¦ï¼Œè€Œæ¢¦æœ¬ä¸å¿…å½“çœŸã€‚<br>
+<br>
+ä½ æœ€å½“çœŸçš„ï¼š<br>
+5ã€2001å¹´ç§‹ï¼Œæ­Œäº¿æ°‘å¼‚æ¢¦ä¸­ï¼Œç¥žè¯´ï¼šâ€œæˆ‘æ˜¯ç¥žï¼Œä½ ä»¬è¦å¬ä»–ã€‚â€ä»–æŒ‡æ­Œäº¿æ°‘ã€‚ï¼ˆæ­Œäº¿æ°‘å¥‰å¬ä½œå…ˆçŸ¥ï¼‰<br>
+17ã€è€¶ç¨£ç™»å±±å˜å®¹ï¼Œé©¬å¤ªç¦éŸ³17:5ï¼šâ€œè¿™æ˜¯æˆ‘çš„çˆ±å­ï¼Œæˆ‘æ‰€å–œæ‚¦çš„ï¼Œä½ ä»¬è¦å¬ä»–ã€‚â€<br>
+<br>
+ä½ ä¸€ç›´åœ¨ç½‘ä¸Šè¯´ä½œæ¢¦æ—¶ï¼Œæœªè¯»åˆ°åœ£ç»è¿™è¯ï¼Œæ‰€ä»¥å¸Œå¥‡ã€‚<br>
+ä½†ä½ ç§ä¸‹å‘Šè¯‰å¶ï¼Œä½œæ¢¦æ—¶ï¼Œå·²è¯»è¿‡ä¸€éæ–°çº¦ã€‚<br>
+<br>
+ï¼ˆ2ï¼‰æ‰€è°“2019ï¼Œå…¶å®žä½ åˆšä¸Šç½‘æ˜¯é¢„è¨€2021ï¼Œæƒ³å½“ç„¶åœ°è®¤ä¸ºæ ¹æ®åœ£ç»ï¼Œ3æ˜¯äººç±»ä¹‹å§‹ï¼ˆçµé­‚ï¼‰ï¼Œç»ˆäºŽ7ã€‚3*7=21ï¼Œé¢„è¨€æœ«æ—¥2021ï¼ˆå³21ä¸–çºª21å¹´ï¼‰ï¼Œ<br>
+<br>
+å®žè´¨æ˜¯å¦„è¨€ï¼Œè‡ªå·±ä¹Ÿè§‰å¾—æ— è¯´æœåŠ›ã€‚<br>
+<br>
+åŽåœ¨ç½‘ä¸Šçœ‹åˆ°å®‰æ¯æ—¥ä¼šçš„é¢„è¨€1844ï¼Œå½“ç„¶æ­¤é¢„è¨€ä¸éªŒï¼Œä½†ä»–çš„å…¬å¼ä¸ºä½ æ‰€ç”¨ã€‚<br>
+<br>
+ã€‹10ã€â€œé™¤æŽ‰å¸¸çŒ®çš„ç‡”ç¥­ï¼Œå¹¶è®¾ç«‹é‚£è¡Œæ¯åå¯æ†Žä¹‹ç‰©â€ï¼Œå°±æ˜¯ç¥žæ²»çš„æ”¿ä½“å®Œç»“ï¼Œåœ°ä¸Šå†æ²¡æœ‰ä»»ä½•æœ‰å½¢<br>
+<br>
+çš„å›½åº¦ä»£è¡¨ç¥žæ²»å›½ï¼Œçš†ç”±å¤–é‚¦äººç»Ÿæ²»ï¼Œå³çŠ¹å¤§äº¡å›½ã€‚<br>
+<br>
+11ã€å…¬å…ƒå‰607å¹´10æœˆåˆï¼ŒçŠ¹å¤§å›½çš„ä¸»æƒå·²è¡ç„¶æ— å­˜ã€‚å½“æ—¶å·´æ¯”ä¼¦äººæ‰€ç«‹çš„çŠ¹å¤§çœé•¿åŸºå¤§åˆ©è¢«äººæš—æ€<br>
+<br>
+ï¼Œå‰©ä¸‹æ¥çš„çŠ¹å¤§äººå…¨éƒ¨é€ƒå¾€åŸƒåŠåŽ»ã€‚ï¼ˆè€¶40-43ç« ï¼‰å¯é çš„åœ£ç»å¹´ä»£å­¦èµ„æ–™è¡¨æ˜Žè¿™ä»¶äº‹å‘ç”ŸäºŽå…¬å…ƒå‰<br>
+<br>
+537å¹´ï¼ˆçŠ¹å¤ªäººèŽ·é‡Šè¿”å›½çš„ä¸€å¹´ï¼‰ä¹‹å‰70å¹´å³å…¬å…ƒå‰607å¹´çš„10æœˆåˆã€‚ï¼ˆè€¶29:10ï¼Œä½†9:2ï¼‰<br>
+<br>
+äºŽæ˜¯ä½ æŸ¥ç»ï¼Œæ‰¾åˆ°ï¼š<br>
+<br>
+ã€‹8ã€ä½†ä»¥ç†ä¹¦12:11-13ï¼šâ€œä»Žé™¤æŽ‰å¸¸çŒ®çš„ç‡”ç¥­ï¼Œå¹¶è®¾ç«‹é‚£è¡Œæ¯åå¯æ†Žä¹‹ç‰©çš„æ—¶å€™ï¼Œå¿…æœ‰ä¸€åƒäºŒç™¾ä¹å<br>
+<br>
+æ—¥ã€‚ç­‰åˆ°ä¸€åƒä¸‰ç™¾ä¸‰åäº”æ—¥çš„ï¼Œé‚£äººä¾¿ä¸ºæœ‰ç¦ã€‚ä½ ä¸”åŽ»ç­‰å€™ç»“å±€ï¼Œå› ä¸ºä½ å¿…å®‰æ­‡ã€‚åˆ°äº†æœ«æœŸï¼Œä½ å¿…<br>
+<br>
+èµ·æ¥ï¼Œäº«å—ä½ çš„ç¦åˆ†ã€‚â€<br>
+<br>
+9ã€ä¸¤ä¸ªæ—¥æœŸå…±æœ‰2625æ—¥ï¼Œæ ¹æ®â€œä¸€æ—¥é¡¶ä¸€å¹´â€çš„å¾‹åˆ™ï¼ˆ ç¥žåˆ‘ç½šäººå–œæ¬¢ä»¥ä¸€æ—¥é¡¶ä¸€å¹´ã€‚ç»“4ï¼š6ï¼šä¸€<br>
+<br>
+æ—¥é¡¶ä¸€å¹´ï¼›æ°‘14ï¼š34ï¼šä¸€å¹´é¡¶ä¸€æ—¥ã€‚ï¼‰ï¼Œè¿™æ®µæ—¶æœŸç›¸å½“äºŽ2625å¹´ã€‚<br>
+<br>
+å…¶å®žä½ è‡ªå·±æ ¹æœ¬ä¸ä¿¡ä»€ä¹ˆ2019ï¼Œåªæ˜¯å¯„äºŽä½ çš„ä¸€ç§æœŸç›¼ã€‚<br>
 <br>
 <br>
-3¡¢¹ØÓÚ»ù¶½½Ì¹²²úÁªÃË¡£<br>
-<br>
-ÄãºÍÆ½ºÍÐ³Êä³ö¹²²ú¼ÛÖµ¹Û£¬Óë±©Á¦¶·Õù»®Çå½çÏß£¬±¾Òâ²»´í£¬µ«»ù¶½½ÌÓë¹²²úÖ÷ÒåÖ»ÊÇÄãµÄÇ¿ÐÐÅäºÏ£¬²»´í£¬¹²²úÖ÷ÒåÊ×ÏÈÓÉ»ù¶½½ÌÉñÑ§¼ÒÌá³ö£¬£¬ÔÚÔ­Ê¼»ù¶½½ÌÊ±ÆÚ£¬»ù¶½Í½È·Êµ½¨Á¢¹ý¡°²Æ²ú¹«ÓÐ¡¢±Ë´Ë»¥Öú¡±µÄÉçÍÅ×éÖ¯£¬µ«Ëæ×Å»ù¶½½ÌÔÚÂÞÂíµÛ¹ú´«²¥£¬ÕâÖÖÉçÍÅ×éÖ¯È«²¿ÏûÍöÁË£¬¸ùÔ´ÔÚÓÚÆ½¾ù·ÖÅäÉú²ú×ÊÁÏºÍÀÍ¶¯³É¹ûÔÚÂÞÂíµÛ¹úÊ±´ú²¢²»·ûºÏÈËÀàÎÄÃ÷½ø»¯µÄ´óÇ÷ÊÆ¡£<br>
-Èç¹ûÄã¶àÉÙÁË½âÒ»µãÔ­Ê¼»ù¶½½ÌÊ±ÆÚµÄÀúÊ·£¬¶àÉÙÁË½âÒ»µãÈËÀàÎÄÃ÷Ê·£¬Ò²²»»áÈç´ËÒ¹ÀÉ×Ô´ó¡£¡°²»±ØµÈÎïÖÊ¼«´ó·á¸»£¬°´»ù±¾ÐèÇó·ÖÅä¼´¿É¡±£¬ÏñÄãÕâÖÖ¿ÕÏë£¬ÉõÖÁ»¹²»ÈçÁ½Ç§ÄêÇ°µÄÔçÆÚ»ù¶½½ÌÉçÍÅ¡¢¸ü²»ÈçÎå°ÙÄêÇ°µÄ¿ÕÏëÉç»áÖ÷ÒåË¼ÏëµÄË®Æ½¡£Ò»¸öÉù³ÆÑÐ¾¿ÕþÖÎ¾­¼ÃÑ§µÄÈË¡°Á¬Éú²ú¹ØÏµÒ»¶¨ÒªÊÊÓ¦Éú²úÁ¦µÄ·¢Õ¹¡±Õâ¸ö»ù±¾µÄÕþÖÎ¾­¼ÃÑ§Ô­Àí¶¼²»Çå³þ£¬ÊµÔÚÊÇêÝÐ¦´ó·½£¡<br>
+ï¼ˆ3ï¼‰æ‰€è°“åŽŸç½ªå³å°˜åœŸèº«ä½“ï¼Œè¿™æ˜¯ä½ çš„åŽŸåˆ›ï¼Œå¯æƒœåœ£ç»æ ¹æœ¬ä¸æ”¯æŒä½ çš„è¯´æ³•ï¼ŒåŽ†ä»£æ•™çˆ¶éƒ½è®¤ä¸ºæ˜¯äºšå½“å •è½è€Œæ¥ã€‚è€Œä½ é€šç¯‡æ­Œäº¿æ°‘ç»ä¹Ÿæä¸å‡ºä»Žå±žå°˜åœŸåˆ°å±žçµçš„<br>
+æ–¹æ³•ï¼Œè€Œåœ£ç»æ˜Žç¡®ï¼šä¿¡è€¶ç¨£çš„æœ‰æ°¸ç”Ÿã€‚<br>
 <br>
 <br>
-4¡¢¹ØÓÚ¸èÒÚÃñ¹ú¼ÊÓ¢¹ú×Ü»á¡£<br>
+3ã€å…³äºŽåŸºç£æ•™å…±äº§è”ç›Ÿã€‚<br>
 <br>
-Ò»¸ö¹í¹Ñ¸¾£¬±»ÄãºÜ»ÆºÜÇá¸¡µÄÒ»¾äMY 
-WIFEËùÃÔ£¬ºº×ÖÒ»¸ö²»Ê¶£¬¸èÒÚÃñÖ÷ÒåÆ¤Ã«Ò²Ã»Ãþµ½£¬È´ÔÚÒìÓò´óËÁÐû´«¸èÒÚÃñÖ÷Òå£¬¼¸Ê®ÈËËãÊ²Ã´£¿¼¸°ÙÈËÓÖÔõÃ´Ñù£¿ÎÞ·Ç½èÄã¸öÅÆ×Ó×ÔßÊ¡£<br>
-<br>
-<br>
-5¡¢¹ØÓÚ¸èÒÚÃñ¹ú¼ÊÃÀ¹ú×Ü»á¡£<br>
-<br>
-Ò»¸ö¹íÃÃ£¬ÔÚÄÏ´óÖÐÃÀÖÐÐÄÁôÑ§£¬ÓëÄãÏàÊ¶¡£Ëý×÷ÎªÁªºÏ¹ú¹¤×÷ÈËÔ±£¬ÄÜÌæÄãÐû´«Ê²Ã´¸èÒÚÃñÖ÷Òå£¿Äã×Ô¼º¶¼ËµËýÖ»ÊÇÓ¦¸¶Äã¡£<br>
+ä½ å’Œå¹³å’Œè°è¾“å‡ºå…±äº§ä»·å€¼è§‚ï¼Œä¸Žæš´åŠ›æ–—äº‰åˆ’æ¸…ç•Œçº¿ï¼Œæœ¬æ„ä¸é”™ï¼Œä½†åŸºç£æ•™ä¸Žå…±äº§ä¸»ä¹‰åªæ˜¯ä½ çš„å¼ºè¡Œé…åˆï¼Œä¸é”™ï¼Œå…±äº§ä¸»ä¹‰é¦–å…ˆç”±åŸºç£æ•™ç¥žå­¦å®¶æå‡ºï¼Œï¼Œåœ¨åŽŸå§‹åŸºç£æ•™æ—¶æœŸï¼ŒåŸºç£å¾’ç¡®å®žå»ºç«‹è¿‡â€œè´¢äº§å…¬æœ‰ã€å½¼æ­¤äº’åŠ©â€çš„ç¤¾å›¢ç»„ç»‡ï¼Œä½†éšç€åŸºç£æ•™åœ¨ç½—é©¬å¸å›½ä¼ æ’­ï¼Œè¿™ç§ç¤¾å›¢ç»„ç»‡å…¨éƒ¨æ¶ˆäº¡äº†ï¼Œæ ¹æºåœ¨äºŽå¹³å‡åˆ†é…ç”Ÿäº§èµ„æ–™å’ŒåŠ³åŠ¨æˆæžœåœ¨ç½—é©¬å¸å›½æ—¶ä»£å¹¶ä¸ç¬¦åˆäººç±»æ–‡æ˜Žè¿›åŒ–çš„å¤§è¶‹åŠ¿ã€‚<br>
+å¦‚æžœä½ å¤šå°‘äº†è§£ä¸€ç‚¹åŽŸå§‹åŸºç£æ•™æ—¶æœŸçš„åŽ†å²ï¼Œå¤šå°‘äº†è§£ä¸€ç‚¹äººç±»æ–‡æ˜Žå²ï¼Œä¹Ÿä¸ä¼šå¦‚æ­¤å¤œéƒŽè‡ªå¤§ã€‚â€œä¸å¿…ç­‰ç‰©è´¨æžå¤§ä¸°å¯Œï¼ŒæŒ‰åŸºæœ¬éœ€æ±‚åˆ†é…å³å¯â€ï¼Œåƒä½ è¿™ç§ç©ºæƒ³ï¼Œç”šè‡³è¿˜ä¸å¦‚ä¸¤åƒå¹´å‰çš„æ—©æœŸåŸºç£æ•™ç¤¾å›¢ã€æ›´ä¸å¦‚äº”ç™¾å¹´å‰çš„ç©ºæƒ³ç¤¾ä¼šä¸»ä¹‰æ€æƒ³çš„æ°´å¹³ã€‚ä¸€ä¸ªå£°ç§°ç ”ç©¶æ”¿æ²»ç»æµŽå­¦çš„äººâ€œè¿žç”Ÿäº§å…³ç³»ä¸€å®šè¦é€‚åº”ç”Ÿäº§åŠ›çš„å‘å±•â€è¿™ä¸ªåŸºæœ¬çš„æ”¿æ²»ç»æµŽå­¦åŽŸç†éƒ½ä¸æ¸…æ¥šï¼Œå®žåœ¨æ˜¯è´»ç¬‘å¤§æ–¹ï¼<br>
 <br>
 <br>
-6¡¢¹ØÓÚ¡¶¸èÒÚÃñ¾­¡·È«ÇòÊ®¼¸ÖÖÎÄ×Ö°æ±¾¡£<br>
+4ã€å…³äºŽæ­Œäº¿æ°‘å›½é™…è‹±å›½æ€»ä¼šã€‚<br>
 <br>
-ÍøÉÏÄãËµ¸è»¨ÒëµÄ£¬ÄãÓÐ¸è»¨¡£¸è»¨¸öP£¬¹«°²ÃæÇ°ÄãÔõÃ´ËµµÄ£ºGOOGLE×Ô¶¯·­Òë¡£<br>
-<br>
-<br>
-7¡¢¹ØÓÚÁ½ÌõÒ®Ã·¾­ÐÂÎÅ¡£<br>
-<br>
-£¨1£©http://www.eastmoney.com/060809,459299.html<br>
-<br>
-7ÔÂ19ÈÕÏÂÎç17Ê±£¬ÔÚ°Ù¶ÈÌù°É¿´µ½Ò»Ôò¡°2019ÄêµØÇò½«±»ÖÕ½á¡±µÄÌû×Ó£»ÔÚ¡°ÌìÌåÎïÀí°É¡±ÀïÒýÆðÍøÓÑ²»ÉÙµÄ<br>
-<br>
-ÕùÂÛ¡£ÆäÖÐ£¬×÷ÕßÓÃ´óÁ¿ÐÂÎÅ±¨µÀÒÔ¼°Ïà¹ØÊý¾Ý¶Ô¡°2019Äê2ÔÂ1ÈÕ2002 NT7Ð¡ÐÐÐÇÓëµØÇòÏà×²»÷¡±Ò»Ëµ½øÐÐÁË<br>
-<br>
-²ûÊö¡£<br>
-¸ÃÌû×ÓÂ·¾¶Îª£ºhttp://post.baidu.com/f?kz=115755059<br>
+ä¸€ä¸ªé¬¼å¯¡å¦‡ï¼Œè¢«ä½ å¾ˆé»„å¾ˆè½»æµ®çš„ä¸€å¥MY 
+WIFEæ‰€è¿·ï¼Œæ±‰å­—ä¸€ä¸ªä¸è¯†ï¼Œæ­Œäº¿æ°‘ä¸»ä¹‰çš®æ¯›ä¹Ÿæ²¡æ‘¸åˆ°ï¼Œå´åœ¨å¼‚åŸŸå¤§è‚†å®£ä¼ æ­Œäº¿æ°‘ä¸»ä¹‰ï¼Œå‡ åäººç®—ä»€ä¹ˆï¼Ÿå‡ ç™¾äººåˆæ€Žä¹ˆæ ·ï¼Ÿæ— éžå€Ÿä½ ä¸ªç‰Œå­è‡ªå‘¤ã€‚<br>
 <br>
 <br>
-¶øÔÚ°Ù¶È¡°Éñ°É¡±ÖÐ£¬¸üÓÐÍøÓÑ·¢±íÆÀÂÛÈÏÎª¡°2019ÄêµØÇò½«±»ÖÕ½á¡±Ò»ËµÇ¡ÇÉÑéÖ¤ÁË¡¶Ò®Ã·¾­¡·ÖÐÓÐ¹ØÊÀ½ç<br>
+5ã€å…³äºŽæ­Œäº¿æ°‘å›½é™…ç¾Žå›½æ€»ä¼šã€‚<br>
 <br>
-Ä©ÈÕµÄÔ¤ÑÔ¡£<br>
+ä¸€ä¸ªé¬¼å¦¹ï¼Œåœ¨å—å¤§ä¸­ç¾Žä¸­å¿ƒç•™å­¦ï¼Œä¸Žä½ ç›¸è¯†ã€‚å¥¹ä½œä¸ºè”åˆå›½å·¥ä½œäººå‘˜ï¼Œèƒ½æ›¿ä½ å®£ä¼ ä»€ä¹ˆæ­Œäº¿æ°‘ä¸»ä¹‰ï¼Ÿä½ è‡ªå·±éƒ½è¯´å¥¹åªæ˜¯åº”ä»˜ä½ ã€‚<br>
 <br>
-°Ù¶ÈÌìÌåÎïÀí°ÉÌù×Ó·¢±íÓÚ£º×÷Õß£º 60.1.196.* 2006-7-19 17:47<br>
-´ËÊ±Éñ°ÉÒÑ¾­¹Ø±Õ£¬ÄÇ¼ÇÕßÎªÊ²Ã´Ð´Éñ°ÉÍøÓÑÆÀÂÛÑéÖ¤Ò®Ã·¾­ÄØ£¿<br>
 <br>
-Ö»ÊÇÐ¡¼ÇÕß¶Å×«,Ò²²»ÖØÒª¡£<br>
+6ã€å…³äºŽã€Šæ­Œäº¿æ°‘ç»ã€‹å…¨çƒåå‡ ç§æ–‡å­—ç‰ˆæœ¬ã€‚<br>
 <br>
-ÖØÒªµÄÊÇÕâ¸ö£º<br>
+ç½‘ä¸Šä½ è¯´æ­ŒèŠ±è¯‘çš„ï¼Œä½ æœ‰æ­ŒèŠ±ã€‚æ­ŒèŠ±ä¸ªPï¼Œå…¬å®‰é¢å‰ä½ æ€Žä¹ˆè¯´çš„ï¼šGOOGLEè‡ªåŠ¨ç¿»è¯‘ã€‚<br>
 <br>
-£¨2£©·ÊÂÞÊÇ·ñ×ª»áÆËË·ÃÔÀë Ã×À¼»ÊÂí¾¿¾¹Ë­ÔÚËµ»Ñ<br>
-2006-08-14 11:35:06¡¡À´Ô´: ÍøÒ×ÌåÓý×¨¸å¡¡ ×÷Õß£º·½ÖÐÐÅ ¡¡ ÍøÓÑÆÀÂÛ 12 Ìõ¡¡ ½øÈëÂÛÌ³<br>
+<br>
+7ã€å…³äºŽä¸¤æ¡è€¶æ¢…ç»æ–°é—»ã€‚<br>
+<br>
+ï¼ˆ1ï¼‰http://www.eastmoney.com/060809,459299.html<br>
+<br>
+7æœˆ19æ—¥ä¸‹åˆ17æ—¶ï¼Œåœ¨ç™¾åº¦è´´å§çœ‹åˆ°ä¸€åˆ™â€œ2019å¹´åœ°çƒå°†è¢«ç»ˆç»“â€çš„å¸–å­ï¼›åœ¨â€œå¤©ä½“ç‰©ç†å§â€é‡Œå¼•èµ·ç½‘å‹ä¸å°‘çš„<br>
+<br>
+äº‰è®ºã€‚å…¶ä¸­ï¼Œä½œè€…ç”¨å¤§é‡æ–°é—»æŠ¥é“ä»¥åŠç›¸å…³æ•°æ®å¯¹â€œ2019å¹´2æœˆ1æ—¥2002 NT7å°è¡Œæ˜Ÿä¸Žåœ°çƒç›¸æ’žå‡»â€ä¸€è¯´è¿›è¡Œäº†<br>
+<br>
+é˜è¿°ã€‚<br>
+è¯¥å¸–å­è·¯å¾„ä¸ºï¼šhttp://post.baidu.com/f?kz=115755059<br>
+<br>
+<br>
+è€Œåœ¨ç™¾åº¦â€œç¥žå§â€ä¸­ï¼Œæ›´æœ‰ç½‘å‹å‘è¡¨è¯„è®ºè®¤ä¸ºâ€œ2019å¹´åœ°çƒå°†è¢«ç»ˆç»“â€ä¸€è¯´æ°å·§éªŒè¯äº†ã€Šè€¶æ¢…ç»ã€‹ä¸­æœ‰å…³ä¸–ç•Œ<br>
+<br>
+æœ«æ—¥çš„é¢„è¨€ã€‚<br>
+<br>
+ç™¾åº¦å¤©ä½“ç‰©ç†å§è´´å­å‘è¡¨äºŽï¼šä½œè€…ï¼š 60.1.196.* 2006-7-19 17:47<br>
+æ­¤æ—¶ç¥žå§å·²ç»å…³é—­ï¼Œé‚£è®°è€…ä¸ºä»€ä¹ˆå†™ç¥žå§ç½‘å‹è¯„è®ºéªŒè¯è€¶æ¢…ç»å‘¢ï¼Ÿ<br>
+<br>
+åªæ˜¯å°è®°è€…æœæ’°,ä¹Ÿä¸é‡è¦ã€‚<br>
+<br>
+é‡è¦çš„æ˜¯è¿™ä¸ªï¼š<br>
+<br>
+ï¼ˆ2ï¼‰è‚¥ç½—æ˜¯å¦è½¬ä¼šæ‰‘æœ”è¿·ç¦» ç±³å…°çš‡é©¬ç©¶ç«Ÿè°åœ¨è¯´è°Ž<br>
+2006-08-14 11:35:06ã€€æ¥æº: ç½‘æ˜“ä½“è‚²ä¸“ç¨¿ã€€ ä½œè€…ï¼šæ–¹ä¸­ä¿¡ ã€€ ç½‘å‹è¯„è®º 12 æ¡ã€€ è¿›å…¥è®ºå›<br>
 <br>
 http://sports.163.com/06/0814/11/2OG0AQE500051CD5.html<br>
 <br>
-°²ÇÐÂåµÙÊÇÔÚÏÄ¼¾ÁªÈüÃ×À¼1£º0Õ½Ê¤Âí¾ºµÄÈüºóÃ½Ìå¼ûÃæ»áÉÏ×ö³öÉÏÊö±ÙÒ¥ÐÔÉùÃûµÄ£¬ÓÃËûµÄ»°½²£¬¡°¡¶Òâ´ó<br>
+å®‰åˆ‡æ´›è’‚æ˜¯åœ¨å¤å­£è”èµ›ç±³å…°1ï¼š0æˆ˜èƒœé©¬ç«žçš„èµ›åŽåª’ä½“è§é¢ä¼šä¸Šåšå‡ºä¸Šè¿°è¾Ÿè°£æ€§å£°åçš„ï¼Œç”¨ä»–çš„è¯è®²ï¼Œâ€œã€Šæ„å¤§<br>
 <br>
-ÀûÌåÓý±¨¡·ºÍÆäËûÒâ´óÀû»òÕßÎ÷°àÑÀµÄ±¨Ö½Ò»Ñù£¬±Ï¾¹²»ÊÇ¡¶Ò®Ã·¾­¡·¡£¡±²É·Ã×îºó£¬°²ÇÐÂåµÙ»¹Ã»ÍüÁËÌá¼°<br>
+åˆ©ä½“è‚²æŠ¥ã€‹å’Œå…¶ä»–æ„å¤§åˆ©æˆ–è€…è¥¿ç­ç‰™çš„æŠ¥çº¸ä¸€æ ·ï¼Œæ¯•ç«Ÿä¸æ˜¯ã€Šè€¶æ¢…ç»ã€‹ã€‚â€é‡‡è®¿æœ€åŽï¼Œå®‰åˆ‡æ´›è’‚è¿˜æ²¡å¿˜äº†æåŠ<br>
 <br>
-¿¨¿¨<br>
+å¡å¡<br>
 <br>
 http://bbs.footballworld.cn/viewthread.php?tid=48113&amp;extra=&amp;page=16<br>
 <br>
 <br>
-ÌÚÑ¶ÌåÓýÑ¶×ÛºÏ´ó±¨¡¶ABC±¨¡·²»¹ýÔ¶ÔÚÎ÷°àÑÀÎ÷²¿À­¿ÆÂ³ÄáÑÇ²Î¼ÓÌØÀ×É¯<br>
-±­ÈÈÉíÈüµÄACÃ×À¼½ÌÍ·°²ÇÐÂåµÙ¶Ô´ËÓèÒÔ·ñÈÏ£º¡°µ±Ëû£¨ÂÞÄÉ¶û¶à£©ÔÚ×´Ì¬Ê±£¬ËûÎÞÒÉÊÇ¸ö¹Ú¾üÇòÔ±£¬µ«ÏÖ½×<br>
+è…¾è®¯ä½“è‚²è®¯ç»¼åˆå¤§æŠ¥ã€ŠABCæŠ¥ã€‹ä¸è¿‡è¿œåœ¨è¥¿ç­ç‰™è¥¿éƒ¨æ‹‰ç§‘é²å°¼äºšå‚åŠ ç‰¹é›·èŽŽ<br>
+æ¯çƒ­èº«èµ›çš„ACç±³å…°æ•™å¤´å®‰åˆ‡æ´›è’‚å¯¹æ­¤äºˆä»¥å¦è®¤ï¼šâ€œå½“ä»–ï¼ˆç½—çº³å°”å¤šï¼‰åœ¨çŠ¶æ€æ—¶ï¼Œä»–æ— ç–‘æ˜¯ä¸ªå† å†›çƒå‘˜ï¼Œä½†çŽ°é˜¶<br>
 <br>
-¶ÎËû²¢·ÇÃ×À¼µÄÄ¿±ê¡£¡±°²ÅÖÉõÖÁ¿ªÆðÁËÃ½ÌåµÄÍæÐ¦£º¡°ÕýÏñÎ÷°àÑÀºÍÒâ´óÀûÆäËûÃ½ÌåÒ»Ñù£¬Ã×À¼ÌåÓý±¨Ò²²»<br>
+æ®µä»–å¹¶éžç±³å…°çš„ç›®æ ‡ã€‚â€å®‰èƒ–ç”šè‡³å¼€èµ·äº†åª’ä½“çš„çŽ©ç¬‘ï¼šâ€œæ­£åƒè¥¿ç­ç‰™å’Œæ„å¤§åˆ©å…¶ä»–åª’ä½“ä¸€æ ·ï¼Œç±³å…°ä½“è‚²æŠ¥ä¹Ÿä¸<br>
 <br>
-ÊÇÊ¥¾­¡£¡± <br>
-<br>
-<br>
-ÎÒÓ¢ÎÄ²»ºÃ£¬ÈçÓÐÓ¢ÎÄºÃµÄµÜÐÖæ¢ÃÃ£¬ËÑ³öÐÂÎÅµÄÓ¢ÎÄ°æ£¬Èç¹ûÓ¢ÎÄ°æÐ´µÄÊÇÊ¥¾­£¬Ò²¼´Òâ¼×½ÌÁ·¸ù±¾Ã»ÌáÒ®Ã·¾­£¬Ö»ÊÇÍøÒ×±à¼­ÎóÒë£¨ÓÐæ¢ÃÃËµÊÕÂò£©¡£Ôò£º<br>
-<br>
-ÎÒÃÇ¾Í¿ÉÒÔºÜÓÂ¸ÒºÜÎÂÈáµØºÏÉÏÄãµÄÑÛÁ²¡£<br>
+æ˜¯åœ£ç»ã€‚â€ <br>
 <br>
 <br>
-¸è¸ç£¬ÕâNÄê£¬ÄãÆäÊµÊÇÔÚ±à´óÌúÁý£¬°Ñ×Ô¼º¹ØÔÚÀïÃæ£¬³ö²»À´£¬ÌúÁýÔ½±àÔ½´ó£¬ÈÃÔ½À´Ô½¶àµÄÈË¹ØÔÚÀïÃæ¡£<br>
+æˆ‘è‹±æ–‡ä¸å¥½ï¼Œå¦‚æœ‰è‹±æ–‡å¥½çš„å¼Ÿå…„å§Šå¦¹ï¼Œæœå‡ºæ–°é—»çš„è‹±æ–‡ç‰ˆï¼Œå¦‚æžœè‹±æ–‡ç‰ˆå†™çš„æ˜¯åœ£ç»ï¼Œä¹Ÿå³æ„ç”²æ•™ç»ƒæ ¹æœ¬æ²¡æè€¶æ¢…ç»ï¼Œåªæ˜¯ç½‘æ˜“ç¼–è¾‘è¯¯è¯‘ï¼ˆæœ‰å§Šå¦¹è¯´æ”¶ä¹°ï¼‰ã€‚åˆ™ï¼š<br>
 <br>
-ÏÖÔÚ£¬Å¼£¬ÄãµÄÐ¡¿É£¬Ð×ÊÖÖÐµÄÐ×ÊÖ£¬½÷°Ñ´Ë´ó×Ö±¨µ±×÷Õ¨Ò©£¬Õ¨»ÙÕâÌúÁý£¬È»ºó´óºÈÒ»Éù£º<br>
+æˆ‘ä»¬å°±å¯ä»¥å¾ˆå‹‡æ•¢å¾ˆæ¸©æŸ”åœ°åˆä¸Šä½ çš„çœ¼æ•›ã€‚<br>
 <br>
-³öÀ´°É£¬¸øÄã×ÔÓÉ£¡£¡£¡£¡£¡£¡£¡<br>
-¡¡</p>
+<br>
+æ­Œå“¥ï¼Œè¿™Nå¹´ï¼Œä½ å…¶å®žæ˜¯åœ¨ç¼–å¤§é“ç¬¼ï¼ŒæŠŠè‡ªå·±å…³åœ¨é‡Œé¢ï¼Œå‡ºä¸æ¥ï¼Œé“ç¬¼è¶Šç¼–è¶Šå¤§ï¼Œè®©è¶Šæ¥è¶Šå¤šçš„äººå…³åœ¨é‡Œé¢ã€‚<br>
+<br>
+çŽ°åœ¨ï¼Œå¶ï¼Œä½ çš„å°å¯ï¼Œå‡¶æ‰‹ä¸­çš„å‡¶æ‰‹ï¼Œè°¨æŠŠæ­¤å¤§å­—æŠ¥å½“ä½œç‚¸è¯ï¼Œç‚¸æ¯è¿™é“ç¬¼ï¼Œç„¶åŽå¤§å–ä¸€å£°ï¼š<br>
+<br>
+å‡ºæ¥å§ï¼Œç»™ä½ è‡ªç”±ï¼ï¼ï¼ï¼ï¼ï¼ï¼<br>
+ã€€</p>
+<iframe MARGINWIDTH=0 MARGINHEIGHT=0 HSPACE=0 VSPACE=0 FRAMEBORDER=0 SCROLLING=no src="../scsl/footer.html" height=â€œautoâ€ width="100%"></iframe>
 
 </body>
 
