--- a/znzc/ymjd.htm
+++ b/znzc/ymjd.htm
@@ -1,8 +1,8 @@
 <html>
 
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=gb2312">
-<title>ÒàÃñ»ù¶½³õÌ½</title>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<title>äº¦æ°‘åŸºç£åˆæŽ¢</title>
 </head>
 
 <body>
@@ -14,43 +14,43 @@
 				<tr>
 					<td class="postcontent" ondblclick="ajaxget('modcp.php?action=editmessage&amp;pid=2408&amp;tid=1009', 'postmessage_2408')">
 					<div class="postmessage defaultpost">
-						<h2>¡°ÒàÃñ»ù¶½¡±³õÌ½</h2>
+						<h2>â€œäº¦æ°‘åŸºç£â€åˆæŽ¢</h2>
 						<div class="t_msgfont" id="postmessage_2408">
 							<span class="t_tag" onclick="tagshow(event)" href="http://bbs.geyimin.com/tag.php?name=%BB%F9%B6%BD">
-							»ù¶½</span>:¦¶¦Ñ¦É¦Ò¦Ó¦Ïs[Ï£À°Óï]Christos£ÛÀ­¶¡Óï£ÝChrist£ÛÓ¢Óï£Ý¡£»ù¶½£¬ÒâË¼ÊÇ¡°ÊÜ¸àÕß¡±¡££¨¹Å´úµÄ<span class="t_tag" onclick="tagshow(event)" href="http://bbs.geyimin.com/tag.php?name=%D2%D4%C9%AB%C1%D0">ÒÔÉ«ÁÐ</span>Íõ¼´Î»Ê±±ØÐë½«ÓÍµ¹ÔÚ¹úÍõµÄÍ·ÉÏ£¬ÏóÕ÷ÕâÊÇÉñ<p>
-							ÓÃÀ´Õü¾ÈÒÔÉ«ÁÐÈËµÄÍõ£¬ºóÀ´×ª±ä³É¾ÈÊÀÖ÷µÄÒâË¼£©£¬Ò²µÈÍ¬ÓÚÏ£²®À´ÓïÖÐµÄÃû´ÊÃÖÈüÑÇ£¬ÒâË¼Îª¡°±»ÉñÑ¡¶¨¡±¡£</p>
+							åŸºç£</span>:Î§ÏÎ¹ÏƒÏ„Î¿s[å¸Œè…Šè¯­]Christosï¼»æ‹‰ä¸è¯­ï¼½Christï¼»è‹±è¯­ï¼½ã€‚åŸºç£ï¼Œæ„æ€æ˜¯â€œå—è†è€…â€ã€‚ï¼ˆå¤ä»£çš„<span class="t_tag" onclick="tagshow(event)" href="http://bbs.geyimin.com/tag.php?name=%D2%D4%C9%AB%C1%D0">ä»¥è‰²åˆ—</span>çŽ‹å³ä½æ—¶å¿…é¡»å°†æ²¹å€’åœ¨å›½çŽ‹çš„å¤´ä¸Šï¼Œè±¡å¾è¿™æ˜¯ç¥ž<p>
+							ç”¨æ¥æ‹¯æ•‘ä»¥è‰²åˆ—äººçš„çŽ‹ï¼ŒåŽæ¥è½¬å˜æˆæ•‘ä¸–ä¸»çš„æ„æ€ï¼‰ï¼Œä¹Ÿç­‰åŒäºŽå¸Œä¼¯æ¥è¯­ä¸­çš„åè¯å¼¥èµ›äºšï¼Œæ„æ€ä¸ºâ€œè¢«ç¥žé€‰å®šâ€ã€‚</p>
 							<p><br>
-							Ï£²®À´<span class="t_tag" onclick="tagshow(event)" href="http://bbs.geyimin.com/tag.php?name=%CA%A5%BE%AD">Ê¥¾­</span>£¨<span class="t_tag" onclick="tagshow(event)" href="http://bbs.geyimin.com/tag.php?name=%BB%F9%B6%BD%BD%CC">»ù¶½½Ì</span>³Æ¾ÉÔ¼£©ÖÐµÄ»ù¶½<br>
-							¸ù¾ÝÏ£²®À´ÈËµÄÐÅÑö´«Í³£¬±»£¨ÆäËûÈËÓÃÓÍ£©¸àÁ¢ÊÇÒ»ÖÖÌØ±ð×Ú½ÌÒÇÊ½£¬ÒâË¼Ö¸±»Ñ¡Á¢µÄÈË£¬ÀýÈç£º¼ÀË¾¡¢¾ýÍõ¼°ÏÈÖªÊÇÉñËùÑ¡¶¨µÄ¡£ÔÚÄ³Ð©³¡ºÏÏÂÒ»Ð©Æ÷¾ßÒ²</p>
+							å¸Œä¼¯æ¥<span class="t_tag" onclick="tagshow(event)" href="http://bbs.geyimin.com/tag.php?name=%CA%A5%BE%AD">åœ£ç»</span>ï¼ˆ<span class="t_tag" onclick="tagshow(event)" href="http://bbs.geyimin.com/tag.php?name=%BB%F9%B6%BD%BD%CC">åŸºç£æ•™</span>ç§°æ—§çº¦ï¼‰ä¸­çš„åŸºç£<br>
+							æ ¹æ®å¸Œä¼¯æ¥äººçš„ä¿¡ä»°ä¼ ç»Ÿï¼Œè¢«ï¼ˆå…¶ä»–äººç”¨æ²¹ï¼‰è†ç«‹æ˜¯ä¸€ç§ç‰¹åˆ«å®—æ•™ä»ªå¼ï¼Œæ„æ€æŒ‡è¢«é€‰ç«‹çš„äººï¼Œä¾‹å¦‚ï¼šç¥­å¸ã€å›çŽ‹åŠå…ˆçŸ¥æ˜¯ç¥žæ‰€é€‰å®šçš„ã€‚åœ¨æŸäº›åœºåˆä¸‹ä¸€äº›å™¨å…·ä¹Ÿ</p>
 							<p>
-							±»ÓÍ¸àÄ¨£¬ÓÃÒÔÔ¤±¸×Ú½ÌÒÇÊ½¡£ÊÜ¸àµÄÖØÒªÐÔ£¬ÊÇÒòÎªÉèÁ¢Ê¥Ö°£¨´ú±í»áÖÚµ½ÉñÃæÇ°Êê×ï£©µÄÐèÒª£¬¶øµÃÒÔÇ¿µ÷¡£ÀýÈç£º¡°ÊÜ¸àµÄ¼ÀË¾ÒªÈ¡Ð©¹«Å£µÄÑª´øµ½»áÄ»</p>
-							<p>¡±£¨ÀûÎ´¼Ç 
-							4:16£©¡£ÓÌÌ«ÈËÆóÅÎÒ»Î»¼¯¼ÀË¾¡¢¾ýÍõºÍÏÈÖªÎªÒ»ÉíµÄ¾ÈÊÀÖ÷£¬Ò²¾ÍÊÇËûÃÇ³ÆÎª¡°ÃÖÈüÑÇ¡±µÄÄÇÒ»Î»¡£ÔÚÄ³ÖÖÇé¿öÏÂ¡°±»¸àÁ¢µÄ¡±ºÍ¡°¾ÈÖ÷¡±¾ßÓÐÍ¬</p>
+							è¢«æ²¹è†æŠ¹ï¼Œç”¨ä»¥é¢„å¤‡å®—æ•™ä»ªå¼ã€‚å—è†çš„é‡è¦æ€§ï¼Œæ˜¯å› ä¸ºè®¾ç«‹åœ£èŒï¼ˆä»£è¡¨ä¼šä¼—åˆ°ç¥žé¢å‰èµŽç½ªï¼‰çš„éœ€è¦ï¼Œè€Œå¾—ä»¥å¼ºè°ƒã€‚ä¾‹å¦‚ï¼šâ€œå—è†çš„ç¥­å¸è¦å–äº›å…¬ç‰›çš„è¡€å¸¦åˆ°ä¼šå¹•</p>
+							<p>â€ï¼ˆåˆ©æœªè®° 
+							4:16ï¼‰ã€‚çŠ¹å¤ªäººä¼ç›¼ä¸€ä½é›†ç¥­å¸ã€å›çŽ‹å’Œå…ˆçŸ¥ä¸ºä¸€èº«çš„æ•‘ä¸–ä¸»ï¼Œä¹Ÿå°±æ˜¯ä»–ä»¬ç§°ä¸ºâ€œå¼¥èµ›äºšâ€çš„é‚£ä¸€ä½ã€‚åœ¨æŸç§æƒ…å†µä¸‹â€œè¢«è†ç«‹çš„â€å’Œâ€œæ•‘ä¸»â€å…·æœ‰åŒ</p>
 							<p>
-							µÈµÄº­Òå¡£´Ó»ù¶½½ÌµÄ½Ç¶ÈÀ´¿´£¬ÓÌÌ«ÈË°ÑÕâÖÖ¶Ô¡°¾ÈÊÀÖ÷¡±µÄÅÎÍûÌØ±ðÊÇµ»¸æ¼ÇÔØÔÚÊ«ÆªÖÐ£¬ÀïÃæ¶à´ÎÌáµ½¡°ËûËù¸àÁ¢µÄ¡±£¬Õâ¾ÍÊÇ¶Ô¡°»ù¶½¡±µÄÔ¤±í¡£</p>
+							ç­‰çš„æ¶µä¹‰ã€‚ä»ŽåŸºç£æ•™çš„è§’åº¦æ¥çœ‹ï¼ŒçŠ¹å¤ªäººæŠŠè¿™ç§å¯¹â€œæ•‘ä¸–ä¸»â€çš„ç›¼æœ›ç‰¹åˆ«æ˜¯ç¥·å‘Šè®°è½½åœ¨è¯—ç¯‡ä¸­ï¼Œé‡Œé¢å¤šæ¬¡æåˆ°â€œä»–æ‰€è†ç«‹çš„â€ï¼Œè¿™å°±æ˜¯å¯¹â€œåŸºç£â€çš„é¢„è¡¨ã€‚</p>
 							<p><br>
-							»ù¶½½ÌÐÂÔ¼ÖÐµÄ»ù¶½<br>
-							ÔÚÐÂÔ¼ÖÐ£¬»ù¶½ÊÇÖ¸µÈºòÒÑ¾Ã¶øÀ´ÁÙµÄ¾ÈÊÀÖ÷£ºËû²¢Î´Êµ¼ÊÊÜÓÍ¸àÁ¢£¬¶øÊÇÆæ¼£°ãµØÒò×ÅÊ¥Áé´ÓÍ¯Å®ÂêÀûÑÇÊÜÔÐ³öÉú¡£ÔÚÊÜÏ´Ê±£¬Ö±½ÓÊÜÌì¸¸¸àÁ¢£¨Â·¼Ó¸£ÒôÊé</p>
+							åŸºç£æ•™æ–°çº¦ä¸­çš„åŸºç£<br>
+							åœ¨æ–°çº¦ä¸­ï¼ŒåŸºç£æ˜¯æŒ‡ç­‰å€™å·²ä¹…è€Œæ¥ä¸´çš„æ•‘ä¸–ä¸»ï¼šä»–å¹¶æœªå®žé™…å—æ²¹è†ç«‹ï¼Œè€Œæ˜¯å¥‡è¿¹èˆ¬åœ°å› ç€åœ£çµä»Žç«¥å¥³çŽ›åˆ©äºšå—å­•å‡ºç”Ÿã€‚åœ¨å—æ´—æ—¶ï¼Œç›´æŽ¥å—å¤©çˆ¶è†ç«‹ï¼ˆè·¯åŠ ç¦éŸ³ä¹¦</p>
 							<p>
-							µÚÈýÕÂµÚ¶þÊ®¶þ½Ú£¬ËäÈ»»ù¶½½ÌÐÂÔ¼ÖÐ´Ë´¦¾­ÎÄ¸ù±¾Ã»ÓÐÌáµ½¹ý¡°¸àÁ¢¡±£¬µ«ÓÐÈËÔ¸Òâ½âÊÍÎª¡°¸àÁ¢¡±£©¡£Ò®öÕ¶à´ÎÖ¤Ã÷¸øËûµÄÃÅÍ½Ëû¾ÍÊÇ»ù¶½£¬²¢ÇÒÔÚËûÊÜÉó</p>
-							<p>Ê±Éù³ÆËû¾ÍÊÇ»ù¶½¡£¶øÔÚ¡¶ÐÂÔ¼¡·ÖÐËûµÄËÀÀï¸´»î£¬Ò²±»ÈÏÎªÖ¤Ã÷ÁËµkÊÇÄÇÔÚ¾ÉÔ¼ÖÐËùÖ¸µÄÊÜ¸àÕß£º»ù¶½¡£</p>
+							ç¬¬ä¸‰ç« ç¬¬äºŒåäºŒèŠ‚ï¼Œè™½ç„¶åŸºç£æ•™æ–°çº¦ä¸­æ­¤å¤„ç»æ–‡æ ¹æœ¬æ²¡æœ‰æåˆ°è¿‡â€œè†ç«‹â€ï¼Œä½†æœ‰äººæ„¿æ„è§£é‡Šä¸ºâ€œè†ç«‹â€ï¼‰ã€‚è€¶ç¨£å¤šæ¬¡è¯æ˜Žç»™ä»–çš„é—¨å¾’ä»–å°±æ˜¯åŸºç£ï¼Œå¹¶ä¸”åœ¨ä»–å—å®¡</p>
+							<p>æ—¶å£°ç§°ä»–å°±æ˜¯åŸºç£ã€‚è€Œåœ¨ã€Šæ–°çº¦ã€‹ä¸­ä»–çš„æ­»é‡Œå¤æ´»ï¼Œä¹Ÿè¢«è®¤ä¸ºè¯æ˜Žäº†ç¥‚æ˜¯é‚£åœ¨æ—§çº¦ä¸­æ‰€æŒ‡çš„å—è†è€…ï¼šåŸºç£ã€‚</p>
 							<p><br>
-							¹ú¶ÈÊ±´ú»ù¶½£­£­ÒàÃñ»ù¶½</p>
-							<p>¡°ÊÜ¸àÕß¡±------¡¶¸èÒÚÃñ¾­¡·ÒìÏñÊé 
-							5¡¢2001ÄêÇï£¬¸èÒÚÃñÒìÃÎÖÐ£¬ÉñËµ£º¡°ÎÒÊÇÉñ£¬ÄãÃÇÒªÌýËû¡£</p>
-							<p>¡±ËûÖ¸¸èÒÚÃñ¡££¨¸èÒÚÃñ·îÕÙ×÷ÏÈÖª£©</p>
+							å›½åº¦æ—¶ä»£åŸºç£ï¼ï¼äº¦æ°‘åŸºç£</p>
+							<p>â€œå—è†è€…â€------ã€Šæ­Œäº¿æ°‘ç»ã€‹å¼‚åƒä¹¦ 
+							5ã€2001å¹´ç§‹ï¼Œæ­Œäº¿æ°‘å¼‚æ¢¦ä¸­ï¼Œç¥žè¯´ï¼šâ€œæˆ‘æ˜¯ç¥žï¼Œä½ ä»¬è¦å¬ä»–ã€‚</p>
+							<p>â€ä»–æŒ‡æ­Œäº¿æ°‘ã€‚ï¼ˆæ­Œäº¿æ°‘å¥‰å¬ä½œå…ˆçŸ¥ï¼‰</p>
 							<p>
-							¡°ÃÖÈüÑÇ¡±¡¢¡°¾ÈÊÀÖ÷¡±-------¡¶¸èÒÚÃñ¾­¡·ÐÐ´«Êé10¡¢2004--08£¬¸èÒÚÃñ¾­£¨Ò®Ã·¾­£©³õ¸åÐ´³É·¢</p>
-							<p>²¼ÍøÂç£¬Ö®ºó¸è»¨Ñµ£¨Ã·»¨Ñµ£©¡¢¸èÒÚÃñ¼ÛÖµ¹ÛÐûÑÔÐ´³É³õ¸å·¢²¼¡£¾­¡¢Ñµ¡¢Ðû²»¶Ï¸üÐÂ·¢²¼¡£ 11¡¢</p>
-							<p>2005--08£¬´´Á¢¸èÒÚÃñ¼ÛÖµ¹Û,Ã÷È·×÷ÎªÒ»ÖÖ¼ÛÖµ¹Û£¬¶ø²»ÊÇÒ»ÖÖ×éÖ¯¡£ 
-							12¡¢2008--19£¬ºÍÆ½µØÊä³öºÍ</p>
-							<p>Ð³µÄ¸èÒÚÃñ¹²²ú¼ÛÖµ¹Û£¬ÄÚÈÝ¼´Îª¾­ÑµÐû¡£ 13¡¢2019£¬È«ÇòÊµÏÖ¹²²úÉç»á¡£ </p>
+							â€œå¼¥èµ›äºšâ€ã€â€œæ•‘ä¸–ä¸»â€-------ã€Šæ­Œäº¿æ°‘ç»ã€‹è¡Œä¼ ä¹¦10ã€2004--08ï¼Œæ­Œäº¿æ°‘ç»ï¼ˆè€¶æ¢…ç»ï¼‰åˆç¨¿å†™æˆå‘</p>
+							<p>å¸ƒç½‘ç»œï¼Œä¹‹åŽæ­ŒèŠ±è®­ï¼ˆæ¢…èŠ±è®­ï¼‰ã€æ­Œäº¿æ°‘ä»·å€¼è§‚å®£è¨€å†™æˆåˆç¨¿å‘å¸ƒã€‚ç»ã€è®­ã€å®£ä¸æ–­æ›´æ–°å‘å¸ƒã€‚ 11ã€</p>
+							<p>2005--08ï¼Œåˆ›ç«‹æ­Œäº¿æ°‘ä»·å€¼è§‚,æ˜Žç¡®ä½œä¸ºä¸€ç§ä»·å€¼è§‚ï¼Œè€Œä¸æ˜¯ä¸€ç§ç»„ç»‡ã€‚ 
+							12ã€2008--19ï¼Œå’Œå¹³åœ°è¾“å‡ºå’Œ</p>
+							<p>è°çš„æ­Œäº¿æ°‘å…±äº§ä»·å€¼è§‚ï¼Œå†…å®¹å³ä¸ºç»è®­å®£ã€‚ 13ã€2019ï¼Œå…¨çƒå®žçŽ°å…±äº§ç¤¾ä¼šã€‚ </p>
 							<p><br>
-							Â·¼Ó¸£Òô17£º24ÒòÎªÈË×ÓÔÚËû½µÁÙµÄÈÕ×Ó¡£¡£¡£¡£<br>
-							25Ö»ÊÇËû±ØÐëÏÈÊÜÐí¶à¿à£¬ÓÖ±»ÕâÊÀ´úÆú¾ø¡£</p>
-							<p>&nbsp;</p>
-							<p>&quot;ÒàÃñ»ù¶½&quot;---------»ù¶½ÒàÊÇÈËÃñ¡£<br>
-¡¡</div>
+							è·¯åŠ ç¦éŸ³17ï¼š24å› ä¸ºäººå­åœ¨ä»–é™ä¸´çš„æ—¥å­ã€‚ã€‚ã€‚ã€‚<br>
+							25åªæ˜¯ä»–å¿…é¡»å…ˆå—è®¸å¤šè‹¦ï¼Œåˆè¢«è¿™ä¸–ä»£å¼ƒç»ã€‚</p>
+							<p>ã€€</p>
+							<p>&quot;äº¦æ°‘åŸºç£&quot;---------åŸºç£äº¦æ˜¯äººæ°‘ã€‚<br>
+ã€€</div>
 <SCRIPT src="http://bbs.geyimin.com/tag.php?action=relatetag&rtid=1009" 
 type=text/javascript></SCRIPT>
 					</div>
@@ -60,6 +60,7 @@ type=text/javascript></SCRIPT>
 		</div>
 	</form>
 </div>
+<iframe MARGINWIDTH=0 MARGINHEIGHT=0 HSPACE=0 VSPACE=0 FRAMEBORDER=0 SCROLLING=no src="../scsl/footer.html" height=â€œautoâ€ width="100%"></iframe>
 
 </body>
 
