--- a/lj.html
+++ b/lj.html
@@ -3,26 +3,23 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <title>神教网址导航</title>
-<style>
-<!--
-P {
-	FONT-SIZE: 12px; LINE-HEIGHT: 130%
-}
--->
-</style>
+
 </head>
 
 <body>
      
     <br> 
   <p><font size="4">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;
-	<b>&nbsp;</b></font><b><font size="6">神教所有网站</font></b><p><br><br>
+	<b>&nbsp;</b></font><b><font size="5">神教所有网站</font></b><p><br><br>
 	
 
-	<font color="#800000"><b><font size="4">航空母舰（神教官网）：&nbsp;</font></b></font><font size="4">&nbsp;<b><a target="_blank"href="http://www.gegod.com">神网</a>&nbsp;&nbsp;&nbsp; &nbsp; &nbsp; <a target="_blank" href="http://www.gegod.com/bbs">神社区</a>&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; 
-	<a target="_blank" href="http://www.gegod.com/club">神论坛</a>&nbsp;&nbsp;&nbsp; &nbsp; 
-
-	<a target="_blank" href="http://www.20331126.xyz">紫薇圣人网</a>&nbsp;&nbsp;&nbsp; &nbsp; <a target="_blank" href="http://www.20331126.xyz/bbs">紫薇圣人社区</a></b> </font>
+<font color="#800000">	<b><font size="4">航空母舰：&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</font></b></font><font size="4">&nbsp;<a target="_blank"href="http://www.gegod.com">神网</a>&nbsp;&nbsp;&nbsp; &nbsp; &nbsp; <b><a target="_blank" href="http://www.gegod.com/bbs">神社区</a></b>&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; 
+	<b><a target="_blank" href="http://www.gegod.com/club">神论坛</a></b>&nbsp;&nbsp;&nbsp; &nbsp; 
+&nbsp; <a href="http://www.kaila.com.cn" target="_blank"><font size="4">
+开啦（凯拉）</font></a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+	<a target="_blank" href="http://www.20331126.xyz">紫薇圣人网</a>&nbsp;&nbsp;&nbsp; &nbsp; <b><a target="_blank" href="http://www.20331126.xyz/bbs">紫薇圣人社区</a>
+	&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; 
+	</b> </font>
 <p>
 	<font size="4">
 	<b>
@@ -33,10 +30,11 @@ P {
 
 	</font> </font><font size="4" color="#800000">&nbsp;&nbsp;
 	
-	<a target="_blank" href="http://club.gegod.com/bbs">神论坛</a>&nbsp; &nbsp; <a target="_blank" href="http://bbs.gegod.com">神博客</a>&nbsp; &nbsp;<a target="_blank" href="http://www.gegod.net/bbs">紫微圣人社区</a> &nbsp;
+	<a target="_blank" href="http://club.gegod.com/bbs">神论坛</a>&nbsp; &nbsp; <a target="_blank" href="http://bbs.gegod.com">神博客</a>&nbsp; &nbsp;<a target="_blank" href="http://www.gegod.top/bbs">大同世界社区</a> &nbsp; &nbsp;
 	<a target="_blank" href="https://geyimin.longluntan.com/">龙论坛</a>&nbsp; &nbsp;
 <a target="_blank" href="https://www.linkedin.com/in/%E4%BA%A6%E6%B0%91-%E8%91%9B-b109701b5/detail/recent-activity/">领英</a>&nbsp; &nbsp;
-	
+	&nbsp;&nbsp;&nbsp;
+	<b>  <a target="_blank" href="http://www.gegod.com/book/contact_book.php">留言本</a></b>
 
 
 	</font>
@@ -44,7 +42,8 @@ P {
 	<span lang="en-us">
 	<font size="4">
 	&nbsp;&nbsp;<br><br><p> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;<font size="4">
-	<a target="_blank" href="http://geyimin.blogchina.com/">博客中国</a>&nbsp;&nbsp;&nbsp;<a target="_blank" href="https://www.zhihu.com/people/de-yang-li-juan">知乎</a>&nbsp; &nbsp;
+	<br><font color="#800000"><strong>驱逐舰</strong>：&nbsp;&nbsp; &nbsp; &nbsp; </font> 
+		<a target="_blank" href="http://geyimin.blogchina.com/">博客中国</a>&nbsp;&nbsp;&nbsp;<a target="_blank" href="https://www.zhihu.com/people/de-yang-li-juan">知乎</a>&nbsp; &nbsp;
 	
  <a target="_blank" href="http://blog.sina.com.cn/geyimincom">新浪博客</a>&nbsp;&nbsp;
 	
@@ -52,39 +51,39 @@ P {
 
 <a target="_blank" href="https://www.jianshu.com/u/e7788c00e1b4">简书</a>&nbsp; &nbsp; 
 
- <a target="_blank" href="http://cn.20331126.xyz/">投票留言</a>&nbsp; &nbsp;
+ <a target="_blank" href="http://cn.20331126.xyz/">投票</a>&nbsp; &nbsp;
 
 
 	
 <br>&nbsp;&nbsp; <br>&nbsp;<br>
-	<b>&nbsp;</font><font size="5">&nbsp;&nbsp;&nbsp;&nbsp; 微信公众号：godjiao（</font><font size="4">葛亦民</font><font size="5">）&nbsp;geyimin1969（</font><font size="4">神教</font><font size="5">）</font><font size="4"><font size="5">&nbsp;&nbsp;微视号： geyimin&nbsp;&nbsp; </font><br>
+	<b>&nbsp;</font><font size="4">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 微信公众号：godjiao（</font><font size="3">葛亦民</font><font size="4">）&nbsp;geyimin1969（</font><font size="3">神教）</font><font size="4">&nbsp;&nbsp;微视号： geyimin&nbsp;&nbsp; </font><br>
 	<p>
 <br>
-	 <br><font color="#800000">驱逐舰：&nbsp;&nbsp;&nbsp; &nbsp; &nbsp; </font> 
-
+	 <br><font color="#800000">护卫舰：&nbsp;&nbsp; &nbsp; &nbsp; </font> </b>
 	
 	&nbsp;<font size="4"><a target="_blank" href="http://my.gegod.com/bbs">大同世界社区</a>&nbsp; &nbsp;<a target="_blank" href="http://god.gegod.com/bbs">god社区</a>&nbsp;&nbsp;&nbsp;
 
-<a target="_blank" href="http://bbs.20331126.xyz/bbs">美国社区</a>&nbsp; &nbsp; 
-	   <a target="_blank" href="http://hao.20331126.xyz/bbs">美国论坛</a>&nbsp;&nbsp;&nbsp;
+
+    <a target="_blank" href="http://hao.20331126.xyz/bbs">美国论坛</a>&nbsp;&nbsp;&nbsp;
  
 	  <a target="_blank" href="http://cn.gegod.com/bbs">日本论坛</a>&nbsp;&nbsp;&nbsp;
-
-
+<a target="_blank" href="http://group.20331126.xyz/bbs">大同世界社区</a> &nbsp; &nbsp;
+<a target="_blank" href="http://geyimin.byethost15.com/bbs">紫微圣人社区</a>
+	&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; 
 
 		
 	<br><br><br>
 
 	
 
-	<font color="#800000"> 护卫舰：</font>&nbsp;&nbsp; &nbsp;
+	<b><font color="#800000"> 补给舰：</font></b>&nbsp;&nbsp; &nbsp;
 
 
 	<a target="_blank"href="http://group.gegod.com">德国论坛</a>&nbsp; &nbsp; 
 	
- <a target="_blank" href="http://geyimin.258club.com/">Sclub论坛</a>&nbsp;&nbsp;&nbsp; <a target="_blank" href="https://shenjiao1969.wordpress.com/">WP博客</a>&nbsp; &nbsp; <a target="_blank"href="http://geyimin.forumzh.com/">葛亦民论坛</a>&nbsp; &nbsp;
+ <a target="_blank" href="http://geyimin.258club.com/">Sclub论坛</a>&nbsp;&nbsp;&nbsp;  <a target="_blank"href="http://geyimin.forumzh.com/">葛亦民论坛</a>&nbsp; &nbsp;
   <a target="_blank"href="https://60a0ff933604a.site123.me/">神社区</a>&nbsp; &nbsp;
- <a target="_blank" href="http://t.gegod.com">github博客</a>
+ <a target="_blank" href="http://t.gegod.com">github博客</a>&nbsp; &nbsp;&nbsp;<a target="_blank"href="http://web.gegod.com">神网</a>
 <br><br><br>
 
 		
